merging main (#1)
* Use MongoDB 4.4 consistently

* Fix handling of HTTP/2 H2 empty frames in Resteasy Reactive

Closes #36604

* Bump com.google.api.grpc:proto-google-common-protos

Bumps [com.google.api.grpc:proto-google-common-protos](https://github.com/googleapis/sdk-platform-java) from 2.23.0 to 2.27.0.
- [Release notes](https://github.com/googleapis/sdk-platform-java/releases)
- [Changelog](https://github.com/googleapis/sdk-platform-java/blob/main/CHANGELOG.md)
- [Commits](https://github.com/googleapis/sdk-platform-java/compare/v2.23.0...v2.27.0)

---
updated-dependencies:
- dependency-name: com.google.api.grpc:proto-google-common-protos
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Add a custom OIDC identity provider test

* Updates Liquibase integrationtest to reproduce error: https://github.com/quarkusio/quarkus/issues/36446

* Fix zlib broken link

* Reverts changes made to workaround liquibase issue: https://github.com/liquibase/liquibase/issues/4763 since we've updated to liquibase 4.24.0

* Fix version reporting and parsing

Quarkus currently only parses the feature and update version of JDK and
incorrectly prints message like:

```
[INFO] [io.quarkus.deployment.pkg.steps.NativeImageBuildStep] Running Quarkus native-image plugin on MANDREL 22.3.3.1 JDK 17.8
```

while it should be

```
[INFO] [io.quarkus.deployment.pkg.steps.NativeImageBuildStep] Running Quarkus native-image plugin on MANDREL 22.3.3.1 JDK 17.0.8
```

i.e. 17.0.8 vs 17.8

This change fixes that issue and relies on java.lang.Runtime.Version for
parsing and comparing the JDK version.

Follow up to https://github.com/quarkusio/quarkus/pull/36267

* Make sure OIDC/GraphQL client integration runs after client config is initialized, get rid of config merger bean

* Fix termination of the fallback virtual thread executor

* Stork observability int