@@ -11,8 +11,11 @@ import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 
 import org.jboss.logging.Logger;
@@ -25,12 +28,15 @@ import io.quarkus.bootstrap.app.StartupAction;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.builder.BuildResult;
 import io.quarkus.deployment.builditem.ApplicationClassNameBuildItem;
+import io.quarkus.deployment.builditem.DevServicesLauncherConfigResultBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.GeneratedResourceBuildItem;
 import io.quarkus.deployment.builditem.MainClassBuildItem;
+import io.quarkus.deployment.builditem.RuntimeApplicationShutdownBuildItem;
 import io.quarkus.deployment.builditem.TransformedClassesBuildItem;
 import io.quarkus.deployment.configuration.RunTimeConfigurationGenerator;
 import io.quarkus.dev.appstate.ApplicationStateNotification;
+import io.quarkus.runtime.ApplicationLifecycleManager;
 import io.quarkus.runtime.Quarkus;
 import io.quarkus.runtime.configuration.RuntimeOverrideConfigSource;
 
@@ -39,27 +45,36 @@ public class StartupActionImpl implements StartupAction {
     private static final Logger log = Logger.getLogger(StartupActionImpl.class);
 
     private final CuratedApplication curatedApplication;
-    private final BuildResult buildResult;
     private final QuarkusClassLoader runtimeClassLoader;
+
+    private final String mainClassName;
+    private final String applicationClassName;
+    private final Map<String, String> devServicesProperties;
+    private final List<RuntimeApplicationShutdownBuildItem> runtimeApplicationShutdownBuildItems;
 
     public StartupActionImpl(CuratedApplication curatedApplication, BuildResult buildResult) {
         this.curatedApplication = curatedApplication;
-        this.buildResult = buildResult;
+
+        this.mainClassName = buildResult.consume(MainClassBuildItem.class).getClassName();
+        this.applicationClassName = buildResult.consume(ApplicationClassNameBuildItem.class).getClassName();
+        this.devServicesProperties = extractDevServicesProperties(buildResult);
+        this.runtimeApplicationShutdownBuildItems = buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class);
+
         Set<String> eagerClasses = new HashSet<>();
-        Map<String, byte[]> transformedClasses = extractTransformers(eagerClasses);
+        Map<String, byte[]> transformedClasses = extractTransformers(buildResult, eagerClasses);
         QuarkusClassLoader baseClassLoader = curatedApplication.getBaseRuntimeClassLoader();
         QuarkusClassLoader runtimeClassLoader;
 
         //so we have some differences between dev and test mode here.
         //test mode only has a single class loader, while dev uses a disposable runtime class loader
         //that is discarded between restarts
-        Map<String, byte[]> resources = new HashMap<>(extractGeneratedResources(true));
-        if (curatedApplication.getQuarkusBootstrap().isFlatClassPath()) {
-            resources.putAll(extractGeneratedResources(false));
+        Map<String, byte[]> resources = new HashMap<>(extractGeneratedResources(buildResult, true));
+        if (curatedApplication.isFlatClassPath()) {
+            resources.putAll(extractGeneratedResources(buildResult, false));
             baseClassLoader.reset(resources, transformedClasses);
             runtimeClassLoader = baseClassLoader;
         } else {
-            baseClassLoader.reset(extractGeneratedResources(false),
+            baseClassLoader.reset(extractGeneratedResources(buildResult, false),
                     transformedClasses);
             runtimeClassLoader = curatedApplication.createRuntimeClassLoader(
                     resources, transformedClasses);
@@ -85,7 +100,7 @@ public class StartupActionImpl implements StartupAction {
         //we have our class loaders
         ClassLoader old = Thread.currentThread().getContextClassLoader();
         Thread.currentThread().setContextClassLoader(runtimeClassLoader);
-        final String className = buildResult.consume(MainClassBuildItem.class).getClassName();
+        final String className = mainClassName;
         try {
             // force init here
             Class<?> appClass = Class.forName(className, true, runtimeClassLoader);
@@ -102,6 +117,14 @@ public class StartupActionImpl implements StartupAction {
                         if (ApplicationStateNotification.getState() == ApplicationStateNotification.State.INITIAL) {
                             ApplicationStateNotification.notifyStartupFailed(e);
                         }
+                    } finally {
+                        for (var i : runtimeApplicationShutdownBuildItems) {
+                            try {
+                                i.getCloseTask().run();
+                            } catch (Throwable t) {
+                                log.error("Failed to run close task", t);
+                            }
+                        }
                     }
                 }
             }, "Quarkus Main Thread");
@@ -110,18 +133,22 @@ public class StartupActionImpl implements StartupAction {
             return new RunningQuarkusApplicationImpl(new Closeable() {
                 @Override
                 public void close() throws IOException {
-                    try {
-                        runtimeClassLoader.loadClass(Quarkus.class.getName()).getMethod("blockingExit").invoke(null);
-                    } catch (InvocationTargetException | NoSuchMethodException | IllegalAccessException
-                            | ClassNotFoundException e) {
-                        log.error("Failed to stop Quarkus", e);
-                    } finally {
-                        ForkJoinClassLoading.setForkJoinClassLoader(ClassLoader.getSystemClassLoader());
-                        if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST) {
-                            //for tests we just always shut down the curated application, as it is only used once
-                            //dev mode might be about to restart, so we leave it
-                            curatedApplication.close();
+                    if (Quarkus.isMainThread(Thread.currentThread())) {
+                        CountDownLatch latch = new CountDownLatch(1);
+                        new Thread(new Runnable() {
+                            @Override
+                            public void run() {
+                                doClose();
+                                latch.countDown();
+                            }
+                        }).start();
+                        try {
+                            latch.await();
+                        } catch (InterruptedException e) {
+                            throw new IOException(e);
                         }
+                    } else {
+                        doClose();
                     }
                 }
             }, runtimeClassLoader);
@@ -130,7 +157,7 @@ public class StartupActionImpl implements StartupAction {
             try {
                 final Class<?> configClass = Class.forName(RunTimeConfigurationGenerator.CONFIG_CLASS_NAME, true,
                         runtimeClassLoader);
-                configClass.getDeclaredMethod(RunTimeConfigurationGenerator.C_CREATE_BOOTSTRAP_CONFIG.getName())
+                configClass.getDeclaredMethod(RunTimeConfigurationGenerator.C_CREATE_RUN_TIME_CONFIG.getName())
                         .invoke(null);
             } catch (Throwable t2) {
                 t.addSuppressed(t2);
@@ -139,7 +166,84 @@ public class StartupActionImpl implements StartupAction {
         } finally {
             Thread.currentThread().setContextClassLoader(old);
         }
+    }
 
+    private void doClose() {
+        try {
+            runtimeClassLoader.loadClass(Quarkus.class.getName()).getMethod("blockingExit").invoke(null);
+        } catch (InvocationTargetException | NoSuchMethodException | IllegalAccessException
+                | ClassNotFoundException e) {
+            log.error("Failed to stop Quarkus", e);
+        } finally {
+            ForkJoinClassLoading.setForkJoinClassLoader(ClassLoader.getSystemClassLoader());
+            if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST) {
+                //for tests, we just always shut down the curated application, as it is only used once
+                //dev mode might be about to restart, so we leave it
+                curatedApplication.close();
+            }
+        }
+    }
+
+    @Override
+    public int runMainClassBlocking(String... args) throws Exception {
+        //first we hack around class loading in the fork join pool
+        ForkJoinClassLoading.setForkJoinClassLoader(runtimeClassLoader);
+
+        //we have our class loaders
+        ClassLoader old = Thread.currentThread().getContextClassLoader();
+        Thread.currentThread().setContextClassLoader(runtimeClassLoader);
+        final String className = mainClassName;
+        try {
+            AtomicInteger result = new AtomicInteger();
+            Class<?> lifecycleManager = Class.forName(ApplicationLifecycleManager.class.getName(), true, runtimeClassLoader);
+            Method getCurrentApplication = lifecycleManager.getDeclaredMethod("getCurrentApplication");
+            Object oldApplication = getCurrentApplication.invoke(null);
+            lifecycleManager.getDeclaredMethod("setDefaultExitCodeHandler", Consumer.class).invoke(null,
+                    new Consumer<Integer>() {
+                        @Override
+                        public void accept(Integer integer) {
+                            result.set(integer);
+                        }
+                    });
+            // force init here
+            Class<?> appClass = Class.forName(className, true, runtimeClassLoader);
+            Method start = appClass.getMethod("main", String[].class);
+            start.invoke(null, (Object) (args == null ? new String[0] : args));
+
+            CountDownLatch latch = new CountDownLatch(1);
+            new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    try {
+                        Class<?> q = Class.forName(Quarkus.class.getName(), true, runtimeClassLoader);
+                        q.getMethod("blockingExit").invoke(null);
+                    } catch (Exception e) {
+                        throw new RuntimeException(e);
+                    } finally {
+                        latch.countDown();
+                    }
+                }
+            }).start();
+            latch.await();
+
+            Object newApplication = getCurrentApplication.invoke(null);
+            if (oldApplication == newApplication) {
+                //quarkus was not actually started by the main method
+                //just return
+                return 0;
+            }
+            return result.get();
+        } finally {
+            runtimeClassLoader.close();
+            Thread.currentThread().setContextClassLoader(old);
+            for (var i : runtimeApplicationShutdownBuildItems) {
+                try {
+                    i.getCloseTask().run();
+                } catch (Throwable t) {
+                    log.error("Failed to run close task", t);
+                }
+            }
+        }
     }
 
     @Override
@@ -151,14 +255,14 @@ public class StartupActionImpl implements StartupAction {
      * Runs the application, and returns a handle that can be used to shut it down.
      */
     public RunningQuarkusApplication run(String... args) throws Exception {
-        //first
+        //first we hack around class loading in the fork join pool
         ForkJoinClassLoading.setForkJoinClassLoader(runtimeClassLoader);
 
         //we have our class loaders
         ClassLoader old = Thread.currentThread().getContextClassLoader();
         try {
             Thread.currentThread().setContextClassLoader(runtimeClassLoader);
-            final String className = buildResult.consume(ApplicationClassNameBuildItem.class).getClassName();
+            final String className = applicationClassName;
             Class<?> appClass;
             try {
                 // force init here
@@ -168,7 +272,7 @@ public class StartupActionImpl implements StartupAction {
                 try {
                     final Class<?> configClass = Class.forName(RunTimeConfigurationGenerator.CONFIG_CLASS_NAME, true,
                             runtimeClassLoader);
-                    configClass.getDeclaredMethod(RunTimeConfigurationGenerator.C_CREATE_BOOTSTRAP_CONFIG.getName())
+                    configClass.getDeclaredMethod(RunTimeConfigurationGenerator.C_CREATE_RUN_TIME_CONFIG.getName())
                             .invoke(null);
                 } catch (Throwable t2) {
                     t.addSuppressed(t2);
@@ -177,7 +281,7 @@ public class StartupActionImpl implements StartupAction {
             }
 
             Method start = appClass.getMethod("start", String[].class);
-            Object application = appClass.newInstance();
+            Object application = appClass.getDeclaredConstructor().newInstance();
             start.invoke(application, (Object) args);
             Closeable closeTask = (Closeable) application;
             return new RunningQuarkusApplicationImpl(new Closeable() {
@@ -196,9 +300,17 @@ public class StartupActionImpl implements StartupAction {
                         }
                     } finally {
                         ForkJoinClassLoading.setForkJoinClassLoader(ClassLoader.getSystemClassLoader());
+
+                        for (var i : runtimeApplicationShutdownBuildItems) {
+                            try {
+                                i.getCloseTask().run();
+                            } catch (Throwable t) {
+                                log.error("Failed to run close task", t);
+                            }
+                        }
                         if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST &&
                                 !curatedApplication.getQuarkusBootstrap().isAuxiliaryApplication()) {
-                            //for tests we just always shut down the curated application, as it is only used once
+                            //for tests, we just always shut down the curated application, as it is only used once
                             //dev mode might be about to restart, so we leave it
                             curatedApplication.close();
                         }
@@ -221,21 +333,37 @@ public class StartupActionImpl implements StartupAction {
         return runtimeClassLoader;
     }
 
-    private Map<String, byte[]> extractTransformers(Set<String> eagerClasses) {
+    @Override
+    public Map<String, String> getDevServicesProperties() {
+        return devServicesProperties;
+    }
+
+    private static Map<String, String> extractDevServicesProperties(BuildResult buildResult) {
+        DevServicesLauncherConfigResultBuildItem result = buildResult
+                .consumeOptional(DevServicesLauncherConfigResultBuildItem.class);
+        if (result == null) {
+            return Map.of();
+        }
+        return new HashMap<>(result.getConfig());
+    }
+
+    private static Map<String, byte[]> extractTransformers(BuildResult buildResult, Set<String> eagerClasses) {
         Map<String, byte[]> ret = new HashMap<>();
         TransformedClassesBuildItem transformers = buildResult.consume(TransformedClassesBuildItem.class);
         for (Set<TransformedClassesBuildItem.TransformedClass> i : transformers.getTransformedClassesByJar().values()) {
             for (TransformedClassesBuildItem.TransformedClass clazz : i) {
-                ret.put(clazz.getFileName(), clazz.getData());
-                if (clazz.isEager()) {
-                    eagerClasses.add(clazz.getClassName());
+                if (clazz.getData() != null) {
+                    ret.put(clazz.getFileName(), clazz.getData());
+                    if (clazz.isEager()) {
+                        eagerClasses.add(clazz.getClassName());
+                    }
                 }
             }
         }
         return ret;
     }
 
-    private Map<String, byte[]> extractGeneratedResources(boolean applicationClasses) {
+    private static Map<String, byte[]> extractGeneratedResources(BuildResult buildResult, boolean applicationClasses) {
         Map<String, byte[]> data = new HashMap<>();
         for (GeneratedClassBuildItem i : buildResult.consumeMulti(GeneratedClassBuildItem.class)) {
             if (i.isApplicationClass() == applicationClasses) {
@@ -281,7 +409,10 @@ public class StartupActionImpl implements StartupAction {
         }
         if (applicationClasses) {
             for (GeneratedResourceBuildItem i : buildResult.consumeMulti(GeneratedResourceBuildItem.class)) {
-                data.put(i.getName(), i.getClassData());
+                if (i.isExcludeFromDevCL()) {
+                    continue;
+                }
+                data.put(i.getName(), i.getData());
             }
         }
         return data;
