@@ -2,15 +2,11 @@ package io.quarkus.arc.deployment;
 
 import static io.quarkus.runtime.annotations.ConfigPhase.BUILD_TIME;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
-import io.quarkus.arc.config.ConfigProperties;
 import io.quarkus.deployment.index.IndexDependencyConfig;
 import io.quarkus.runtime.annotations.ConfigDocMapKey;
 import io.quarkus.runtime.annotations.ConfigDocSection;
@@ -20,8 +16,8 @@ import io.quarkus.runtime.annotations.ConfigRoot;
 @ConfigRoot(phase = BUILD_TIME)
 public class ArcConfig {
 
-    public static final Set<String> ALLOWED_REMOVE_UNUSED_BEANS_VALUES = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList("all", "true", "none", "false", "fwk", "framework")));
+    public static final Set<String> ALLOWED_REMOVE_UNUSED_BEANS_VALUES = Set.of("all", "true", "none", "false", "fwk",
+            "framework");
 
     /**
      * <ul>
@@ -42,7 +38,7 @@ public class ArcConfig {
      * <li>does not have a name,</li>
      * <li>does not declare an observer,</li>
      * <li>does not declare any producer which is eligible for injection to any injection point,</li>
-     * <li>is not directly eligible for injection into any {@link javax.enterprise.inject.Instance} injection point</li>
+     * <li>is not directly eligible for injection into any {@link jakarta.enterprise.inject.Instance} injection point</li>
      * </ul>
      *
      * @see UnremovableBeanBuildItem
@@ -51,7 +47,7 @@ public class ArcConfig {
     public String removeUnusedBeans;
 
     /**
-     * If set to true {@code @Inject} is automatically added to all non-static fields that are annotated with
+     * If set to true {@code @Inject} is automatically added to all non-static non-final fields that are annotated with
      * one of the annotations defined by {@link AutoInjectAnnotationBuildItem}.
      */
     @ConfigItem(defaultValue = "true")
@@ -73,11 +69,21 @@ public class ArcConfig {
     public boolean transformUnproxyableClasses;
 
     /**
-     * The default naming strategy for {@link ConfigProperties.NamingStrategy}. The allowed values are determined
-     * by that enum
+     * If set to true, the bytecode of private fields that are injection points will be transformed to package private.
+     * This ensures that field injection can be performed completely reflection-free.
+     * If the value is set to false, then a reflection fallback is used to perform the injection.
      */
-    @ConfigItem(defaultValue = "kebab-case")
-    public ConfigProperties.NamingStrategy configPropertiesDefaultNamingStrategy;
+    @ConfigItem(defaultValue = "true")
+    public boolean transformPrivateInjectedFields;
+
+    /**
+     * If set to true (the default), the build fails if a private method that is neither an observer nor a producer, is
+     * annotated with an interceptor binding.
+     * An example of this is the use of {@code Transactional} on a private method of a bean.
+     * If set to false, Quarkus simply logs a warning that the annotation will be ignored.
+     */
+    @ConfigItem(defaultValue = "true")
+    public boolean failOnInterceptedPrivateMethod;
 
     /**
      * The list of selected alternatives for an application.
@@ -91,14 +97,13 @@ public class ArcConfig {
      * </ul>
      * Each element value is used to match an alternative bean class, an alternative stereotype annotation type or a bean class
      * that declares an alternative producer. If any value matches then the priority of {@link Integer#MAX_VALUE} is used for
-     * the relevant bean. The priority declared via {@link javax.annotation.Priority} or
-     * {@link io.quarkus.arc.AlternativePriority} is overriden.
+     * the relevant bean. The priority declared via {@link jakarta.annotation.Priority} is overridden.
      */
     @ConfigItem
     public Optional<List<String>> selectedAlternatives;
 
     /**
-     * If set to true then {@code javax.enterprise.inject.Produces} is automatically added to all non-void methods that are
+     * If set to true then {@code jakarta.enterprise.inject.Produces} is automatically added to all non-void methods that are
      * annotated with a scope annotation, a stereotype or a qualifier, and are not annotated with {@code Inject} or
      * {@code Produces}, and no parameter is annotated with {@code Disposes}, {@code Observes} or {@code ObservesAsync}.
      */
@@ -165,12 +170,28 @@ public class ArcConfig {
      * If set to true then the container attempts to detect <i>wrong</i> usages of annotations and eventually fails the build to
      * prevent unexpected behavior of a Quarkus application.
      * <p>
-     * A typical example is {@code @javax.ejb.Singleton} which is often confused with {@code @javax.inject.Singleton}. As a
-     * result a component annotated with {@code @javax.ejb.Singleton} would be completely ignored. Another example is an inner
+     * A typical example is {@code @jakarta.ejb.Singleton} which is often confused with {@code @jakarta.inject.Singleton}. As a
+     * result a component annotated with {@code @jakarta.ejb.Singleton} would be completely ignored. Another example is an inner
      * class annotated with a scope annotation - this component would be again completely ignored.
      */
     @ConfigItem(defaultValue = "true")
     public boolean detectWrongAnnotations;
+
+    /**
+     * If set to {@code true}, the container will perform additional validations mandated by the CDI specification.
+     * Some improvements on top of the CDI specification may be disabled. Applications that work as expected
+     * in the strict mode should work without a change in the default, non-strict mode.
+     * <p>
+     * The strict mode is mainly introduced to allow passing the CDI Lite TCK. Applications are recommended
+     * to use the default, non-strict mode, which makes CDI more convenient to use. The "strictness" of
+     * the strict mode (the set of additional validations and the set of disabled improvements on top of
+     * the CDI specification) may change over time.
+     * <p>
+     * Note that {@link #transformUnproxyableClasses} and {@link #removeUnusedBeans} also has effect on specification
+     * compatibility. You may want to disable these features to get behavior closer to the specification.
+     */
+    @ConfigItem(defaultValue = "false")
+    public boolean strictCompatibility;
 
     /**
      * Dev mode configuration.
@@ -183,6 +204,33 @@ public class ArcConfig {
      */
     @ConfigItem
     public ArcTestConfig test;
+
+    /**
+     * The list of packages that will not be checked for split package issues.
+     * <p>
+     * A package string representation can be:
+     * <ul>
+     * <li>a full name of the package, i.e. {@code org.acme.foo}</li>
+     * <li>a package name with suffix {@code .*}, i.e. {@code org.acme.*}, which matches a package that starts with provided
+     * value</li>
+     */
+    @ConfigItem
+    public Optional<List<String>> ignoredSplitPackages;
+
+    /**
+     * Context propagation configuration.
+     */
+    @ConfigItem
+    public ArcContextPropagationConfig contextPropagation;
+
+    /**
+     * If set to {@code true}, the container should try to optimize the contexts for some of the scopes.
+     * <p>
+     * Typically, some implementation parts of the context for {@link jakarta.enterprise.context.ApplicationScoped} could be
+     * pregenerated during build.
+     */
+    @ConfigItem(defaultValue = "true", generateDocumentation = false)
+    public boolean optimizeContexts;
 
     public final boolean isRemoveUnusedBeansFieldValid() {
         return ALLOWED_REMOVE_UNUSED_BEANS_VALUES.contains(removeUnusedBeans.toLowerCase());
