@@ -1,6 +1,7 @@
 package io.quarkus.arc.runtime;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.function.Supplier;
 
@@ -10,24 +11,46 @@ import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.InstanceHandle;
 import io.quarkus.arc.ManagedContext;
 
-public class BeanContainerImpl implements BeanContainer {
+class BeanContainerImpl implements BeanContainer {
 
     private static final Logger LOGGER = Logger.getLogger(BeanContainerImpl.class.getName());
 
     private final ArcContainer container;
 
-    public BeanContainerImpl(ArcContainer container) {
+    BeanContainerImpl(ArcContainer container) {
         this.container = container;
     }
 
     @Override
-    public <T> Factory<T> instanceFactory(Class<T> type, Annotation... qualifiers) {
-        Supplier<InstanceHandle<T>> handleSupplier = container.instanceSupplier(type, qualifiers);
+    public <T> T beanInstance(Class<T> beanType, Annotation... beanQualifiers) {
+        return container.select(beanType, beanQualifiers).get();
+    }
+
+    @Override
+    public <T> Factory<T> beanInstanceFactory(Class<T> type, Annotation... qualifiers) {
+        Supplier<InstanceHandle<T>> handleSupplier = container.beanInstanceSupplier(type, qualifiers);
+        return createFactory(handleSupplier, null, type, qualifiers);
+    }
+
+    @Override
+    public <T> Factory<T> beanInstanceFactory(Supplier<Factory<T>> fallbackSupplier, Class<T> type,
+            Annotation... qualifiers) {
+        Supplier<InstanceHandle<T>> handleSupplier = container.beanInstanceSupplier(type, qualifiers);
+        return createFactory(handleSupplier, fallbackSupplier, type, qualifiers);
+    }
+
+    private <T> Factory<T> createFactory(Supplier<InstanceHandle<T>> handleSupplier, Supplier<Factory<T>> fallbackSupplier,
+            Class<T> type, Annotation... qualifiers) {
         if (handleSupplier == null) {
             LOGGER.debugf(
                     "No matching bean found for type %s and qualifiers %s. The bean might have been marked as unused and removed during build.",
                     type, Arrays.toString(qualifiers));
-            return new DefaultInstanceFactory<>(type);
+            if (fallbackSupplier != null) {
+                return fallbackSupplier.get();
+            } else {
+                // by default, if there is no bean, return factory that tries to instantiate non-cdi object
+                return new DefaultInstanceFactory<>(type);
+            }
         }
         return new Factory<T>() {
             @Override
@@ -53,9 +76,18 @@ public class BeanContainerImpl implements BeanContainer {
         return container.requestContext();
     }
 
-    static final class DefaultInstanceFactory<T> implements BeanContainer.Factory<T> {
+    /**
+     * A default fallback {@link Factory} implementation used by
+     * {@link BeanContainer#beanInstanceFactory(Class, Annotation...)}.
+     * <p/>
+     * This factory attempts to create instances of given class by calling their no-arg constructor. Any exceptions
+     * related to lack of such constructor of failure to invoke it are simply re-thrown.
+     *
+     * @param <T> represents the type that this factory can create
+     */
+    private final class DefaultInstanceFactory<T> implements BeanContainer.Factory<T> {
 
-        final Class<T> type;
+        private final Class<T> type;
 
         DefaultInstanceFactory(Class<T> type) {
             this.type = type;
@@ -64,17 +96,16 @@ public class BeanContainerImpl implements BeanContainer {
         @Override
         public BeanContainer.Instance<T> create() {
             try {
-                T instance = type.newInstance();
+                T instance = type.getDeclaredConstructor().newInstance();
                 return new BeanContainer.Instance<T>() {
                     @Override
                     public T get() {
                         return instance;
                     }
                 };
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 throw new RuntimeException(e);
             }
         }
     }
-
 }
