@@ -1,15 +1,20 @@
 package io.quarkus.resteasy.reactive.server.runtime;
 
 import static io.quarkus.resteasy.reactive.server.runtime.NotFoundExceptionMapper.classMappers;
+import static io.quarkus.vertx.http.runtime.security.HttpSecurityRecorder.DefaultAuthFailureHandler.extractRootCause;
 
 import java.io.Closeable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.Executor;
+import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
-import javax.ws.rs.core.Application;
+import jakarta.ws.rs.core.Application;
 
+import org.eclipse.microprofile.config.ConfigProvider;
+import org.jboss.logging.Logger;
 import org.jboss.resteasy.reactive.common.core.SingletonBeanFactory;
 import org.jboss.resteasy.reactive.common.model.ResourceContextResolver;
 import org.jboss.resteasy.reactive.common.model.ResourceExceptionMapper;
@@ -20,12 +25,12 @@ import org.jboss.resteasy.reactive.server.core.DeploymentInfo;
 import org.jboss.resteasy.reactive.server.core.ExceptionMapping;
 import org.jboss.resteasy.reactive.server.core.RequestContextFactory;
 import org.jboss.resteasy.reactive.server.core.ResteasyReactiveRequestContext;
-import org.jboss.resteasy.reactive.server.core.startup.CustomServerRestHandlers;
+import org.jboss.resteasy.reactive.server.core.ServerSerialisers;
 import org.jboss.resteasy.reactive.server.core.startup.RuntimeDeploymentManager;
 import org.jboss.resteasy.reactive.server.handlers.RestInitialHandler;
-import org.jboss.resteasy.reactive.server.jaxrs.ProvidersImpl;
 import org.jboss.resteasy.reactive.server.model.ContextResolvers;
 import org.jboss.resteasy.reactive.server.spi.EndpointInvoker;
+import org.jboss.resteasy.reactive.server.spi.EndpointInvokerFactory;
 import org.jboss.resteasy.reactive.server.spi.ServerRestHandler;
 import org.jboss.resteasy.reactive.server.util.RuntimeResourceVisitor;
 import org.jboss.resteasy.reactive.server.util.ScoreSystem;
@@ -34,30 +39,48 @@ import org.jboss.resteasy.reactive.spi.BeanFactory;
 import org.jboss.resteasy.reactive.spi.ThreadSetupAction;
 
 import io.quarkus.arc.Arc;
+import io.quarkus.arc.ClientProxy;
 import io.quarkus.arc.runtime.BeanContainer;
 import io.quarkus.resteasy.reactive.common.runtime.ArcBeanFactory;
 import io.quarkus.resteasy.reactive.common.runtime.ArcThreadSetupAction;
 import io.quarkus.resteasy.reactive.common.runtime.ResteasyReactiveCommonRecorder;
-import io.quarkus.resteasy.reactive.server.common.runtime.EndpointInvokerFactory;
 import io.quarkus.runtime.BlockingOperationControl;
 import io.quarkus.runtime.ExecutorRecorder;
 import io.quarkus.runtime.LaunchMode;
 import io.quarkus.runtime.RuntimeValue;
 import io.quarkus.runtime.ShutdownContext;
 import io.quarkus.runtime.annotations.Recorder;
+import io.quarkus.runtime.rest.DisabledRestEndpoints;
+import io.quarkus.security.AuthenticationCompletionException;
+import io.quarkus.security.AuthenticationException;
+import io.quarkus.security.AuthenticationFailedException;
+import io.quarkus.security.AuthenticationRedirectException;
+import io.quarkus.security.ForbiddenException;
 import io.quarkus.security.identity.CurrentIdentityAssociation;
 import io.quarkus.vertx.http.runtime.CurrentVertxRequest;
 import io.quarkus.vertx.http.runtime.HttpBuildTimeConfig;
+import io.quarkus.vertx.http.runtime.security.HttpSecurityRecorder.DefaultAuthFailureHandler;
+import io.quarkus.vertx.http.runtime.security.QuarkusHttpUser;
+import io.quarkus.virtual.threads.VirtualThreadsRecorder;
 import io.vertx.core.Handler;
 import io.vertx.ext.web.RoutingContext;
 
 @Recorder
 public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder implements EndpointInvokerFactory {
 
+    static final Logger logger = Logger.getLogger("io.quarkus");
+
     public static final Supplier<Executor> EXECUTOR_SUPPLIER = new Supplier<Executor>() {
         @Override
         public Executor get() {
             return ExecutorRecorder.getCurrent();
+        }
+    };
+
+    public static final Supplier<Executor> VTHREAD_EXECUTOR_SUPPLIER = new Supplier<Executor>() {
+        @Override
+        public Executor get() {
+            return VirtualThreadsRecorder.getCurrent();
         }
     };
 
@@ -72,10 +95,14 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
             ShutdownContext shutdownContext, HttpBuildTimeConfig vertxConfig,
             RequestContextFactory contextFactory,
             BeanFactory<ResteasyReactiveInitialiser> initClassFactory,
-            LaunchMode launchMode) {
+            LaunchMode launchMode, boolean resumeOn404) {
+
+        if (resumeOn404) {
+            info.setResumeOn404(true);
+        }
 
         CurrentRequestManager
-                .setCurrentRequestInstance(new QuarkusCurrentRequest(beanContainer.instance(CurrentVertxRequest.class)));
+                .setCurrentRequestInstance(new QuarkusCurrentRequest(beanContainer.beanInstance(CurrentVertxRequest.class)));
 
         BlockingOperationSupport.setIoThreadDetector(new BlockingOperationSupport.IOThreadDetector() {
             @Override
@@ -90,16 +117,16 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
                 shutdownContext.addShutdownTask(new ShutdownContext.CloseRunnable(closeable));
             }
         };
-        CurrentIdentityAssociation currentIdentityAssociation = Arc.container().instance(CurrentIdentityAssociation.class)
-                .get();
+        CurrentIdentityAssociation currentIdentityAssociation = Arc.container().select(CurrentIdentityAssociation.class)
+                .orNull();
         ClassLoader tccl = Thread.currentThread().getContextClassLoader();
         if (contextFactory == null) {
             contextFactory = new RequestContextFactory() {
                 @Override
                 public ResteasyReactiveRequestContext createContext(Deployment deployment,
-                        ProvidersImpl providers, Object context, ThreadSetupAction requestContext,
+                        Object context, ThreadSetupAction requestContext,
                         ServerRestHandler[] handlerChain, ServerRestHandler[] abortHandlerChain) {
-                    return new QuarkusResteasyReactiveRequestContext(deployment, providers, (RoutingContext) context,
+                    return new QuarkusResteasyReactiveRequestContext(deployment, (RoutingContext) context,
                             requestContext,
                             handlerChain,
                             abortHandlerChain, launchMode == LaunchMode.DEVELOPMENT ? tccl : null, currentIdentityAssociation);
@@ -109,10 +136,11 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
         }
 
         RuntimeDeploymentManager runtimeDeploymentManager = new RuntimeDeploymentManager(info, EXECUTOR_SUPPLIER,
-                new CustomServerRestHandlers(new BlockingInputHandlerSupplier()),
+                VTHREAD_EXECUTOR_SUPPLIER,
                 closeTaskHandler, contextFactory, new ArcThreadSetupAction(beanContainer.requestContext()),
                 vertxConfig.rootPath);
         Deployment deployment = runtimeDeploymentManager.deploy();
+        DisabledRestEndpoints.set(deployment.getDisabledEndpoints());
         initClassFactory.createInstance().getInstance().init(deployment);
         currentDeployment = deployment;
 
@@ -123,10 +151,79 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
         return new RuntimeValue<>(deployment);
     }
 
-    public Handler<RoutingContext> handler(RuntimeValue<Deployment> deploymentRuntimeValue) {
+    public RuntimeValue<RestInitialHandler> restInitialHandler(RuntimeValue<Deployment> deploymentRuntimeValue) {
         Deployment deployment = deploymentRuntimeValue.getValue();
-        RestInitialHandler initialHandler = new RestInitialHandler(deployment);
-        return new ResteasyReactiveVertxHandler(initialHandler);
+        return new RuntimeValue<>(new RestInitialHandler(deployment));
+    }
+
+    public Handler<RoutingContext> handler(RuntimeValue<RestInitialHandler> restInitialHandlerRuntimeValue) {
+        RestInitialHandler initialHandler = restInitialHandlerRuntimeValue.getValue();
+
+        // ensure our ex. mappers are called when security exceptions are thrown and proactive auth is disabled
+        final Consumer<RoutingContext> eventCustomizer = new Consumer<>() {
+
+            @Override
+            public void accept(RoutingContext routingContext) {
+                // remove default auth failure handler so that exception is not handled by both failure and abort handlers
+                if (routingContext.get(QuarkusHttpUser.AUTH_FAILURE_HANDLER) instanceof FailingDefaultAuthFailureHandler) {
+                    routingContext.remove(QuarkusHttpUser.AUTH_FAILURE_HANDLER);
+                }
+            }
+        };
+
+        return new ResteasyReactiveVertxHandler(eventCustomizer, initialHandler);
+    }
+
+    public Handler<RoutingContext> failureHandler(RuntimeValue<RestInitialHandler> restInitialHandlerRuntimeValue,
+            boolean noCustomAuthCompletionExMapper, boolean noCustomAuthFailureExMapper, boolean noCustomAuthRedirectExMapper,
+            boolean proactive) {
+        final RestInitialHandler restInitialHandler = restInitialHandlerRuntimeValue.getValue();
+        // process auth failures with abort handlers
+        return new Handler<RoutingContext>() {
+            @Override
+            public void handle(RoutingContext event) {
+
+                // special handling when proactive auth is enabled as then we know default auth failure handler already run
+                if (proactive && event.get(QuarkusHttpUser.AUTH_FAILURE_HANDLER) instanceof DefaultAuthFailureHandler) {
+                    // we want to prevent repeated handling of exceptions if user don't want to handle exception himself
+                    // we do not pass exception to abort handlers if proactive auth is enabled and user did not
+                    // provide custom ex. mapper; we replace default auth failure handler as soon as we can, so that
+                    // we can handle Quarkus Security Exceptions ourselves
+                    if (event.failure() instanceof AuthenticationFailedException) {
+                        if (noCustomAuthFailureExMapper) {
+                            event.next();
+                        } else {
+                            // allow response customization
+                            restInitialHandler.beginProcessing(event, event.failure());
+                        }
+                        return;
+                    } else if (event.failure() instanceof AuthenticationCompletionException) {
+                        if (noCustomAuthCompletionExMapper) {
+                            event.next();
+                        } else {
+                            // allow response customization
+                            restInitialHandler.beginProcessing(event, event.failure());
+                        }
+                        return;
+                    } else if (event.failure() instanceof AuthenticationRedirectException) {
+                        if (noCustomAuthRedirectExMapper) {
+                            event.next();
+                        } else {
+                            // allow response customization
+                            restInitialHandler.beginProcessing(event, event.failure());
+                        }
+                        return;
+                    }
+                }
+
+                if (event.failure() instanceof AuthenticationException
+                        || event.failure() instanceof ForbiddenException) {
+                    restInitialHandler.beginProcessing(event, event.failure());
+                } else {
+                    event.next();
+                }
+            }
+        };
     }
 
     /**
@@ -160,6 +257,7 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
                     SingletonBeanFactory.setInstance(i.getClass().getName(), i);
                 }
                 applicationSupplier = new Supplier<Application>() {
+
                     @Override
                     public Application get() {
                         return application;
@@ -175,7 +273,7 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
     @SuppressWarnings("unchecked")
     public void registerExceptionMapper(ExceptionMapping exceptionMapping, String string,
             ResourceExceptionMapper<Throwable> mapper) {
-        exceptionMapping.addExceptionMapper(loadClass(string), mapper);
+        exceptionMapping.addExceptionMapper(string, mapper);
     }
 
     public void registerContextResolver(ContextResolvers contextResolvers, String string,
@@ -189,8 +287,9 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
             @Override
             public EndpointInvoker get() {
                 try {
-                    return (EndpointInvoker) loadClass(baseName).newInstance();
-                } catch (IllegalAccessException | InstantiationException e) {
+                    return (EndpointInvoker) loadClass(baseName).getDeclaredConstructor().newInstance();
+                } catch (IllegalAccessException | InstantiationException | NoSuchMethodException
+                        | InvocationTargetException e) {
                     throw new RuntimeException("Unable to generate endpoint invoker", e);
                 }
 
@@ -207,11 +306,62 @@ public class ResteasyReactiveRecorder extends ResteasyReactiveCommonRecorder imp
         };
     }
 
-    private static class BlockingInputHandlerSupplier implements Supplier<ServerRestHandler> {
+    public Function<Object, Object> clientProxyUnwrapper() {
+        return ClientProxy::unwrap;
+    }
+
+    public Supplier<Boolean> disableIfPropertyMatches(String propertyName, String propertyValue, boolean disableIfMissing) {
+        return new Supplier<>() {
+            @Override
+            public Boolean get() {
+                String value = ConfigProvider.getConfig().getConfigValue(propertyName).getValue();
+                if (value == null) {
+                    return disableIfMissing;
+                } else {
+                    return value.equals(propertyValue);
+                }
+            }
+        };
+    }
+
+    public ServerSerialisers createServerSerialisers() {
+        return new ServerSerialisers();
+    }
+
+    public Handler<RoutingContext> defaultAuthFailureHandler() {
+        return new Handler<RoutingContext>() {
+            @Override
+            public void handle(RoutingContext event) {
+                if (event.get(QuarkusHttpUser.AUTH_FAILURE_HANDLER) instanceof DefaultAuthFailureHandler) {
+                    // fail event rather than end it, so it's handled by abort handlers (see #addFailureHandler method)
+                    event.put(QuarkusHttpUser.AUTH_FAILURE_HANDLER, new FailingDefaultAuthFailureHandler());
+                }
+                event.next();
+            }
+        };
+    }
+
+    public Supplier<Boolean> beanUnavailable(String className) {
+        return new Supplier<>() {
+            @Override
+            public Boolean get() {
+                try {
+                    return !Arc.container().select(Class.forName(className, false, Thread.currentThread()
+                            .getContextClassLoader())).isResolvable();
+                } catch (ClassNotFoundException e) {
+                    throw new RuntimeException("Unable to determine if bean '" + className + "' is available", e);
+                }
+            }
+        };
+    }
+
+    private static final class FailingDefaultAuthFailureHandler implements BiConsumer<RoutingContext, Throwable> {
 
         @Override
-        public ServerRestHandler get() {
-            return new BlockingInputHandler();
+        public void accept(RoutingContext event, Throwable throwable) {
+            if (!event.failed()) {
+                event.fail(extractRootCause(throwable));
+            }
         }
     }
 
