@@ -1,16 +1,23 @@
 package io.quarkus.scheduler.deployment;
 
 import static io.quarkus.deployment.annotations.ExecutionTime.RUNTIME_INIT;
-import static io.quarkus.deployment.annotations.ExecutionTime.STATIC_INIT;
+import static org.jboss.jandex.AnnotationTarget.Kind.METHOD;
+import static org.jboss.jandex.AnnotationValue.createArrayValue;
+import static org.jboss.jandex.AnnotationValue.createBooleanValue;
+import static org.jboss.jandex.AnnotationValue.createStringValue;
 
 import java.lang.reflect.Modifier;
 import java.time.Duration;
+import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionStage;
 import java.util.function.Function;
 
 import org.jboss.jandex.AnnotationInstance;
@@ -31,6 +38,7 @@ import io.quarkus.arc.ArcContainer;
 import io.quarkus.arc.InjectableBean;
 import io.quarkus.arc.InstanceHandle;
 import io.quarkus.arc.deployment.AdditionalBeanBuildItem;
+import io.quarkus.arc.deployment.AnnotationsTransformerBuildItem;
 import io.quarkus.arc.deployment.AutoAddScopeBuildItem;
 import io.quarkus.arc.deployment.BeanArchiveIndexBuildItem;
 import io.quarkus.arc.deployment.BeanDiscoveryFinishedBuildItem;
@@ -40,11 +48,12 @@ import io.quarkus.arc.deployment.UnremovableBeanBuildItem;
 import io.quarkus.arc.deployment.UnremovableBeanBuildItem.BeanClassAnnotationExclusion;
 import io.quarkus.arc.deployment.ValidationPhaseBuildItem;
 import io.quarkus.arc.deployment.ValidationPhaseBuildItem.ValidationErrorBuildItem;
+import io.quarkus.arc.processor.AnnotationsTransformer;
 import io.quarkus.arc.processor.BeanDeploymentValidator;
 import io.quarkus.arc.processor.BeanInfo;
 import io.quarkus.arc.processor.BuiltinScope;
 import io.quarkus.arc.processor.DotNames;
-import io.quarkus.arc.runtime.BeanLookupSupplier;
+import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.deployment.Capabilities;
 import io.quarkus.deployment.Capability;
 import io.quarkus.deployment.Feature;
@@ -53,40 +62,33 @@ import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.AnnotationProxyBuildItem;
-import io.quarkus.deployment.builditem.ExecutorBuildItem;
 import io.quarkus.deployment.builditem.FeatureBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.nativeimage.ReflectiveClassBuildItem;
-import io.quarkus.devconsole.spi.DevConsoleRouteBuildItem;
-import io.quarkus.devconsole.spi.DevConsoleRuntimeTemplateInfoBuildItem;
+import io.quarkus.deployment.metrics.MetricsCapabilityBuildItem;
+import io.quarkus.gizmo.CatchBlockCreator;
 import io.quarkus.gizmo.ClassCreator;
 import io.quarkus.gizmo.ClassOutput;
+import io.quarkus.gizmo.DescriptorUtils;
 import io.quarkus.gizmo.MethodCreator;
 import io.quarkus.gizmo.MethodDescriptor;
 import io.quarkus.gizmo.ResultHandle;
+import io.quarkus.gizmo.TryBlock;
+import io.quarkus.runtime.metrics.MetricsFactory;
 import io.quarkus.runtime.util.HashUtil;
 import io.quarkus.scheduler.Scheduled;
 import io.quarkus.scheduler.ScheduledExecution;
-import io.quarkus.scheduler.Scheduler;
-import io.quarkus.scheduler.runtime.ScheduledInvoker;
-import io.quarkus.scheduler.runtime.ScheduledMethodMetadata;
+import io.quarkus.scheduler.common.runtime.DefaultInvoker;
+import io.quarkus.scheduler.common.runtime.MutableScheduledMethod;
+import io.quarkus.scheduler.common.runtime.SchedulerContext;
+import io.quarkus.scheduler.common.runtime.util.SchedulerUtils;
 import io.quarkus.scheduler.runtime.SchedulerConfig;
-import io.quarkus.scheduler.runtime.SchedulerContext;
 import io.quarkus.scheduler.runtime.SchedulerRecorder;
 import io.quarkus.scheduler.runtime.SimpleScheduler;
-import io.quarkus.scheduler.runtime.devconsole.SchedulerDevConsoleRecorder;
-import io.quarkus.scheduler.runtime.util.SchedulerUtils;
 
-/**
- * @author Martin Kouba
- */
 public class SchedulerProcessor {
 
     private static final Logger LOGGER = Logger.getLogger(SchedulerProcessor.class);
-
-    static final DotName SCHEDULED_NAME = DotName.createSimple(Scheduled.class.getName());
-    static final DotName SCHEDULES_NAME = DotName.createSimple(Scheduled.Schedules.class.getName());
-    static final DotName SKIP_NEVER_NAME = DotName.createSimple(Scheduled.Never.class.getName());
 
     static final Type SCHEDULED_EXECUTION_TYPE = Type.create(DotName.createSimple(ScheduledExecution.class.getName()),
             Kind.CLASS);
@@ -97,15 +99,19 @@ public class SchedulerProcessor {
     @BuildStep
     void beans(Capabilities capabilities, BuildProducer<AdditionalBeanBuildItem> additionalBeans) {
         if (capabilities.isMissing(Capability.QUARTZ)) {
-            additionalBeans.produce(new AdditionalBeanBuildItem(SimpleScheduler.class));
+            additionalBeans.produce(new AdditionalBeanBuildItem(SimpleScheduler.class, Scheduled.ApplicationNotRunning.class));
         }
     }
 
     @BuildStep
     AutoAddScopeBuildItem autoAddScope() {
-        return AutoAddScopeBuildItem.builder().containsAnnotations(SCHEDULED_NAME, SCHEDULES_NAME)
+        // We add @Singleton to any bean class that has no scope annotation and declares at least one non-static method annotated with @Scheduled
+        return AutoAddScopeBuildItem.builder()
+                .anyMethodMatches(m -> !Modifier.isStatic(m.flags())
+                        && (m.hasAnnotation(SchedulerDotNames.SCHEDULED_NAME)
+                                || m.hasAnnotation(SchedulerDotNames.SCHEDULES_NAME)))
                 .defaultScope(BuiltinScope.SINGLETON)
-                .reason("Found scheduled business methods").build();
+                .reason("Found non-static scheduled business methods").build();
     }
 
     @BuildStep
@@ -113,7 +119,30 @@ public class SchedulerProcessor {
             TransformedAnnotationsBuildItem transformedAnnotations,
             BuildProducer<ScheduledBusinessMethodItem> scheduledBusinessMethods) {
 
-        // We need to collect all business methods annotated with @Scheduled first
+        // First collect static scheduled methods
+        List<AnnotationInstance> schedules = new ArrayList<>(
+                beanArchives.getIndex().getAnnotations(SchedulerDotNames.SCHEDULED_NAME));
+        for (AnnotationInstance annotationInstance : beanArchives.getIndex().getAnnotations(SchedulerDotNames.SCHEDULES_NAME)) {
+            for (AnnotationInstance scheduledInstance : annotationInstance.value().asNestedArray()) {
+                // We need to set the target of the containing instance
+                schedules.add(AnnotationInstance.create(scheduledInstance.name(), annotationInstance.target(),
+                        scheduledInstance.values()));
+            }
+        }
+        for (AnnotationInstance annotationInstance : schedules) {
+            if (annotationInstance.target().kind() != METHOD) {
+                continue;
+            }
+            MethodInfo method = annotationInstance.target().asMethod();
+            if (Modifier.isStatic(method.flags()) && !KotlinUtil.isSuspendMethod(method)) {
+                scheduledBusinessMethods.produce(new ScheduledBusinessMethodItem(null, method, schedules,
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.NON_BLOCKING),
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.RUN_ON_VIRTUAL_THREAD)));
+                LOGGER.debugf("Found scheduled static method %s declared on %s", method, method.declaringClass().name());
+            }
+        }
+
+        // Then collect all business methods annotated with @Scheduled
         for (BeanInfo bean : beanDiscovery.beanStream().classBeans()) {
             collectScheduledMethods(beanArchives.getIndex(), transformedAnnotations, bean,
                     bean.getTarget().get().asClass(),
@@ -125,12 +154,18 @@ public class SchedulerProcessor {
             ClassInfo beanClass, BuildProducer<ScheduledBusinessMethodItem> scheduledBusinessMethods) {
 
         for (MethodInfo method : beanClass.methods()) {
+            if (Modifier.isStatic(method.flags())) {
+                // Ignore static methods
+                continue;
+            }
             List<AnnotationInstance> schedules = null;
-            AnnotationInstance scheduledAnnotation = transformedAnnotations.getAnnotation(method, SCHEDULED_NAME);
+            AnnotationInstance scheduledAnnotation = transformedAnnotations.getAnnotation(method,
+                    SchedulerDotNames.SCHEDULED_NAME);
             if (scheduledAnnotation != null) {
-                schedules = Collections.singletonList(scheduledAnnotation);
+                schedules = List.of(scheduledAnnotation);
             } else {
-                AnnotationInstance schedulesAnnotation = transformedAnnotations.getAnnotation(method, SCHEDULES_NAME);
+                AnnotationInstance schedulesAnnotation = transformedAnnotations.getAnnotation(method,
+                        SchedulerDotNames.SCHEDULES_NAME);
                 if (schedulesAnnotation != null) {
                     schedules = new ArrayList<>();
                     for (AnnotationInstance scheduledInstance : schedulesAnnotation.value().asNestedArray()) {
@@ -141,16 +176,10 @@ public class SchedulerProcessor {
                 }
             }
             if (schedules != null) {
-                scheduledBusinessMethods.produce(new ScheduledBusinessMethodItem(bean, method, schedules));
+                scheduledBusinessMethods.produce(new ScheduledBusinessMethodItem(bean, method, schedules,
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.NON_BLOCKING),
+                        transformedAnnotations.hasAnnotation(method, SchedulerDotNames.RUN_ON_VIRTUAL_THREAD)));
                 LOGGER.debugf("Found scheduled business method %s declared on %s", method, bean);
-            }
-        }
-
-        DotName superClassName = beanClass.superName();
-        if (superClassName != null) {
-            ClassInfo superClass = index.getClassByName(superClassName);
-            if (superClass != null) {
-                collectScheduledMethods(index, transformedAnnotations, bean, superClass, scheduledBusinessMethods);
             }
         }
     }
@@ -160,28 +189,54 @@ public class SchedulerProcessor {
             ValidationPhaseBuildItem validationPhase, BuildProducer<ValidationErrorBuildItem> validationErrors) {
         List<Throwable> errors = new ArrayList<>();
         Map<String, AnnotationInstance> encounteredIdentities = new HashMap<>();
+        Set<String> methodDescriptions = new HashSet<>();
 
         for (ScheduledBusinessMethodItem scheduledMethod : scheduledMethods) {
+            if (!methodDescriptions.add(scheduledMethod.getMethodDescription())) {
+                errors.add(new IllegalStateException("Multiple @Scheduled methods of the same name declared on the same class: "
+                        + scheduledMethod.getMethodDescription()));
+                continue;
+            }
             MethodInfo method = scheduledMethod.getMethod();
-
-            if (Modifier.isPrivate(method.flags()) || Modifier.isStatic(method.flags())) {
-                errors.add(new IllegalStateException("@Scheduled method must be non-private and non-static: "
-                        + method.declaringClass().name() + "#" + method.name() + "()"));
+            if (Modifier.isAbstract(method.flags())) {
+                errors.add(new IllegalStateException("@Scheduled method must not be abstract: "
+                        + scheduledMethod.getMethodDescription()));
+                continue;
+            }
+            if (Modifier.isPrivate(method.flags())) {
+                errors.add(new IllegalStateException("@Scheduled method must not be private: "
+                        + scheduledMethod.getMethodDescription()));
                 continue;
             }
 
+            if (scheduledMethod.isNonBlocking() && scheduledMethod.isRunOnVirtualThread()) {
+                errors.add(new IllegalStateException("@Scheduled method cannot be non-blocking and annotated " +
+                        "with @RunOnVirtualThread: " + scheduledMethod.getMethodDescription()));
+            }
+
+            boolean isSuspendMethod = KotlinUtil.isSuspendMethod(method);
+
             // Validate method params and return type
-            List<Type> params = method.parameters();
-            if (params.size() > 1
-                    || (params.size() == 1 && !params.get(0).equals(SCHEDULED_EXECUTION_TYPE))) {
+            List<Type> params = method.parameterTypes();
+            int maxParamSize = isSuspendMethod ? 2 : 1;
+            if (params.size() > maxParamSize
+                    || (params.size() == maxParamSize && !params.get(0).equals(SCHEDULED_EXECUTION_TYPE))) {
                 errors.add(new IllegalStateException(String.format(
                         "Invalid scheduled business method parameters %s [method: %s, bean: %s]", params,
                         method, scheduledMethod.getBean())));
             }
-            if (!method.returnType().kind().equals(Type.Kind.VOID)) {
-                errors.add(new IllegalStateException(
-                        String.format("Scheduled business method must return void [method: %s, bean: %s]",
-                                method, scheduledMethod.getBean())));
+            if (!isValidReturnType(method)) {
+                if (isSuspendMethod) {
+                    errors.add(new IllegalStateException(
+                            String.format(
+                                    "Suspending scheduled business method must return Unit [method: %s, bean: %s]",
+                                    method, scheduledMethod.getBean())));
+                } else {
+                    errors.add(new IllegalStateException(
+                            String.format(
+                                    "Scheduled business method must return void, CompletionStage<Void> or Uni<Void> [method: %s, bean: %s]",
+                                    method, scheduledMethod.getBean())));
+                }
             }
             // Validate cron() and every() expressions
             CronParser parser = new CronParser(CronDefinitionBuilder.instanceDefinitionFor(config.cronType));
@@ -198,11 +253,31 @@ public class SchedulerProcessor {
         }
     }
 
+    private boolean isValidReturnType(MethodInfo method) {
+        Type returnType = method.returnType();
+        if (returnType.kind() == Kind.VOID) {
+            return true;
+        }
+        if (SchedulerDotNames.COMPLETION_STAGE.equals(returnType.name())
+                && returnType.asParameterizedType().arguments().get(0).name().equals(SchedulerDotNames.VOID)) {
+            return true;
+        }
+        if (SchedulerDotNames.UNI.equals(returnType.name())
+                && returnType.asParameterizedType().arguments().get(0).name().equals(SchedulerDotNames.VOID)) {
+            return true;
+        }
+        if (KotlinUtil.isSuspendMethod(method)
+                && SchedulerDotNames.VOID.equals(KotlinUtil.determineReturnTypeOfSuspendMethod(method).name())) {
+            return true;
+        }
+        return false;
+    }
+
     @BuildStep
     public List<UnremovableBeanBuildItem> unremovableBeans() {
         // Beans annotated with @Scheduled should never be removed
-        return Arrays.asList(new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SCHEDULED_NAME)),
-                new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SCHEDULES_NAME)));
+        return List.of(new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SchedulerDotNames.SCHEDULED_NAME)),
+                new UnremovableBeanBuildItem(new BeanClassAnnotationExclusion(SchedulerDotNames.SCHEDULES_NAME)));
     }
 
     @BuildStep
@@ -210,9 +285,9 @@ public class SchedulerProcessor {
     public FeatureBuildItem build(SchedulerConfig config, BuildProducer<SyntheticBeanBuildItem> syntheticBeans,
             SchedulerRecorder recorder, List<ScheduledBusinessMethodItem> scheduledMethods,
             BuildProducer<GeneratedClassBuildItem> generatedClasses, BuildProducer<ReflectiveClassBuildItem> reflectiveClass,
-            AnnotationProxyBuildItem annotationProxy, ExecutorBuildItem executor) {
+            AnnotationProxyBuildItem annotationProxy) {
 
-        List<ScheduledMethodMetadata> scheduledMetadata = new ArrayList<>();
+        List<MutableScheduledMethod> scheduledMetadata = new ArrayList<>();
         ClassOutput classOutput = new GeneratedClassGizmoAdaptor(generatedClasses, new Function<String, String>() {
             @Override
             public String apply(String name) {
@@ -229,98 +304,227 @@ public class SchedulerProcessor {
         });
 
         for (ScheduledBusinessMethodItem scheduledMethod : scheduledMethods) {
-            ScheduledMethodMetadata metadata = new ScheduledMethodMetadata();
+            MutableScheduledMethod metadata = new MutableScheduledMethod();
             String invokerClass = generateInvoker(scheduledMethod, classOutput);
-            reflectiveClass.produce(new ReflectiveClassBuildItem(false, false, invokerClass));
+            reflectiveClass.produce(ReflectiveClassBuildItem.builder(invokerClass).constructors().methods().fields().build());
             metadata.setInvokerClassName(invokerClass);
             List<Scheduled> schedules = new ArrayList<>();
             for (AnnotationInstance scheduled : scheduledMethod.getSchedules()) {
                 schedules.add(annotationProxy.builder(scheduled, Scheduled.class).build(classOutput));
             }
             metadata.setSchedules(schedules);
-            metadata.setMethodDescription(
-                    scheduledMethod.getMethod().declaringClass() + "#" + scheduledMethod.getMethod().name());
+            metadata.setDeclaringClassName(scheduledMethod.getMethod().declaringClass().toString());
+            metadata.setMethodName(scheduledMethod.getMethod().name());
             scheduledMetadata.add(metadata);
         }
 
         syntheticBeans.produce(SyntheticBeanBuildItem.configure(SchedulerContext.class).setRuntimeInit()
-                .supplier(recorder.createContext(config, executor.getExecutorProxy(), scheduledMetadata))
+                .supplier(recorder.createContext(config, scheduledMetadata))
                 .done());
 
         return new FeatureBuildItem(Feature.SCHEDULER);
     }
 
     @BuildStep
-    public void devConsoleInfo(BuildProducer<DevConsoleRuntimeTemplateInfoBuildItem> infos) {
-        infos.produce(new DevConsoleRuntimeTemplateInfoBuildItem("schedulerContext",
-                new BeanLookupSupplier(SchedulerContext.class)));
-        infos.produce(new DevConsoleRuntimeTemplateInfoBuildItem("scheduler",
-                new BeanLookupSupplier(Scheduler.class)));
+    public void metrics(SchedulerConfig config,
+            Optional<MetricsCapabilityBuildItem> metricsCapability,
+            BuildProducer<AnnotationsTransformerBuildItem> annotationsTransformer) {
+
+        if (config.metricsEnabled && metricsCapability.isPresent()) {
+            DotName micrometerTimed = DotName.createSimple("io.micrometer.core.annotation.Timed");
+            DotName mpTimed = DotName.createSimple("org.eclipse.microprofile.metrics.annotation.Timed");
+
+            annotationsTransformer.produce(new AnnotationsTransformerBuildItem(AnnotationsTransformer.builder()
+                    .appliesTo(METHOD)
+                    .whenContainsAny(List.of(SchedulerDotNames.SCHEDULED_NAME, SchedulerDotNames.SCHEDULES_NAME))
+                    .whenContainsNone(List.of(micrometerTimed,
+                            mpTimed, DotName.createSimple("org.eclipse.microprofile.metrics.annotation.SimplyTimed")))
+                    .transform(context -> {
+                        // Transform a @Scheduled method that has no metrics timed annotation
+                        MethodInfo scheduledMethod = context.getTarget().asMethod();
+                        if (metricsCapability.get().metricsSupported(MetricsFactory.MICROMETER)) {
+                            // Micrometer
+                            context.transform()
+                                    .add(micrometerTimed, createStringValue("value", "scheduled.methods"))
+                                    .add(micrometerTimed, createStringValue("value", "scheduled.methods.running"),
+                                            createBooleanValue("longTask", true))
+                                    .done();
+                            LOGGER.debugf("Added Micrometer @Timed to a @Scheduled method %s#%s()",
+                                    scheduledMethod.declaringClass().name(),
+                                    scheduledMethod.name());
+                        } else if (metricsCapability.get().metricsSupported(MetricsFactory.MP_METRICS)) {
+                            // MP metrics
+                            context.transform()
+                                    .add(mpTimed,
+                                            createArrayValue("tags",
+                                                    new AnnotationValue[] { createStringValue("scheduled", "scheduled=true") }))
+                                    .done();
+                            LOGGER.debugf("Added MP Metrics @Timed to a @Scheduled method %s#%s()",
+                                    scheduledMethod.declaringClass().name(),
+                                    scheduledMethod.name());
+                        }
+                    })));
+        }
     }
 
     @BuildStep
-    @Record(value = STATIC_INIT, optional = true)
-    DevConsoleRouteBuildItem invokeEndpoint(SchedulerDevConsoleRecorder recorder) {
-        return new DevConsoleRouteBuildItem("schedules", "POST", recorder.invokeHandler());
+    public void tracing(SchedulerConfig config,
+            Capabilities capabilities, BuildProducer<AnnotationsTransformerBuildItem> annotationsTransformer) {
+
+        if (config.tracingEnabled && capabilities.isPresent(Capability.OPENTELEMETRY_TRACER)) {
+            DotName withSpan = DotName.createSimple("io.opentelemetry.instrumentation.annotations.WithSpan");
+            DotName legacyWithSpan = DotName.createSimple("io.opentelemetry.extension.annotations.WithSpan");
+
+            annotationsTransformer.produce(new AnnotationsTransformerBuildItem(AnnotationsTransformer.builder()
+                    .appliesTo(METHOD)
+                    .whenContainsAny(List.of(SchedulerDotNames.SCHEDULED_NAME, SchedulerDotNames.SCHEDULES_NAME))
+                    .whenContainsNone(List.of(withSpan, legacyWithSpan))
+                    .transform(context -> {
+                        MethodInfo scheduledMethod = context.getTarget().asMethod();
+                        context.transform()
+                                .add(withSpan)
+                                .done();
+                        LOGGER.debugf("Added OpenTelemetry @WithSpan to a @Scheduled method %s#%s()",
+                                scheduledMethod.declaringClass().name(),
+                                scheduledMethod.name());
+                    })));
+        }
     }
 
     private String generateInvoker(ScheduledBusinessMethodItem scheduledMethod, ClassOutput classOutput) {
 
         BeanInfo bean = scheduledMethod.getBean();
         MethodInfo method = scheduledMethod.getMethod();
+        boolean isStatic = Modifier.isStatic(method.flags());
+        ClassInfo implClazz = isStatic ? method.declaringClass() : bean.getImplClazz();
 
         String baseName;
-        if (bean.getImplClazz().enclosingClass() != null) {
-            baseName = DotNames.simpleName(bean.getImplClazz().enclosingClass()) + NESTED_SEPARATOR
-                    + DotNames.simpleName(bean.getImplClazz());
+        if (implClazz.enclosingClass() != null) {
+            baseName = DotNames.simpleName(implClazz.enclosingClass()) + NESTED_SEPARATOR
+                    + DotNames.simpleName(implClazz);
         } else {
-            baseName = DotNames.simpleName(bean.getImplClazz().name());
+            baseName = DotNames.simpleName(implClazz.name());
         }
         StringBuilder sigBuilder = new StringBuilder();
         sigBuilder.append(method.name()).append("_").append(method.returnType().name().toString());
-        for (Type i : method.parameters()) {
+        for (Type i : method.parameterTypes()) {
             sigBuilder.append(i.name().toString());
         }
-        String generatedName = DotNames.internalPackageNameWithTrailingSlash(bean.getImplClazz().name()) + baseName
+        String generatedName = DotNames.internalPackageNameWithTrailingSlash(implClazz.name()) + baseName
                 + INVOKER_SUFFIX + "_" + method.name() + "_"
                 + HashUtil.sha1(sigBuilder.toString());
 
+        boolean isSuspendMethod = KotlinUtil.isSuspendMethod(method);
+
         ClassCreator invokerCreator = ClassCreator.builder().classOutput(classOutput).className(generatedName)
-                .interfaces(ScheduledInvoker.class)
+                .superClass(isSuspendMethod ? SchedulerDotNames.ABSTRACT_COROUTINE_INVOKER.toString()
+                        : DefaultInvoker.class.getName())
                 .build();
 
-        // The descriptor is: void invokeBean(Object execution)
-        MethodCreator invoke = invokerCreator.getMethodCreator("invokeBean", void.class, Object.class)
-                .addException(Exception.class);
-        // InjectableBean<Foo: bean = Arc.container().bean("1");
-        // InstanceHandle<Foo> handle = Arc.container().instance(bean);
-        // handle.get().ping();
-        ResultHandle containerHandle = invoke
-                .invokeStaticMethod(MethodDescriptor.ofMethod(Arc.class, "container", ArcContainer.class));
-        ResultHandle beanHandle = invoke.invokeInterfaceMethod(
-                MethodDescriptor.ofMethod(ArcContainer.class, "bean", InjectableBean.class, String.class),
-                containerHandle, invoke.load(bean.getIdentifier()));
-        ResultHandle instanceHandle = invoke.invokeInterfaceMethod(
-                MethodDescriptor.ofMethod(ArcContainer.class, "instance", InstanceHandle.class, InjectableBean.class),
-                containerHandle, beanHandle);
-        ResultHandle beanInstanceHandle = invoke
-                .invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "get", Object.class), instanceHandle);
-        if (method.parameters().isEmpty()) {
-            invoke.invokeVirtualMethod(
-                    MethodDescriptor.ofMethod(bean.getImplClazz().name().toString(), method.name(), void.class),
-                    beanInstanceHandle);
+        MethodCreator invoke;
+        if (isSuspendMethod) {
+            invoke = invokerCreator
+                    .getMethodCreator("invokeBean", Object.class.getName(),
+                            ScheduledExecution.class.getName(), SchedulerDotNames.CONTINUATION.toString());
         } else {
-            invoke.invokeVirtualMethod(
-                    MethodDescriptor.ofMethod(bean.getImplClazz().name().toString(), method.name(), void.class,
-                            ScheduledExecution.class),
-                    beanInstanceHandle, invoke.getMethodParam(0));
+            // The descriptor is: CompletionStage invoke(ScheduledExecution execution)
+            invoke = invokerCreator.getMethodCreator("invokeBean", CompletionStage.class, ScheduledExecution.class);
         }
-        // handle.destroy() - destroy dependent instance afterwards
-        if (BuiltinScope.DEPENDENT.is(bean.getScope())) {
-            invoke.invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "destroy", void.class),
-                    instanceHandle);
+
+        // Use a try-catch block and return failed future if an exception is thrown
+        TryBlock tryBlock = invoke.tryBlock();
+        CatchBlockCreator catchBlock = tryBlock.addCatch(Throwable.class);
+        if (isSuspendMethod) {
+            catchBlock.throwException(catchBlock.getCaughtException());
+        } else {
+            catchBlock.returnValue(catchBlock.invokeStaticMethod(
+                    MethodDescriptor.ofMethod(CompletableFuture.class, "failedStage", CompletionStage.class, Throwable.class),
+                    catchBlock.getCaughtException()));
         }
-        invoke.returnValue(null);
+
+        String returnTypeStr = DescriptorUtils.typeToString(method.returnType());
+        ResultHandle res;
+        if (isStatic) {
+            if (method.parameterTypes().isEmpty()) {
+                res = tryBlock.invokeStaticMethod(
+                        MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr));
+            } else {
+                res = tryBlock.invokeStaticMethod(
+                        MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr,
+                                ScheduledExecution.class),
+                        tryBlock.getMethodParam(0));
+            }
+        } else {
+            // InjectableBean<Foo> bean = Arc.container().bean("foo1");
+            // InstanceHandle<Foo> handle = Arc.container().instance(bean);
+            // handle.get().ping();
+            ResultHandle containerHandle = tryBlock
+                    .invokeStaticMethod(MethodDescriptor.ofMethod(Arc.class, "container", ArcContainer.class));
+            ResultHandle beanHandle = tryBlock.invokeInterfaceMethod(
+                    MethodDescriptor.ofMethod(ArcContainer.class, "bean", InjectableBean.class, String.class),
+                    containerHandle, tryBlock.load(bean.getIdentifier()));
+            ResultHandle instanceHandle = tryBlock.invokeInterfaceMethod(
+                    MethodDescriptor.ofMethod(ArcContainer.class, "instance", InstanceHandle.class, InjectableBean.class),
+                    containerHandle, beanHandle);
+            ResultHandle beanInstanceHandle = tryBlock
+                    .invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "get", Object.class),
+                            instanceHandle);
+
+            if (isSuspendMethod) {
+                if (method.parametersCount() == 1) {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), Object.class.getName(),
+                                    SchedulerDotNames.CONTINUATION.toString()),
+                            beanInstanceHandle, tryBlock.getMethodParam(1));
+                } else {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), Object.class.getName(),
+                                    ScheduledExecution.class.getName(), SchedulerDotNames.CONTINUATION.toString()),
+                            beanInstanceHandle, tryBlock.getMethodParam(0), tryBlock.getMethodParam(1));
+                }
+            } else {
+                if (method.parameterTypes().isEmpty()) {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr),
+                            beanInstanceHandle);
+                } else {
+                    res = tryBlock.invokeVirtualMethod(
+                            MethodDescriptor.ofMethod(implClazz.name().toString(), method.name(), returnTypeStr,
+                                    ScheduledExecution.class),
+                            beanInstanceHandle, tryBlock.getMethodParam(0));
+                }
+            }
+            // handle.destroy() - destroy dependent instance afterwards
+            if (BuiltinScope.DEPENDENT.is(bean.getScope())) {
+                tryBlock.invokeInterfaceMethod(MethodDescriptor.ofMethod(InstanceHandle.class, "destroy", void.class),
+                        instanceHandle);
+            }
+        }
+
+        if (res == null) {
+            // If the return type is void then return a new completed stage
+            res = tryBlock.invokeStaticMethod(
+                    MethodDescriptor.ofMethod(CompletableFuture.class, "completedStage", CompletionStage.class, Object.class),
+                    tryBlock.loadNull());
+        } else if (method.returnType().name().equals(SchedulerDotNames.UNI)) {
+            // Subscribe to the returned Uni
+            res = tryBlock.invokeInterfaceMethod(MethodDescriptor.ofMethod(SchedulerDotNames.UNI.toString(),
+                    "subscribeAsCompletionStage", CompletableFuture.class), res);
+        }
+
+        tryBlock.returnValue(res);
+
+        if (scheduledMethod.isNonBlocking()) {
+            MethodCreator isBlocking = invokerCreator.getMethodCreator("isBlocking", boolean.class);
+            isBlocking.returnValue(isBlocking.load(false));
+            isBlocking.close();
+        }
+
+        if (scheduledMethod.isRunOnVirtualThread()) {
+            MethodCreator isRunOnVirtualThread = invokerCreator.getMethodCreator("isRunningOnVirtualThread", boolean.class);
+            isRunOnVirtualThread.returnValue(isRunOnVirtualThread.load(true));
+            isRunOnVirtualThread.close();
+        }
 
         invokerCreator.close();
         return generatedName.replace('/', '.');
@@ -344,6 +548,18 @@ public class SchedulerProcessor {
                     LOGGER.warnf(
                             "%s declared on %s#%s() defines both cron() and every() - the cron expression takes precedence",
                             schedule, method.declaringClass().name(), method.name());
+                }
+            }
+            // Validate the time zone ID
+            AnnotationValue timeZoneValue = schedule.value("timeZone");
+            if (timeZoneValue != null) {
+                String timeZone = timeZoneValue.asString();
+                if (!SchedulerUtils.isConfigValue(timeZone) && !timeZone.equals(Scheduled.DEFAULT_TIMEZONE)) {
+                    try {
+                        ZoneId.of(timeZone);
+                    } catch (Exception e) {
+                        return new IllegalStateException("Invalid timeZone() on " + schedule, e);
+                    }
                 }
             }
 
@@ -405,7 +621,7 @@ public class SchedulerProcessor {
         AnnotationValue skipExecutionIfValue = schedule.value("skipExecutionIf");
         if (skipExecutionIfValue != null) {
             DotName skipPredicate = skipExecutionIfValue.asClass().name();
-            if (!SKIP_NEVER_NAME.equals(skipPredicate)
+            if (!SchedulerDotNames.SKIP_NEVER_NAME.equals(skipPredicate)
                     && validationContext.beans().withBeanType(skipPredicate).collect().size() != 1) {
                 String message = String.format("There must be exactly one bean that matches the skip predicate: \"%s\" on: %s",
                         skipPredicate, schedule);
@@ -414,6 +630,22 @@ public class SchedulerProcessor {
         }
 
         return null;
+    }
+
+    @BuildStep
+    UnremovableBeanBuildItem unremoveableSkipPredicates() {
+        return new UnremovableBeanBuildItem(new UnremovableBeanBuildItem.BeanTypeExclusion(SchedulerDotNames.SKIP_PREDICATE));
+    }
+
+    @BuildStep
+    void produceCoroutineScope(BuildProducer<AdditionalBeanBuildItem> buildItemBuildProducer) {
+        if (!QuarkusClassLoader.isClassPresentAtRuntime("kotlinx.coroutines.CoroutineScope")) {
+            return;
+        }
+
+        buildItemBuildProducer.produce(AdditionalBeanBuildItem.builder()
+                .addBeanClass("io.quarkus.scheduler.kotlin.runtime.ApplicationCoroutineScope")
+                .setUnremovable().build());
     }
 
 }
