@@ -1,36 +1,32 @@
 package io.quarkus.security.deployment;
 
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
 import java.util.Set;
 
-import javax.annotation.security.DenyAll;
-import javax.annotation.security.PermitAll;
-import javax.annotation.security.RolesAllowed;
-
-import org.jboss.jandex.DotName;
+import jakarta.annotation.security.DenyAll;
+import jakarta.annotation.security.PermitAll;
+import jakarta.annotation.security.RolesAllowed;
 
 import io.quarkus.arc.processor.InterceptorBindingRegistrar;
 import io.quarkus.security.Authenticated;
+import io.quarkus.security.PermissionsAllowed;
 
 /**
  * @author Michal Szynkiewicz, michal.l.szynkiewicz@gmail.com
  */
 public class SecurityAnnotationsRegistrar implements InterceptorBindingRegistrar {
 
-    public static final Map<DotName, Set<String>> SECURITY_BINDINGS = new HashMap<>();
-
-    static {
-        // keep the contents the same as in io.quarkus.resteasy.deployment.SecurityTransformerUtils
-        SECURITY_BINDINGS.put(DotName.createSimple(RolesAllowed.class.getName()), Collections.singleton("value"));
-        SECURITY_BINDINGS.put(DotName.createSimple(Authenticated.class.getName()), Collections.emptySet());
-        SECURITY_BINDINGS.put(DotName.createSimple(DenyAll.class.getName()), Collections.emptySet());
-        SECURITY_BINDINGS.put(DotName.createSimple(PermitAll.class.getName()), Collections.emptySet());
-    }
+    static final List<InterceptorBinding> SECURITY_BINDINGS = List.of(
+            // keep the contents the same as in io.quarkus.resteasy.deployment.SecurityTransformerUtils
+            InterceptorBinding.of(RolesAllowed.class, Collections.singleton("value")),
+            InterceptorBinding.of(PermissionsAllowed.class, Set.of("value", "params", "permission", "inclusive")),
+            InterceptorBinding.of(Authenticated.class),
+            InterceptorBinding.of(DenyAll.class),
+            InterceptorBinding.of(PermitAll.class));
 
     @Override
-    public Map<DotName, Set<String>> registerAdditionalBindings() {
+    public List<InterceptorBinding> getAdditionalBindings() {
         return SECURITY_BINDINGS;
     }
 }
