@@ -6,8 +6,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.servlet.MultipartConfigElement;
-import javax.servlet.Servlet;
+import jakarta.servlet.MultipartConfigElement;
+import jakarta.servlet.Servlet;
 
 import io.quarkus.builder.item.MultiBuildItem;
 import io.undertow.servlet.api.InstanceFactory;
@@ -28,7 +28,7 @@ public final class ServletBuildItem extends MultiBuildItem {
         this.servletClass = builder.servletClass;
         this.loadOnStartup = builder.loadOnStartup;
         this.asyncSupported = builder.asyncSupported;
-        this.mappings = Collections.unmodifiableList(new ArrayList<>(builder.mappings));
+        this.mappings = List.copyOf(builder.mappings);
         this.instanceFactory = builder.instanceFactory;
         this.initParams = Collections.unmodifiableMap(new HashMap<>(builder.initParams));
         this.multipartConfig = builder.multipartConfig;
