@@ -1,19 +1,8 @@
 package io.quarkus.arc.impl;
 
-import io.quarkus.arc.Arc;
-import io.quarkus.arc.ArcContainer;
-import io.quarkus.arc.Components;
-import io.quarkus.arc.ComponentsProvider;
-import io.quarkus.arc.InjectableBean;
-import io.quarkus.arc.InjectableContext;
-import io.quarkus.arc.InjectableInstance;
-import io.quarkus.arc.InjectableInterceptor;
-import io.quarkus.arc.InjectableObserverMethod;
-import io.quarkus.arc.InstanceHandle;
-import io.quarkus.arc.ManagedContext;
-import io.quarkus.arc.RemovedBean;
-import io.quarkus.arc.ResourceReferenceProvider;
-import io.quarkus.arc.impl.ArcCDIProvider.ArcCDI;
+import static java.util.function.Predicate.not;
+
+import java.lang.StackWalker.StackFrame;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
 import java.lang.reflect.TypeVariable;
@@ -21,10 +10,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -34,30 +22,54 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import javax.enterprise.context.ApplicationScoped;
-import javax.enterprise.context.BeforeDestroyed;
-import javax.enterprise.context.Dependent;
-import javax.enterprise.context.Destroyed;
-import javax.enterprise.context.Initialized;
-import javax.enterprise.context.NormalScope;
-import javax.enterprise.event.Event;
-import javax.enterprise.inject.AmbiguousResolutionException;
-import javax.enterprise.inject.Any;
-import javax.enterprise.inject.Default;
-import javax.enterprise.inject.Instance;
-import javax.enterprise.inject.spi.Bean;
-import javax.enterprise.inject.spi.BeanManager;
-import javax.enterprise.inject.spi.CDI;
-import javax.enterprise.inject.spi.InjectionPoint;
-import javax.enterprise.inject.spi.InterceptionType;
-import javax.enterprise.inject.spi.Interceptor;
-import javax.enterprise.util.TypeLiteral;
-import javax.inject.Scope;
-import javax.inject.Singleton;
+import java.util.stream.Stream;
+
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.context.BeforeDestroyed;
+import jakarta.enterprise.context.Dependent;
+import jakarta.enterprise.context.Destroyed;
+import jakarta.enterprise.context.Initialized;
+import jakarta.enterprise.context.NormalScope;
+import jakarta.enterprise.context.RequestScoped;
+import jakarta.enterprise.event.Event;
+import jakarta.enterprise.inject.AmbiguousResolutionException;
+import jakarta.enterprise.inject.Any;
+import jakarta.enterprise.inject.Default;
+import jakarta.enterprise.inject.Instance;
+import jakarta.enterprise.inject.spi.Bean;
+import jakarta.enterprise.inject.spi.BeanManager;
+import jakarta.enterprise.inject.spi.CDI;
+import jakarta.enterprise.inject.spi.Decorator;
+import jakarta.enterprise.inject.spi.InjectionPoint;
+import jakarta.enterprise.inject.spi.InterceptionType;
+import jakarta.enterprise.inject.spi.Interceptor;
+import jakarta.enterprise.util.TypeLiteral;
+import jakarta.inject.Scope;
+import jakarta.inject.Singleton;
+
 import org.jboss.logging.Logger;
+
+import io.quarkus.arc.Arc;
+import io.quarkus.arc.ArcContainer;
+import io.quarkus.arc.Components;
+import io.quarkus.arc.ComponentsProvider;
+import io.quarkus.arc.CurrentContextFactory;
+import io.quarkus.arc.InjectableBean;
+import io.quarkus.arc.InjectableContext;
+import io.quarkus.arc.InjectableDecorator;
+import io.quarkus.arc.InjectableInstance;
+import io.quarkus.arc.InjectableInterceptor;
+import io.quarkus.arc.InjectableObserverMethod;
+import io.quarkus.arc.InstanceHandle;
+import io.quarkus.arc.ManagedContext;
+import io.quarkus.arc.RemovedBean;
+import io.quarkus.arc.ResourceReferenceProvider;
+import io.quarkus.arc.impl.ArcCDIProvider.ArcCDI;
+import io.quarkus.arc.impl.EventImpl.Notifier;
 
 public class ArcContainerImpl implements ArcContainer {
 
@@ -69,75 +81,82 @@ public class ArcContainerImpl implements ArcContainer {
     private final AtomicBoolean running;
 
     private final List<InjectableBean<?>> beans;
-    private final List<RemovedBean> removedBeans;
+    private final Map<String, List<InjectableBean<?>>> beansByRawType;
+    private final LazyValue<List<RemovedBean>> removedBeans;
     private final List<InjectableInterceptor<?>> interceptors;
+    private final List<InjectableDecorator<?>> decorators;
     private final List<InjectableObserverMethod<?>> observers;
-    private final Map<Class<? extends Annotation>, Set<Annotation>> transitiveInterceptorBindings;
-    private final Map<String, Set<String>> qualifierNonbindingMembers;
-
-    private final Map<Class<? extends Annotation>, Collection<InjectableContext>> contexts;
-    private final ManagedContext requestContext;
-    private final InjectableContext applicationContext;
-    private final InjectableContext singletonContext;
-
+    private final Contexts contexts;
     private final ComputingCache<Resolvable, Set<InjectableBean<?>>> resolved;
     private final ComputingCache<String, InjectableBean<?>> beansById;
     private final ComputingCache<String, Set<InjectableBean<?>>> beansByName;
 
-    private final List<ResourceReferenceProvider> resourceProviders;
+    private final ArrayList<ResourceReferenceProvider> resourceProviders;
 
     final InstanceImpl<Object> instance;
+    final Qualifiers registeredQualifiers;
+    final InterceptorBindings registeredInterceptorBindings;
 
     private volatile ExecutorService executorService;
 
-    public ArcContainerImpl() {
-        id = "" + ID_GENERATOR.incrementAndGet();
+    private final CurrentContextFactory currentContextFactory;
+
+    private final boolean strictMode;
+
+    public ArcContainerImpl(CurrentContextFactory currentContextFactory, boolean strictMode, boolean optimizeContexts) {
+        this.strictMode = strictMode;
+        id = String.valueOf(ID_GENERATOR.incrementAndGet());
         running = new AtomicBoolean(true);
-        beans = new ArrayList<>();
-        removedBeans = new ArrayList<>();
-        interceptors = new ArrayList<>();
-        observers = new ArrayList<>();
-        transitiveInterceptorBindings = new HashMap<>();
-        qualifierNonbindingMembers = new HashMap<>();
+        List<InjectableBean<?>> beans = new ArrayList<>();
+        Map<String, List<InjectableBean<?>>> beansByRawType = new HashMap<>();
+        List<Supplier<Collection<RemovedBean>>> removedBeans = new ArrayList<>();
+        List<InjectableInterceptor<?>> interceptors = new ArrayList<>();
+        List<InjectableDecorator<?>> decorators = new ArrayList<>();
+        List<InjectableObserverMethod<?>> observers = new ArrayList<>();
+        Set<String> interceptorBindings = new HashSet<>();
+        Map<Class<? extends Annotation>, Set<Annotation>> transitiveInterceptorBindings = new HashMap<>();
+        Map<String, Set<String>> qualifierNonbindingMembers = new HashMap<>();
+        Set<String> qualifiers = new HashSet<>();
+        Supplier<ContextInstances> applicationContextInstances = null;
+        Supplier<ContextInstances> requestContextInstances = null;
+        this.currentContextFactory = currentContextFactory == null ? new ThreadLocalCurrentContextFactory()
+                : currentContextFactory;
 
-        applicationContext = new ApplicationContext();
-        singletonContext = new SingletonContext();
-        requestContext = new RequestContext();
-        contexts = new HashMap<>();
-        putContext(requestContext);
-        putContext(applicationContext);
-        putContext(singletonContext);
-
+        List<Components> components = new ArrayList<>();
         for (ComponentsProvider componentsProvider : ServiceLoader.load(ComponentsProvider.class)) {
-            Components components = componentsProvider.getComponents();
-            for (InjectableBean<?> bean : components.getBeans()) {
+            components.add(componentsProvider.getComponents());
+        }
+
+        for (Components c : components) {
+            for (InjectableBean<?> bean : c.getBeans()) {
                 if (bean instanceof InjectableInterceptor) {
                     interceptors.add((InjectableInterceptor<?>) bean);
+                } else if (bean instanceof InjectableDecorator) {
+                    decorators.add((InjectableDecorator<?>) bean);
                 } else {
                     beans.add(bean);
+                    precomputeBeanRawTypes(beansByRawType, bean);
                 }
             }
-            removedBeans.addAll(components.getRemovedBeans());
-            observers.addAll(components.getObservers());
-            // Add custom contexts
-            for (InjectableContext context : components.getContexts()) {
-                if (ApplicationScoped.class.equals(context.getScope())) {
-                    throw new IllegalStateException(
-                            "Failed to register a context - built-in application context is always active: " + context);
-                }
-                if (Singleton.class.equals(context.getScope())) {
-                    throw new IllegalStateException(
-                            "Failed to register a context - built-in singleton context is always active: " + context);
-                }
-                putContext(context);
+            removedBeans.add(c.getRemovedBeans());
+            observers.addAll(c.getObservers());
+            interceptorBindings.addAll(c.getInterceptorBindings());
+            transitiveInterceptorBindings.putAll(c.getTransitiveInterceptorBindings());
+            qualifierNonbindingMembers.putAll(c.getQualifierNonbindingMembers());
+            qualifiers.addAll(c.getQualifiers());
+            if (applicationContextInstances == null) {
+                applicationContextInstances = c.getContextInstances().get(ApplicationScoped.class);
             }
-            transitiveInterceptorBindings.putAll(components.getTransitiveInterceptorBindings());
-            qualifierNonbindingMembers.putAll(components.getQualifierNonbindingMembers());
+            if (requestContextInstances == null) {
+                requestContextInstances = c.getContextInstances().get(RequestScoped.class);
+            }
         }
-        // register built-in beans
-        addBuiltInBeans();
 
-        Collections.sort(interceptors, (i1, i2) -> Integer.compare(i2.getPriority(), i1.getPriority()));
+        // register built-in beans
+        addBuiltInBeans(beans, beansByRawType);
+
+        interceptors.sort(Comparator.comparingInt(InjectableInterceptor::getPriority));
+        decorators.sort(Comparator.comparingInt(InjectableDecorator::getPriority));
 
         resolved = new ComputingCache<>(this::resolve);
         beansById = new ComputingCache<>(this::findById);
@@ -146,35 +165,109 @@ public class ArcContainerImpl implements ArcContainer {
         for (ResourceReferenceProvider resourceProvider : ServiceLoader.load(ResourceReferenceProvider.class)) {
             resourceProviders.add(resourceProvider);
         }
+        resourceProviders.trimToSize();
 
-        instance = InstanceImpl.of(Object.class, Collections.emptySet());
+        instance = InstanceImpl.forGlobalEntrypoint(Object.class, Collections.emptySet());
+
+        this.beans = List.copyOf(beans);
+        this.beansByRawType = Map.copyOf(beansByRawType);
+        // Trim the size of the non-singleton lists
+        this.beansByRawType.forEach(new BiConsumer<String, List<InjectableBean<?>>>() {
+            @Override
+            public void accept(String key, List<InjectableBean<?>> val) {
+                if (val.size() > 1) {
+                    ((ArrayList<InjectableBean<?>>) val).trimToSize();
+                }
+            }
+        });
+
+        this.interceptors = List.copyOf(interceptors);
+        this.decorators = List.copyOf(decorators);
+        this.observers = List.copyOf(observers);
+        this.removedBeans = new LazyValue<>(new Supplier<List<RemovedBean>>() {
+            @Override
+            public List<RemovedBean> get() {
+                List<RemovedBean> removed = new ArrayList<>();
+                for (Supplier<Collection<RemovedBean>> supplier : removedBeans) {
+                    removed.addAll(supplier.get());
+                }
+                LOGGER.debugf("Loaded %s removed beans lazily", removed.size());
+                return List.copyOf(removed);
+            }
+        });
+        this.registeredQualifiers = new Qualifiers(qualifiers, qualifierNonbindingMembers);
+        this.registeredInterceptorBindings = new InterceptorBindings(interceptorBindings, transitiveInterceptorBindings);
+
+        ApplicationContext applicationContext = applicationContextInstances != null
+                ? new ApplicationContext(applicationContextInstances.get())
+                : new ApplicationContext();
+        RequestContext requestContext = new RequestContext(this.currentContextFactory.create(RequestScoped.class),
+                notifierOrNull(Set.of(Initialized.Literal.REQUEST, Any.Literal.INSTANCE)),
+                notifierOrNull(Set.of(BeforeDestroyed.Literal.REQUEST, Any.Literal.INSTANCE)),
+                notifierOrNull(Set.of(Destroyed.Literal.REQUEST, Any.Literal.INSTANCE)),
+                requestContextInstances != null ? requestContextInstances : ComputingCacheContextInstances::new);
+
+        Contexts.Builder contextsBuilder = new Contexts.Builder(
+                requestContext,
+                applicationContext,
+                new SingletonContext(),
+                new DependentContext());
+
+        // Add custom contexts
+        for (Components c : components) {
+            for (InjectableContext context : c.getContexts()) {
+                if (ApplicationScoped.class.equals(context.getScope())) {
+                    throw new IllegalStateException(
+                            "Failed to register a context - built-in application context is always active: " + context);
+                }
+                if (Singleton.class.equals(context.getScope())) {
+                    throw new IllegalStateException(
+                            "Failed to register a context - built-in singleton context is always active: " + context);
+                }
+                contextsBuilder.putContext(context);
+            }
+        }
+
+        this.contexts = contextsBuilder.build();
     }
 
-    private void putContext(InjectableContext context) {
-        Collection<InjectableContext> values = contexts.get(context.getScope());
-        if (values == null) {
-            contexts.put(context.getScope(), Collections.singleton(context));
-        } else {
-            List<InjectableContext> multi = new LinkedList<>(values);
-            multi.add(context);
-            contexts.put(context.getScope(), Collections.unmodifiableList(multi));
+    static void precomputeBeanRawTypes(Map<String, List<InjectableBean<?>>> map, InjectableBean<?> bean) {
+        for (Type type : bean.getTypes()) {
+            if (Object.class.equals(type)) {
+                continue;
+            }
+            Class<?> rawType = Types.getRawType(type);
+            if (rawType == null) {
+                continue;
+            }
+            rawType = Types.boxedClass(rawType);
+            String key = rawType.getName();
+            List<InjectableBean<?>> match = map.get(key);
+            if (match == null) {
+                // very often a singleton list will be used
+                map.put(key, List.of(bean));
+            } else {
+                // we don't expect large lists so this should be fine performance wise
+                if (match.contains(bean)) {
+                    continue;
+                }
+                if (match.size() == 1) {
+                    List<InjectableBean<?>> newMatch = new ArrayList<>();
+                    newMatch.add(match.get(0));
+                    newMatch.add(bean);
+                    map.put(key, newMatch);
+                } else {
+                    match.add(bean);
+                }
+            }
         }
     }
 
-    private void addBuiltInBeans() {
-        // BeanManager, Event<?>, Instance<?>
-        beans.add(new BeanManagerBean());
-        beans.add(new EventBean());
-        beans.add(InstanceBean.INSTANCE);
-    }
-
     public void init() {
-        requireRunning();
         // Fire an event with qualifier @Initialized(ApplicationScoped.class)
-        Set<Annotation> qualifiers = new HashSet<>(4);
-        qualifiers.add(Initialized.Literal.APPLICATION);
-        qualifiers.add(Any.Literal.INSTANCE);
-        EventImpl.createNotifier(Object.class, Object.class, qualifiers, this, false).notify(toString());
+        Set<Annotation> qualifiers = Set.of(Initialized.Literal.APPLICATION, Any.Literal.INSTANCE);
+        EventImpl.createNotifier(Object.class, Object.class, qualifiers, this, false, null)
+                .notify("@Initialized(ApplicationScoped.class)");
         // Configure CDIProvider used for CDI.current()
         CDI.setCDIProvider(new ArcCDIProvider());
         LOGGER.debugf("ArC DI container initialized [beans=%s, observers=%s]", beans.size(), observers.size());
@@ -182,80 +275,51 @@ public class ArcContainerImpl implements ArcContainer {
 
     @Override
     public InjectableContext getActiveContext(Class<? extends Annotation> scopeType) {
-        requireRunning();
-        // Application/Singleton context is always active
-        if (ApplicationScoped.class.equals(scopeType)) {
-            return applicationContext;
-        } else if (Singleton.class.equals(scopeType)) {
-            return singletonContext;
-        }
-        Collection<InjectableContext> contextsForScope = contexts.get(scopeType);
-        InjectableContext selected = null;
-        if (contextsForScope != null) {
-            for (InjectableContext context : contextsForScope) {
-                if (context.isActive()) {
-                    if (selected != null) {
-                        throw new IllegalArgumentException(
-                                "More than one context object for the given scope: " + selected + " " + context);
-                    }
-                    selected = context;
-                }
-            }
-        }
-        return selected;
+        return contexts.getActiveContext(scopeType);
     }
 
     @Override
-    public Collection<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
-        requireRunning();
-        return contexts.getOrDefault(scopeType, Collections.emptyList());
+    public List<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
+        return contexts.getContexts(scopeType);
     }
 
     @Override
     public Set<Class<? extends Annotation>> getScopes() {
-        return contexts.keySet().stream().collect(Collectors.toSet());
+        return contexts.scopes;
     }
 
     @Override
     public <T> InstanceHandle<T> instance(Class<T> type, Annotation... qualifiers) {
-        requireRunning();
         return instanceHandle(type, qualifiers);
     }
 
     @Override
     public <T> InstanceHandle<T> instance(TypeLiteral<T> type, Annotation... qualifiers) {
-        requireRunning();
         return instanceHandle(type.getType(), qualifiers);
     }
 
     @Override
     public <X> InstanceHandle<X> instance(Type type, Annotation... qualifiers) {
-        requireRunning();
         return instanceHandle(type, qualifiers);
     }
 
-    @SuppressWarnings("unchecked")
     @Override
-    public <T> Supplier<InstanceHandle<T>> instanceSupplier(Class<T> type, Annotation... qualifiers) {
-        requireRunning();
-
+    public <T> Supplier<InstanceHandle<T>> beanInstanceSupplier(Class<T> type, Annotation... qualifiers) {
         if (qualifiers == null || qualifiers.length == 0) {
             qualifiers = new Annotation[] { Default.Literal.INSTANCE };
         }
-        Set<InjectableBean<?>> resolvedBeans = resolved.getValue(new Resolvable(type, qualifiers));
+        Resolvable resolvable = new Resolvable(type, qualifiers);
+        Set<InjectableBean<?>> resolvedBeans = resolved.getValue(resolvable);
+        if (resolvedBeans.isEmpty()) {
+            scanRemovedBeans(resolvable);
+        }
         Set<InjectableBean<?>> filteredBean = resolvedBeans;
         if (resolvedBeans.size() > 1) {
-            //if there are multiple beans we look for an exact match
-            //this method is only called with the exact type required
-            //so ignoring subclasses is the correct behaviour
-            filteredBean = new HashSet<>();
-            for (InjectableBean<?> i : resolvedBeans) {
-                if (i.getBeanClass().equals(type)) {
-                    filteredBean.add(i);
-                }
-            }
+            throw new AmbiguousResolutionException("Beans: " + resolvedBeans);
+
         }
-        InjectableBean<T> bean = filteredBean.isEmpty() || filteredBean.size() > 1 ? null
+        @SuppressWarnings("unchecked")
+        InjectableBean<T> bean = filteredBean.size() != 1 ? null
                 : (InjectableBean<T>) filteredBean.iterator().next();
         if (bean == null) {
             return null;
@@ -271,8 +335,7 @@ public class ArcContainerImpl implements ArcContainer {
     @Override
     public <T> InstanceHandle<T> instance(InjectableBean<T> bean) {
         Objects.requireNonNull(bean);
-        requireRunning();
-        return (InstanceHandle<T>) beanInstanceHandle(bean, null);
+        return beanInstanceHandle(bean, null);
     }
 
     @Override
@@ -286,6 +349,22 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     @Override
+    public <T> List<InstanceHandle<T>> listAll(Class<T> type, Annotation... qualifiers) {
+        return listAll((Type) type, qualifiers);
+    }
+
+    @Override
+    public <T> List<InstanceHandle<T>> listAll(TypeLiteral<T> type, Annotation... qualifiers) {
+        return listAll(type.getType(), qualifiers);
+    }
+
+    @Override
+    public <X> List<InstanceHandle<X>> listAll(Type type, Annotation... qualifiers) {
+        return Instances.listOfHandles(CurrentInjectionPointProvider.EMPTY_SUPPLIER, type, Set.of(qualifiers),
+                new CreationalContextImpl<>(null));
+    }
+
+    @Override
     public boolean isRunning() {
         return running.get();
     }
@@ -294,25 +373,29 @@ public class ArcContainerImpl implements ArcContainer {
     @Override
     public <T> InjectableBean<T> bean(String beanIdentifier) {
         Objects.requireNonNull(beanIdentifier);
-        requireRunning();
         return (InjectableBean<T>) beansById.getValue(beanIdentifier);
+    }
+
+    @Override
+    public InjectableBean<?> namedBean(String name) {
+        Objects.requireNonNull(name);
+        Set<InjectableBean<?>> found = beansByName.getValue(name);
+        return found.size() == 1 ? found.iterator().next() : null;
     }
 
     @SuppressWarnings("unchecked")
     @Override
     public <T> InstanceHandle<T> instance(String name) {
         Objects.requireNonNull(name);
-        requireRunning();
         Set<InjectableBean<?>> resolvedBeans = beansByName.getValue(name);
-        return resolvedBeans.isEmpty() || resolvedBeans.size() > 1 ? InstanceHandleImpl.unavailable()
+        return resolvedBeans.size() != 1 ? EagerInstanceHandle.unavailable()
                 : (InstanceHandle<T>) beanInstanceHandle(resolvedBeans.iterator()
                         .next(), null);
     }
 
     @Override
     public ManagedContext requestContext() {
-        requireRunning();
-        return requestContext;
+        return contexts.requestContext;
     }
 
     @Override
@@ -331,10 +414,20 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     @Override
+    public CurrentContextFactory getCurrentContextFactory() {
+        return currentContextFactory;
+    }
+
+    @Override
+    public boolean strictCompatibility() {
+        return strictMode;
+    }
+
+    @Override
     public String toString() {
         return "ArcContainerImpl [id=" + id + ", running=" + running + ", beans=" + beans.size() + ", observers="
                 + observers.size() + ", scopes="
-                + getScopes() + "]";
+                + contexts.scopes.size() + "]";
     }
 
     public synchronized void shutdown() {
@@ -346,36 +439,33 @@ public class ArcContainerImpl implements ArcContainer {
                 arcCdi.destroy();
             }
             // Terminate request context if for any reason is still active
-            requestContext.terminate();
+            contexts.requestContext.terminate();
             // Fire an event with qualifier @BeforeDestroyed(ApplicationScoped.class)
             Set<Annotation> beforeDestroyQualifiers = new HashSet<>(4);
             beforeDestroyQualifiers.add(BeforeDestroyed.Literal.APPLICATION);
             beforeDestroyQualifiers.add(Any.Literal.INSTANCE);
             try {
-                EventImpl.createNotifier(Object.class, Object.class, beforeDestroyQualifiers, this, false).notify(toString());
+                EventImpl.createNotifier(Object.class, Object.class, beforeDestroyQualifiers, this, false, null)
+                        .notify(toString());
             } catch (Exception e) {
                 LOGGER.warn("An error occurred during delivery of the @BeforeDestroyed(ApplicationScoped.class) event", e);
             }
             // Destroy contexts
-            applicationContext.destroy();
+            contexts.applicationContext.destroy();
             // Fire an event with qualifier @Destroyed(ApplicationScoped.class)
             Set<Annotation> destroyQualifiers = new HashSet<>(4);
             destroyQualifiers.add(Destroyed.Literal.APPLICATION);
             destroyQualifiers.add(Any.Literal.INSTANCE);
             try {
-                EventImpl.createNotifier(Object.class, Object.class, destroyQualifiers, this, false).notify(toString());
+                EventImpl.createNotifier(Object.class, Object.class, destroyQualifiers, this, false, null).notify(toString());
             } catch (Exception e) {
                 LOGGER.warn("An error occurred during delivery of the @Destroyed(ApplicationScoped.class) event", e);
             }
-            singletonContext.destroy();
+            contexts.singletonContext.destroy();
 
             // Clear caches
             Reflections.clearCaches();
-            contexts.clear();
-            beans.clear();
-            removedBeans.clear();
             resolved.clear();
-            observers.clear();
             running.set(false);
             InterceptedStaticMethods.clear();
 
@@ -384,19 +474,23 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     public List<InjectableBean<?>> getBeans() {
-        return new ArrayList<>(beans);
+        return beans;
     }
 
     public List<RemovedBean> getRemovedBeans() {
-        return Collections.unmodifiableList(removedBeans);
+        return removedBeans.get();
     }
 
     public List<InjectableInterceptor<?>> getInterceptors() {
-        return new ArrayList<>(interceptors);
+        return interceptors;
+    }
+
+    public List<InjectableDecorator<?>> getDecorators() {
+        return decorators;
     }
 
     public List<InjectableObserverMethod<?>> getObservers() {
-        return new ArrayList<>(observers);
+        return observers;
     }
 
     InstanceHandle<Object> getResource(Type type, Set<Annotation> annotations) {
@@ -409,25 +503,54 @@ public class ArcContainerImpl implements ArcContainer {
         return null;
     }
 
+    private Notifier<Object> notifierOrNull(Set<Annotation> qualifiers) {
+        Notifier<Object> notifier = EventImpl.createNotifier(Object.class, Object.class,
+                qualifiers, this, false, null);
+        return notifier.isEmpty() ? null : notifier;
+    }
+
+    private static void addBuiltInBeans(List<InjectableBean<?>> beans, Map<String, List<InjectableBean<?>>> beansByRawType) {
+        // BeanManager, Event<?>, Instance<?>, InjectionPoint
+        BeanManagerBean beanManagerBean = new BeanManagerBean();
+        beans.add(beanManagerBean);
+        precomputeBeanRawTypes(beansByRawType, beanManagerBean);
+        EventBean eventBean = new EventBean();
+        beans.add(eventBean);
+        precomputeBeanRawTypes(beansByRawType, eventBean);
+        beans.add(InstanceBean.INSTANCE);
+        precomputeBeanRawTypes(beansByRawType, InstanceBean.INSTANCE);
+        InjectionPointBean injectionPointBean = new InjectionPointBean();
+        beans.add(injectionPointBean);
+        precomputeBeanRawTypes(beansByRawType, injectionPointBean);
+    }
+
     private <T> InstanceHandle<T> instanceHandle(Type type, Annotation... qualifiers) {
         return beanInstanceHandle(getBean(type, qualifiers), null);
     }
 
     static <T> InstanceHandle<T> beanInstanceHandle(InjectableBean<T> bean, CreationalContextImpl<T> parentContext,
             boolean resetCurrentInjectionPoint, Consumer<T> destroyLogic) {
+        return beanInstanceHandle(bean, parentContext, resetCurrentInjectionPoint, destroyLogic, false);
+    }
+
+    static <T> InstanceHandle<T> beanInstanceHandle(InjectableBean<T> bean, CreationalContextImpl<T> parentContext,
+            boolean resetCurrentInjectionPoint, Consumer<T> destroyLogic, boolean useParentCreationalContextDirectly) {
         if (bean != null) {
             if (parentContext == null && Dependent.class.equals(bean.getScope())) {
                 parentContext = new CreationalContextImpl<>(null);
             }
-            CreationalContextImpl<T> creationalContext = parentContext != null ? parentContext.child(bean)
-                    : new CreationalContextImpl<>(bean);
+            CreationalContextImpl<T> creationalContext;
+            if (parentContext != null) {
+                creationalContext = useParentCreationalContextDirectly ? parentContext : parentContext.child(bean);
+            } else {
+                creationalContext = new CreationalContextImpl<>(bean);
+            }
             InjectionPoint prev = null;
             if (resetCurrentInjectionPoint) {
                 prev = InjectionPointProvider.set(CurrentInjectionPointProvider.EMPTY);
             }
-
             try {
-                return new InstanceHandleImpl<T>(bean, bean.get(creationalContext), creationalContext, parentContext,
+                return new EagerInstanceHandle<>(bean, bean.get(creationalContext), creationalContext, parentContext,
                         destroyLogic);
             } finally {
                 if (resetCurrentInjectionPoint) {
@@ -435,11 +558,11 @@ public class ArcContainerImpl implements ArcContainer {
                 }
             }
         } else {
-            return InstanceHandleImpl.unavailable();
+            return EagerInstanceHandle.unavailable();
         }
     }
 
-    <T> InstanceHandle<T> beanInstanceHandle(InjectableBean<T> bean, CreationalContextImpl<T> parentContext) {
+    static <T> InstanceHandle<T> beanInstanceHandle(InjectableBean<T> bean, CreationalContextImpl<T> parentContext) {
         return beanInstanceHandle(bean, parentContext, true, null);
     }
 
@@ -448,19 +571,27 @@ public class ArcContainerImpl implements ArcContainer {
         if (qualifiers == null || qualifiers.length == 0) {
             qualifiers = new Annotation[] { Default.Literal.INSTANCE };
         } else {
-            Qualifiers.verify(qualifiers);
+            registeredQualifiers.verify(qualifiers);
         }
-        Set<InjectableBean<?>> resolvedBeans = resolved.getValue(new Resolvable(requiredType, qualifiers));
-        return resolvedBeans.isEmpty() || resolvedBeans.size() > 1 ? null : (InjectableBean<T>) resolvedBeans.iterator().next();
+        Resolvable resolvable = new Resolvable(requiredType, qualifiers);
+        Set<InjectableBean<?>> resolvedBeans = resolved.getValue(resolvable);
+        if (resolvedBeans.isEmpty()) {
+            scanRemovedBeans(resolvable);
+        }
+        return resolvedBeans.size() != 1 ? null : (InjectableBean<T>) resolvedBeans.iterator().next();
     }
 
     Set<Bean<?>> getBeans(Type requiredType, Annotation... qualifiers) {
         if (requiredType instanceof TypeVariable) {
             throw new IllegalArgumentException("The given type is a type variable: " + requiredType);
         }
-        Qualifiers.verify(qualifiers);
+        if (qualifiers == null || qualifiers.length == 0) {
+            qualifiers = new Annotation[] { Default.Literal.INSTANCE };
+        } else {
+            registeredQualifiers.verify(qualifiers);
+        }
         // This method does not cache the results
-        return new HashSet<>(getMatchingBeans(new Resolvable(requiredType, qualifiers)));
+        return Set.of(getMatchingBeans(new Resolvable(requiredType, qualifiers)).toArray(new Bean<?>[] {}));
     }
 
     Set<Bean<?>> getBeans(String name) {
@@ -468,15 +599,11 @@ public class ArcContainerImpl implements ArcContainer {
         return new HashSet<>(getMatchingBeans(name));
     }
 
-    Map<Class<? extends Annotation>, Set<Annotation>> getTransitiveInterceptorBindings() {
-        return transitiveInterceptorBindings;
-    }
-
     boolean isScope(Class<? extends Annotation> annotationType) {
         if (annotationType.isAnnotationPresent(Scope.class) || annotationType.isAnnotationPresent(NormalScope.class)) {
             return true;
         }
-        for (Class<? extends Annotation> scopeType : contexts.keySet()) {
+        for (Class<? extends Annotation> scopeType : contexts.scopes) {
             if (scopeType.equals(annotationType)) {
                 return true;
             }
@@ -488,12 +615,10 @@ public class ArcContainerImpl implements ArcContainer {
         if (annotationType.isAnnotationPresent(NormalScope.class)) {
             return true;
         }
-        Collection<InjectableContext> injectableContexts = contexts.get(annotationType);
-        if (injectableContexts != null) {
-            for (InjectableContext context : injectableContexts) {
-                if (context.isNormal()) {
-                    return true;
-                }
+        List<InjectableContext> injectableContexts = contexts.getContexts(annotationType);
+        for (InjectableContext context : injectableContexts) {
+            if (context.isNormal()) {
+                return true;
             }
         }
         return false;
@@ -518,6 +643,11 @@ public class ArcContainerImpl implements ArcContainer {
                 return interceptorBean;
             }
         }
+        for (InjectableDecorator<?> decoratorBean : decorators) {
+            if (decoratorBean.getIdentifier().equals(identifier)) {
+                return decoratorBean;
+            }
+        }
         return null;
     }
 
@@ -529,8 +659,8 @@ public class ArcContainerImpl implements ArcContainer {
             return beans.iterator().next();
         } else {
             // Try to resolve the ambiguity
-            if (beans.stream().allMatch(b -> b instanceof InjectableBean)) {
-                List<InjectableBean<?>> matching = new ArrayList<>();
+            if (beans.stream().allMatch(InjectableBean.class::isInstance)) {
+                List<InjectableBean<?>> matching = new ArrayList<>(beans.size());
                 for (Bean<? extends X> bean : beans) {
                     matching.add((InjectableBean<? extends X>) bean);
                 }
@@ -542,11 +672,7 @@ public class ArcContainerImpl implements ArcContainer {
             } else {
                 // The set contains non-Arc beans - give our best effort
                 Set<Bean<? extends X>> resolved = new HashSet<>(beans);
-                for (Iterator<Bean<? extends X>> iterator = resolved.iterator(); iterator.hasNext();) {
-                    if (!iterator.next().isAlternative()) {
-                        iterator.remove();
-                    }
-                }
+                resolved.removeIf(not(Bean::isAlternative));
                 if (resolved.size() != 1) {
                     throw new AmbiguousResolutionException(resolved.toString());
                 }
@@ -559,46 +685,43 @@ public class ArcContainerImpl implements ArcContainer {
         if (matching.isEmpty()) {
             return Collections.emptySet();
         } else if (matching.size() == 1) {
-            return Collections.singleton(matching.get(0));
+            return Set.of(matching.get(0));
+        }
+        // Try to resolve the ambiguity and return the set of disambiguated beans
+
+        // First remove the default beans
+        List<InjectableBean<?>> nonDefault = new ArrayList<>(matching);
+        nonDefault.removeIf(InjectableBean::isDefaultBean);
+        if (nonDefault.isEmpty()) {
+            // All the matching beans were default
+            return Set.copyOf(matching);
+        } else if (nonDefault.size() == 1) {
+            return Set.of(nonDefault.get(0));
         }
 
-        // Try to resolve the ambiguity
-        List<InjectableBean<?>> resolved = new ArrayList<>(matching);
-
-        for (Iterator<InjectableBean<?>> iterator = resolved.iterator(); iterator.hasNext();) {
-            InjectableBean<?> beanInfo = iterator.next();
-            if (beanInfo.isDefaultBean()) {
-                iterator.remove();
-            }
-        }
-        if (resolved.size() == 1) {
-            return Collections.singleton(resolved.get(0));
-        }
-
-        for (Iterator<InjectableBean<?>> iterator = resolved.iterator(); iterator.hasNext();) {
-            InjectableBean<?> bean = iterator.next();
-            if (bean.getAlternativePriority() == null
-                    && (bean.getDeclaringBean() == null || bean.getDeclaringBean().getAlternativePriority() == null)) {
-                // Remove non-alternatives
-                iterator.remove();
-            }
-        }
-        if (resolved.size() == 1) {
-            return Collections.singleton(resolved.get(0));
-        } else if (resolved.size() > 1) {
-            resolved.sort(ArcContainerImpl::compareAlternativeBeans);
+        // More than one non-default bean remains - eliminate beans that don't have a priority
+        List<InjectableBean<?>> priorityBeans = new ArrayList<>(nonDefault);
+        priorityBeans.removeIf(not(ArcContainerImpl::isAlternativeOrDeclaredOnAlternative));
+        if (priorityBeans.isEmpty()) {
+            // No alternative/priority beans are present
+            return Set.copyOf(nonDefault);
+        } else if (priorityBeans.size() == 1) {
+            return Set.of(priorityBeans.get(0));
+        } else {
             // Keep only the highest priorities
-            Integer highest = getAlternativePriority(resolved.get(0));
-            for (Iterator<InjectableBean<?>> iterator = resolved.iterator(); iterator.hasNext();) {
-                if (!highest.equals(getAlternativePriority(iterator.next()))) {
-                    iterator.remove();
-                }
+            priorityBeans.sort(ArcContainerImpl::compareAlternativeBeans);
+            Integer highest = getAlternativePriority(priorityBeans.get(0));
+            priorityBeans.removeIf(bean -> !highest.equals(getAlternativePriority(bean)));
+            if (priorityBeans.size() == 1) {
+                return Set.of(priorityBeans.get(0));
             }
-            if (resolved.size() == 1) {
-                return Collections.singleton(resolved.get(0));
-            }
+            return Set.copyOf(priorityBeans);
         }
-        return new HashSet<>(matching);
+    }
+
+    private static boolean isAlternativeOrDeclaredOnAlternative(InjectableBean<?> bean) {
+        return bean.getAlternativePriority() != null
+                || bean.getDeclaringBean() != null && bean.getDeclaringBean().getAlternativePriority() != null;
     }
 
     private static Integer getAlternativePriority(InjectableBean<?> bean) {
@@ -610,40 +733,85 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     List<InjectableBean<?>> getMatchingBeans(Resolvable resolvable) {
-        List<InjectableBean<?>> matching = new LinkedList<>();
-        for (InjectableBean<?> bean : beans) {
+        List<InjectableBean<?>> matching = new ArrayList<>();
+        for (InjectableBean<?> bean : potentialBeans(resolvable.requiredType)) {
             if (matches(bean, resolvable.requiredType, resolvable.qualifiers)) {
                 matching.add(bean);
             }
         }
-        if (matching.isEmpty() && !removedBeans.isEmpty()) {
-            List<RemovedBean> removedMatching = new LinkedList<>();
-            for (RemovedBean removedBean : removedBeans) {
-                if (matches(removedBean.getTypes(), removedBean.getQualifiers(), resolvable.requiredType,
-                        resolvable.qualifiers)) {
-                    removedMatching.add(removedBean);
-                }
+        return matching;
+    }
+
+    Iterable<InjectableBean<?>> potentialBeans(Type type) {
+        if (!Object.class.equals(type)) {
+            Class<?> rawType = Types.getRawType(type);
+            if (rawType != null) {
+                List<InjectableBean<?>> match = beansByRawType.get(Types.boxedClass(rawType).getName());
+                return match == null ? List.of() : match;
             }
-            if (!removedMatching.isEmpty()) {
-                String separator = "====================";
-                String msg = "\n%1$s%1$s%1$s%1$s\n"
-                        + "CDI: programmatic lookup problem detected\n"
-                        + "-----------------------------------------\n"
-                        + "At least one bean matched the required type and qualifiers but was marked as unused and removed during build\n"
-                        + "Removed beans:\n\t- %2$s\n"
-                        + "Required type: %3$s\n"
-                        + "Required qualifiers: %4$s\n"
-                        + "Solutions:\n"
-                        + "\t- Application developers can eliminate false positives via the @Unremovable annotation\n"
-                        + "\t- Extensions can eliminate false positives via build items, e.g. using the UnremovableBeanBuildItem\n"
-                        + "\t- See also https://quarkus.io/guides/cdi-reference#remove_unused_beans\n"
-                        + "%1$s%1$s%1$s%1$s\n";
-                LOGGER.warnf(msg, separator,
-                        removedMatching.stream().map(Object::toString).collect(Collectors.joining("\n\t- ")),
-                        resolvable.requiredType, Arrays.toString(resolvable.qualifiers));
+        }
+        return beans;
+    }
+
+    List<RemovedBean> getMatchingRemovedBeans(Resolvable resolvable) {
+        List<RemovedBean> matching = new ArrayList<>();
+        for (RemovedBean removedBean : removedBeans.get()) {
+            if (matches(removedBean.getTypes(), removedBean.getQualifiers(), resolvable.requiredType,
+                    resolvable.qualifiers)) {
+                matching.add(removedBean);
             }
         }
         return matching;
+    }
+
+    void scanRemovedBeans(Type requiredType, Annotation... qualifiers) {
+        scanRemovedBeans(new Resolvable(requiredType, qualifiers));
+    }
+
+    void scanRemovedBeans(Resolvable resolvable) {
+        List<RemovedBean> removedMatching = getMatchingRemovedBeans(resolvable);
+        if (!removedMatching.isEmpty()) {
+            String separator = "====================";
+            String msg = "\n%1$s%1$s%1$s%1$s\n"
+                    + "CDI: programmatic lookup problem detected\n"
+                    + "-----------------------------------------\n"
+                    + "At least one bean matched the required type and qualifiers but was marked as unused and removed during build\n\n"
+                    + "Stack frame: %5$s\n"
+                    + "Required type: %3$s\n"
+                    + "Required qualifiers: %4$s\n"
+                    + "Removed beans:\n\t- %2$s\n"
+                    + "Solutions:\n"
+                    + "\t- Application developers can eliminate false positives via the @Unremovable annotation\n"
+                    + "\t- Extensions can eliminate false positives via build items, e.g. using the UnremovableBeanBuildItem\n"
+                    + "\t- See also https://quarkus.io/guides/cdi-reference#remove_unused_beans\n"
+                    + "\t- Enable the DEBUG log level to see the full stack trace\n"
+                    + "%1$s%1$s%1$s%1$s\n";
+            StackWalker walker = StackWalker.getInstance();
+            StackFrame frame = walker.walk(this::findCaller);
+            LOGGER.warnf(msg, separator,
+                    removedMatching.stream().map(Object::toString).collect(Collectors.joining("\n\t- ")),
+                    resolvable.requiredType, Arrays.toString(resolvable.qualifiers), frame != null ? frame : "n/a");
+            if (LOGGER.isDebugEnabled()) {
+                LOGGER.debug("\nCDI: programmatic lookup stack trace:\n" + walker.walk(this::collectStack));
+            }
+        }
+    }
+
+    private StackFrame findCaller(Stream<StackFrame> stream) {
+        return stream
+                .filter(this::isCallerFrame)
+                .findFirst().orElse(null);
+    }
+
+    private String collectStack(Stream<StackFrame> stream) {
+        return stream
+                .map(Object::toString)
+                .collect(Collectors.joining("\n\t"));
+    }
+
+    private boolean isCallerFrame(StackFrame frame) {
+        String className = frame.getClassName();
+        return !className.startsWith("io.quarkus.arc.impl");
     }
 
     List<InjectableBean<?>> getMatchingBeans(String name) {
@@ -671,22 +839,22 @@ public class ArcContainerImpl implements ArcContainer {
 
     @SuppressWarnings("unchecked")
     <T> List<InjectableObserverMethod<? super T>> resolveObservers(Type eventType, Set<Annotation> eventQualifiers) {
-        Qualifiers.verify(eventQualifiers);
+        registeredQualifiers.verify(eventQualifiers);
         if (observers.isEmpty()) {
             return Collections.emptyList();
         }
         Set<Type> eventTypes = new HierarchyDiscovery(eventType).getTypeClosure();
         List<InjectableObserverMethod<? super T>> resolvedObservers = new ArrayList<>();
         for (InjectableObserverMethod<?> observer : observers) {
-            if (EventTypeAssignabilityRules.matches(observer.getObservedType(), eventTypes)) {
+            if (EventTypeAssignabilityRules.instance().matches(observer.getObservedType(), eventTypes)) {
                 if (observer.getObservedQualifiers().isEmpty()
-                        || Qualifiers.isSubset(observer.getObservedQualifiers(), eventQualifiers, qualifierNonbindingMembers)) {
+                        || registeredQualifiers.isSubset(observer.getObservedQualifiers(), eventQualifiers)) {
                     resolvedObservers.add((InjectableObserverMethod<? super T>) observer);
                 }
             }
         }
         // Observers with smaller priority values are called first
-        Collections.sort(resolvedObservers, InjectableObserverMethod::compare);
+        resolvedObservers.sort(InjectableObserverMethod::compare);
         return resolvedObservers;
     }
 
@@ -697,11 +865,12 @@ public class ArcContainerImpl implements ArcContainer {
         if (interceptorBindings.length == 0) {
             throw new IllegalArgumentException("No interceptor bindings");
         }
+        registeredInterceptorBindings.verify(interceptorBindings);
         List<Interceptor<?>> interceptors = new ArrayList<>();
         List<Annotation> bindings = new ArrayList<>();
         for (Annotation binding : interceptorBindings) {
             bindings.add(binding);
-            Set<Annotation> transitive = transitiveInterceptorBindings.get(binding.annotationType());
+            Set<Annotation> transitive = registeredInterceptorBindings.getTransitive(binding.annotationType());
             if (transitive != null) {
                 bindings.addAll(transitive);
             }
@@ -714,11 +883,32 @@ public class ArcContainerImpl implements ArcContainer {
         return interceptors;
     }
 
+    List<Decorator<?>> resolveDecorators(Set<Type> types, Annotation... qualifiers) {
+        if (decorators.isEmpty()) {
+            return Collections.emptyList();
+        }
+        if (Objects.requireNonNull(types).isEmpty()) {
+            throw new IllegalArgumentException("The set of bean types must not be empty");
+        }
+        if (qualifiers == null || qualifiers.length == 0) {
+            qualifiers = new Annotation[] { Default.Literal.INSTANCE };
+        } else {
+            registeredQualifiers.verify(qualifiers);
+        }
+        List<Decorator<?>> decorators = new ArrayList<>();
+        for (InjectableDecorator<?> decorator : this.decorators) {
+            if (decoratorMatches(decorator.getDelegateType(), decorator.getDelegateQualifiers(), types, Set.of(qualifiers))) {
+                decorators.add(decorator);
+            }
+        }
+        return decorators;
+    }
+
     private boolean hasAllInterceptionBindings(InjectableInterceptor<?> interceptor, Iterable<Annotation> bindings) {
         // The method or constructor has all the interceptor bindings of the interceptor
         for (Annotation binding : interceptor.getInterceptorBindings()) {
             // The resolution rules are the same for qualifiers
-            if (!Qualifiers.hasQualifier(bindings, binding, qualifierNonbindingMembers)) {
+            if (!registeredQualifiers.hasQualifier(bindings, binding)) {
                 return false;
             }
         }
@@ -735,6 +925,8 @@ public class ArcContainerImpl implements ArcContainer {
     Set<InjectableBean<?>> getResolvedBeans(Type requiredType, Annotation... qualifiers) {
         if (qualifiers == null || qualifiers.length == 0) {
             qualifiers = new Annotation[] { Default.Literal.INSTANCE };
+        } else {
+            registeredQualifiers.verify(qualifiers);
         }
         return resolved.getValue(new Resolvable(requiredType, qualifiers));
     }
@@ -744,10 +936,18 @@ public class ArcContainerImpl implements ArcContainer {
     }
 
     private boolean matches(Set<Type> beanTypes, Set<Annotation> beanQualifiers, Type requiredType, Annotation... qualifiers) {
-        if (!BeanTypeAssignabilityRules.matches(requiredType, beanTypes)) {
+        if (!BeanTypeAssignabilityRules.instance().matches(requiredType, beanTypes)) {
             return false;
         }
-        return Qualifiers.hasQualifiers(beanQualifiers, qualifierNonbindingMembers, qualifiers);
+        return registeredQualifiers.hasQualifiers(beanQualifiers, qualifiers);
+    }
+
+    private boolean decoratorMatches(Type delegateType, Set<Annotation> delegateQualifiers, Set<Type> requiredTypes,
+            Set<Annotation> requiredQualifiers) {
+        if (!DelegateInjectionPointAssignabilityRules.instance().matches(delegateType, requiredTypes)) {
+            return false;
+        }
+        return registeredQualifiers.hasQualifiers(delegateQualifiers, requiredQualifiers.toArray(new Annotation[0]));
     }
 
     static ArcContainerImpl unwrap(ArcContainer container) {
@@ -792,26 +992,20 @@ public class ArcContainerImpl implements ArcContainer {
         return unwrap(Arc.container());
     }
 
-    private void requireRunning() {
-        if (!running.get()) {
-            throw new IllegalStateException("Container not running: " + toString());
-        }
-    }
-
     private static final class Resolvable {
 
-        private static final Set<Type> BUILT_IN_TYPES = new HashSet<>(Arrays.asList(Event.class, Instance.class));
-        private static final Annotation[] ANY_QUALIFIER = new Annotation[] { Any.Literal.INSTANCE };
+        private static final Annotation[] ANY_QUALIFIER = { Any.Literal.INSTANCE };
 
         final Type requiredType;
 
         final Annotation[] qualifiers;
 
         Resolvable(Type requiredType, Annotation[] qualifiers) {
-            // if the type is any of BUILT_IN_TYPES, the resolution simplifies type to raw type and ignores qualifiers
+            // if the type is Event, Instance or InjectionPoint (the built-in types), the resolution simplifies
+            // type to raw type and ignores qualifiers
             // this is so that every injection point matches the bean we provide for that type
             Type rawType = Reflections.getRawType(requiredType);
-            if (BUILT_IN_TYPES.contains(rawType)) {
+            if (Event.class.equals(rawType) || Instance.class.equals(rawType) || InjectionPoint.class.equals(rawType)) {
                 this.requiredType = rawType;
                 this.qualifiers = ANY_QUALIFIER;
             } else {
@@ -825,7 +1019,7 @@ public class ArcContainerImpl implements ArcContainer {
             final int prime = 31;
             int result = 1;
             result = prime * result + Arrays.hashCode(qualifiers);
-            result = prime * result + ((requiredType == null) ? 0 : requiredType.hashCode());
+            result = prime * result + (requiredType == null ? 0 : requiredType.hashCode());
             return result;
         }
 
@@ -848,10 +1042,7 @@ public class ArcContainerImpl implements ArcContainer {
             } else if (!requiredType.equals(other.requiredType)) {
                 return false;
             }
-            if (!Arrays.equals(qualifiers, other.qualifiers)) {
-                return false;
-            }
-            return true;
+            return Arrays.equals(qualifiers, other.qualifiers);
         }
 
     }
