@@ -1,34 +1,36 @@
 package io.quarkus.bootstrap.resolver;
 
-import io.quarkus.bootstrap.model.gradle.QuarkusModel;
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
+
 import org.gradle.tooling.GradleConnector;
 import org.gradle.tooling.ModelBuilder;
 import org.gradle.tooling.ProjectConnection;
+import org.gradle.wrapper.GradleUserHomeLookup;
+
+import io.quarkus.bootstrap.model.ApplicationModel;
 
 public class QuarkusGradleModelFactory {
 
-    public static QuarkusModel create(File projectDir, String mode, String... tasks) {
-        return create(projectDir, mode, Collections.emptyList(), tasks);
+    public static ApplicationModel create(File projectDir, String mode, String... tasks) {
+        return create(projectDir, mode, List.of(), tasks);
     }
 
-    public static QuarkusModel create(File projectDir, String mode, List<String> jvmArgs, String... tasks) {
+    public static ApplicationModel create(File projectDir, String mode, List<String> jvmArgs, String... tasks) {
         try (ProjectConnection connection = GradleConnector.newConnector()
                 .forProjectDirectory(projectDir)
+                .useGradleUserHomeDir(GradleUserHomeLookup.gradleUserHome())
                 .connect()) {
-            connection.newBuild().forTasks(tasks).addJvmArguments(jvmArgs).run();
-
-            return connection.action(new QuarkusModelBuildAction(mode)).run();
+            return connection.action(new QuarkusModelBuildAction(mode)).forTasks(tasks).addJvmArguments(jvmArgs).run();
         }
     }
 
-    public static QuarkusModel createForTasks(File projectDir, String... tasks) {
+    public static ApplicationModel createForTasks(File projectDir, String... tasks) {
         try (ProjectConnection connection = GradleConnector.newConnector()
                 .forProjectDirectory(projectDir)
+                .useGradleUserHomeDir(GradleUserHomeLookup.gradleUserHome())
                 .connect()) {
-            final ModelBuilder<QuarkusModel> modelBuilder = connection.model(QuarkusModel.class);
+            final ModelBuilder<ApplicationModel> modelBuilder = connection.model(ApplicationModel.class);
             if (tasks.length != 0) {
                 modelBuilder.forTasks(tasks);
             }
