@@ -1,25 +1,45 @@
 package io.quarkus.bootstrap.resolver.maven.workspace;
 
-import io.quarkus.bootstrap.model.AppArtifact;
-import io.quarkus.bootstrap.model.AppArtifactKey;
-import io.quarkus.bootstrap.model.PathsCollection;
-import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContext;
-import io.quarkus.bootstrap.resolver.maven.BootstrapMavenException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+
 import org.apache.maven.model.Build;
+import org.apache.maven.model.BuildBase;
+import org.apache.maven.model.Dependency;
 import org.apache.maven.model.Model;
 import org.apache.maven.model.Parent;
+import org.apache.maven.model.Plugin;
+import org.apache.maven.model.PluginExecution;
 import org.apache.maven.model.Resource;
 import org.apache.maven.model.building.ModelBuildingResult;
+import org.codehaus.plexus.util.xml.Xpp3Dom;
+
+import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContext;
+import io.quarkus.bootstrap.resolver.maven.BootstrapMavenException;
+import io.quarkus.bootstrap.workspace.ArtifactSources;
+import io.quarkus.bootstrap.workspace.DefaultArtifactSources;
+import io.quarkus.bootstrap.workspace.DefaultSourceDir;
+import io.quarkus.bootstrap.workspace.SourceDir;
+import io.quarkus.bootstrap.workspace.WorkspaceModule;
+import io.quarkus.maven.dependency.ArtifactCoords;
+import io.quarkus.maven.dependency.ArtifactDependency;
+import io.quarkus.maven.dependency.ArtifactKey;
+import io.quarkus.maven.dependency.GAV;
+import io.quarkus.maven.dependency.ResolvedArtifactDependency;
+import io.quarkus.maven.dependency.ResolvedDependency;
+import io.quarkus.maven.dependency.ResolvedDependencyBuilder;
+import io.quarkus.paths.DirectoryPathTree;
+import io.quarkus.paths.PathCollection;
+import io.quarkus.paths.PathFilter;
+import io.quarkus.paths.PathList;
 
 /**
  *
@@ -27,12 +47,17 @@ import org.apache.maven.model.building.ModelBuildingResult;
  */
 public class LocalProject {
 
+    private static final String SRC_TEST_RESOURCES = "src/test/resources";
+
+    private static final String SRC_MAIN_RESOURCES = "src/main/resources";
+
     public static final String PROJECT_GROUPID = "${project.groupId}";
 
     private static final String PROJECT_BASEDIR = "${project.basedir}";
     private static final String PROJECT_BUILD_DIR = "${project.build.directory}";
+    static final String PROJECT_OUTPUT_DIR = "${project.build.outputDirectory}";
 
-    static final String POM_XML = "pom.xml";
+    public static final String POM_XML = "pom.xml";
 
     public static LocalProject load(Path path) throws BootstrapMavenException {
         return load(path, true);
@@ -57,7 +82,7 @@ public class LocalProject {
 
     public static LocalProject loadWorkspace(Path path, boolean required) throws BootstrapMavenException {
         try {
-            return new WorkspaceLoader(null, path.normalize().toAbsolutePath()).load();
+            return new WorkspaceLoader(null, path.normalize().toAbsolutePath(), null).load();
         } catch (Exception e) {
             if (required) {
                 throw e;
@@ -75,20 +100,24 @@ public class LocalProject {
      * @throws BootstrapMavenException in case of an error
      */
     public static LocalProject loadWorkspace(BootstrapMavenContext ctx) throws BootstrapMavenException {
+        return loadWorkspace(ctx, null);
+    }
+
+    public static LocalProject loadWorkspace(BootstrapMavenContext ctx, Function<Path, Model> modelProvider)
+            throws BootstrapMavenException {
         final Path currentProjectPom = ctx.getCurrentProjectPomOrNull();
         if (currentProjectPom == null) {
             return null;
         }
+        final WorkspaceLoader wsLoader = new WorkspaceLoader(ctx, currentProjectPom, modelProvider);
         final Path rootProjectBaseDir = ctx.getRootProjectBaseDir();
-        final WorkspaceLoader wsLoader = new WorkspaceLoader(ctx, currentProjectPom);
-
         if (rootProjectBaseDir != null && !rootProjectBaseDir.equals(currentProjectPom.getParent())) {
             wsLoader.setWorkspaceRootPom(rootProjectBaseDir.resolve(POM_XML));
         }
         return wsLoader.load();
     }
 
-    static final Model readModel(Path pom) throws BootstrapMavenException {
+    static Model readModel(Path pom) throws BootstrapMavenException {
         try {
             final Model model = ModelUtils.readModel(pom);
             model.setPomFile(pom.toFile());
@@ -114,20 +143,19 @@ public class LocalProject {
     }
 
     private final Model rawModel;
-    private final String groupId;
-    private final String artifactId;
+    private final ArtifactKey key;
     private String version;
     private final Path dir;
     private final LocalWorkspace workspace;
     final List<LocalProject> modules = new ArrayList<>(0);
-    private AppArtifactKey key;
     private final ModelBuildingResult modelBuildingResult;
+    private volatile LocalProject parent;
+    private volatile WorkspaceModule module;
 
     LocalProject(ModelBuildingResult modelBuildingResult, LocalWorkspace workspace) {
         this.rawModel = modelBuildingResult.getRawModel();
         final Model effectiveModel = modelBuildingResult.getEffectiveModel();
-        this.groupId = effectiveModel.getGroupId();
-        this.artifactId = effectiveModel.getArtifactId();
+        this.key = ArtifactKey.ga(effectiveModel.getGroupId(), effectiveModel.getArtifactId());
         this.version = effectiveModel.getVersion();
         this.dir = effectiveModel.getProjectDirectory().toPath();
         this.modelBuildingResult = modelBuildingResult;
@@ -142,8 +170,7 @@ public class LocalProject {
         this.rawModel = rawModel;
         this.dir = rawModel.getProjectDirectory().toPath();
         this.workspace = workspace;
-        this.groupId = ModelUtils.getGroupId(rawModel);
-        this.artifactId = rawModel.getArtifactId();
+        this.key = ArtifactKey.ga(ModelUtils.getGroupId(rawModel), rawModel.getArtifactId());
 
         final String rawVersion = ModelUtils.getRawVersion(rawModel);
         final boolean rawVersionIsUnresolved = ModelUtils.isUnresolvedVersion(rawVersion);
@@ -155,11 +182,14 @@ public class LocalProject {
                 workspace.setResolvedVersion(version);
             }
         } else if (version == null && rawVersionIsUnresolved) {
-            throw UnresolvedVersionException.forGa(groupId, artifactId, rawVersion);
+            throw UnresolvedVersionException.forGa(key.getGroupId(), key.getArtifactId(), rawVersion);
         }
     }
 
     public LocalProject getLocalParent() {
+        if (parent != null) {
+            return parent;
+        }
         if (workspace == null) {
             return null;
         }
@@ -167,15 +197,15 @@ public class LocalProject {
         if (parent == null) {
             return null;
         }
-        return workspace.getProject(parent.getGroupId(), parent.getArtifactId());
+        return this.parent = workspace.getProject(parent.getGroupId(), parent.getArtifactId());
     }
 
     public String getGroupId() {
-        return groupId;
+        return key.getGroupId();
     }
 
     public String getArtifactId() {
-        return artifactId;
+        return key.getArtifactId();
     }
 
     public String getVersion() {
@@ -186,7 +216,7 @@ public class LocalProject {
             version = workspace.getResolvedVersion();
         }
         if (version == null) {
-            throw UnresolvedVersionException.forGa(groupId, artifactId, ModelUtils.getRawVersion(rawModel));
+            throw UnresolvedVersionException.forGa(key.getGroupId(), key.getArtifactId(), ModelUtils.getRawVersion(rawModel));
         }
         return version;
     }
@@ -197,8 +227,8 @@ public class LocalProject {
 
     public Path getOutputDir() {
         return modelBuildingResult == null
-                ? resolveRelativeToBaseDir(configuredBuildDir(this, build -> build.getDirectory()), "target")
-                : Paths.get(modelBuildingResult.getEffectiveModel().getBuild().getDirectory());
+                ? resolveRelativeToBaseDir(configuredBuildDir(this, BuildBase::getDirectory), "target")
+                : Path.of(modelBuildingResult.getEffectiveModel().getBuild().getDirectory());
     }
 
     public Path getCodeGenOutputDir() {
@@ -207,51 +237,51 @@ public class LocalProject {
 
     public Path getClassesDir() {
         return modelBuildingResult == null
-                ? resolveRelativeToBuildDir(configuredBuildDir(this, build -> build.getOutputDirectory()), "classes")
-                : Paths.get(modelBuildingResult.getEffectiveModel().getBuild().getOutputDirectory());
+                ? resolveRelativeToBuildDir(configuredBuildDir(this, Build::getOutputDirectory), "classes")
+                : Path.of(modelBuildingResult.getEffectiveModel().getBuild().getOutputDirectory());
     }
 
     public Path getTestClassesDir() {
         return modelBuildingResult == null
-                ? resolveRelativeToBuildDir(configuredBuildDir(this, build -> build.getTestOutputDirectory()), "test-classes")
-                : Paths.get(modelBuildingResult.getEffectiveModel().getBuild().getTestOutputDirectory());
+                ? resolveRelativeToBuildDir(configuredBuildDir(this, Build::getTestOutputDirectory), "test-classes")
+                : Path.of(modelBuildingResult.getEffectiveModel().getBuild().getTestOutputDirectory());
     }
 
     public Path getSourcesSourcesDir() {
         return modelBuildingResult == null
-                ? resolveRelativeToBaseDir(configuredBuildDir(this, build -> build.getSourceDirectory()), "src/main/java")
-                : Paths.get(modelBuildingResult.getEffectiveModel().getBuild().getSourceDirectory());
+                ? resolveRelativeToBaseDir(configuredBuildDir(this, Build::getSourceDirectory), "src/main/java")
+                : Path.of(modelBuildingResult.getEffectiveModel().getBuild().getSourceDirectory());
     }
 
     public Path getTestSourcesSourcesDir() {
-        return resolveRelativeToBaseDir(configuredBuildDir(this, build -> build.getTestSourceDirectory()), "src/test/java");
+        return resolveRelativeToBaseDir(configuredBuildDir(this, Build::getTestSourceDirectory), "src/test/java");
     }
 
     public Path getSourcesDir() {
         return getSourcesSourcesDir().getParent();
     }
 
-    public PathsCollection getResourcesSourcesDirs() {
-        final List<Resource> resources = rawModel.getBuild() == null ? Collections.emptyList()
+    public PathCollection getResourcesSourcesDirs() {
+        final List<Resource> resources = rawModel.getBuild() == null ? List.of()
                 : rawModel.getBuild().getResources();
         if (resources.isEmpty()) {
-            return PathsCollection.of(resolveRelativeToBaseDir(null, "src/main/resources"));
+            return PathList.of(resolveRelativeToBaseDir(null, SRC_MAIN_RESOURCES));
         }
-        return PathsCollection.from(resources.stream()
+        return PathList.from(resources.stream()
                 .map(Resource::getDirectory)
-                .map(resourcesDir -> resolveRelativeToBaseDir(resourcesDir, "src/main/resources"))
+                .map(resourcesDir -> resolveRelativeToBaseDir(resourcesDir, SRC_MAIN_RESOURCES))
                 .collect(Collectors.toCollection(LinkedHashSet::new)));
     }
 
-    public PathsCollection getTestResourcesSourcesDirs() {
-        final List<Resource> resources = rawModel.getBuild() == null ? Collections.emptyList()
+    public PathCollection getTestResourcesSourcesDirs() {
+        final List<Resource> resources = rawModel.getBuild() == null ? List.of()
                 : rawModel.getBuild().getTestResources();
         if (resources.isEmpty()) {
-            return PathsCollection.of(resolveRelativeToBaseDir(null, "src/test/resources"));
+            return PathList.of(resolveRelativeToBaseDir(null, SRC_TEST_RESOURCES));
         }
-        return PathsCollection.from(resources.stream()
+        return PathList.from(resources.stream()
                 .map(Resource::getDirectory)
-                .map(resourcesDir -> resolveRelativeToBaseDir(resourcesDir, "src/test/resources"))
+                .map(resourcesDir -> resolveRelativeToBaseDir(resourcesDir, SRC_TEST_RESOURCES))
                 .collect(Collectors.toCollection(LinkedHashSet::new)));
     }
 
@@ -267,24 +297,29 @@ public class LocalProject {
         return workspace;
     }
 
-    public AppArtifactKey getKey() {
-        return key == null ? key = new AppArtifactKey(groupId, artifactId) : key;
+    public ArtifactKey getKey() {
+        return key;
     }
 
-    public AppArtifact getAppArtifact() {
-        return getAppArtifact(
-                modelBuildingResult == null ? rawModel.getPackaging() : modelBuildingResult.getEffectiveModel().getPackaging());
+    public String getPackaging() {
+        return modelBuildingResult == null ? rawModel.getPackaging() : modelBuildingResult.getEffectiveModel().getPackaging();
     }
 
-    public AppArtifact getAppArtifact(String extension) {
-        return new AppArtifact(groupId, artifactId, "", extension, getVersion());
+    public ResolvedDependency getAppArtifact() {
+        return getAppArtifact(getPackaging());
+    }
+
+    public ResolvedDependency getAppArtifact(String extension) {
+        return new ResolvedArtifactDependency(key.getGroupId(), key.getArtifactId(), ArtifactCoords.DEFAULT_CLASSIFIER,
+                extension, getVersion(),
+                (PathCollection) null);
     }
 
     public Path resolveRelativeToBaseDir(String path) {
         return resolveRelativeToBaseDir(path, null);
     }
 
-    private Path resolveRelativeToBaseDir(String path, String defaultPath) {
+    Path resolveRelativeToBaseDir(String path, String defaultPath) {
         return dir.resolve(path == null ? defaultPath : stripProjectBasedirPrefix(path, PROJECT_BASEDIR));
     }
 
@@ -292,7 +327,7 @@ public class LocalProject {
         return getOutputDir().resolve(path == null ? defaultPath : stripProjectBasedirPrefix(path, PROJECT_BUILD_DIR));
     }
 
-    private static String stripProjectBasedirPrefix(String path, String expr) {
+    static String stripProjectBasedirPrefix(String path, String expr) {
         return path.startsWith(expr) ? path.substring(expr.length() + 1) : path;
     }
 
@@ -308,5 +343,228 @@ public class LocalProject {
             }
         }
         return dir;
+    }
+
+    public WorkspaceModule toWorkspaceModule() {
+        return toWorkspaceModule(null);
+    }
+
+    public WorkspaceModule toWorkspaceModule(BootstrapMavenContext ctx) {
+        if (module != null) {
+            return module;
+        }
+
+        final WorkspaceModule.Mutable moduleBuilder = WorkspaceModule.builder()
+                .setModuleId(new GAV(key.getGroupId(), key.getArtifactId(), getVersion()))
+                .setModuleDir(dir)
+                .setBuildFile(getRawModel().getPomFile().toPath())
+                .setBuildDir(getOutputDir());
+
+        final Model model = modelBuildingResult == null ? getRawModel() : modelBuildingResult.getEffectiveModel();
+        if (!ArtifactCoords.TYPE_POM.equals(model.getPackaging())) {
+            final Build build = model.getBuild();
+            boolean addDefaultSourceSet = true;
+            if (build != null && !build.getPlugins().isEmpty()) {
+                for (Plugin plugin : build.getPlugins()) {
+                    if (plugin.getArtifactId().equals("maven-jar-plugin")) {
+                        if (plugin.getExecutions().isEmpty()) {
+                            final DefaultArtifactSources src = processJarPluginExecutionConfig(plugin.getConfiguration(),
+                                    false);
+                            if (src != null) {
+                                addDefaultSourceSet = false;
+                                moduleBuilder.addArtifactSources(src);
+                            }
+                        } else {
+                            for (PluginExecution e : plugin.getExecutions()) {
+                                DefaultArtifactSources src = null;
+                                if (e.getGoals().contains(ArtifactCoords.TYPE_JAR)) {
+                                    src = processJarPluginExecutionConfig(e.getConfiguration(), false);
+                                    addDefaultSourceSet &= !(src != null && e.getId().equals("default-jar"));
+                                } else if (e.getGoals().contains("test-jar")) {
+                                    src = processJarPluginExecutionConfig(e.getConfiguration(), true);
+                                }
+                                if (src != null) {
+                                    moduleBuilder.addArtifactSources(src);
+                                }
+                            }
+                        }
+                    } else if (plugin.getArtifactId().equals("maven-surefire-plugin") && plugin.getConfiguration() != null) {
+                        Object config = plugin.getConfiguration();
+                        if (!(config instanceof Xpp3Dom)) {
+                            continue;
+                        }
+                        Xpp3Dom dom = (Xpp3Dom) config;
+                        final Xpp3Dom depExcludes = dom.getChild("classpathDependencyExcludes");
+                        if (depExcludes != null) {
+                            final Xpp3Dom[] excludes = depExcludes.getChildren("classpathDependencyExclude");
+                            if (excludes != null) {
+                                final List<String> list = new ArrayList<>(excludes.length);
+                                for (Xpp3Dom exclude : excludes) {
+                                    list.add(exclude.getValue());
+                                }
+                                moduleBuilder.setTestClasspathDependencyExclusions(list);
+                            }
+                        }
+                        final Xpp3Dom additionalElements = dom.getChild("additionalClasspathElements");
+                        if (additionalElements != null) {
+                            final Xpp3Dom[] elements = additionalElements.getChildren("additionalClasspathElement");
+                            if (elements != null) {
+                                final List<String> list = new ArrayList<>(elements.length);
+                                for (Xpp3Dom element : elements) {
+                                    for (String s : element.getValue().split(",")) {
+                                        list.add(stripProjectBasedirPrefix(s, PROJECT_BASEDIR));
+                                    }
+                                }
+                                moduleBuilder.setAdditionalTestClasspathElements(list);
+                            }
+                        }
+                    }
+                }
+            }
+
+            if (addDefaultSourceSet) {
+                moduleBuilder.addArtifactSources(new DefaultArtifactSources(ArtifactSources.MAIN,
+                        List.of(new DefaultSourceDir(getSourcesSourcesDir(), getClassesDir())),
+                        collectMainResources(null)));
+            }
+            if (!moduleBuilder.hasTestSources()) {
+                moduleBuilder.addArtifactSources(new DefaultArtifactSources(ArtifactSources.TEST,
+                        List.of(new DefaultSourceDir(getTestSourcesSourcesDir(), getTestClassesDir())),
+                        collectTestResources(null)));
+            }
+        }
+
+        if (ctx != null && ctx.isWorkspaceModuleParentHierarchy()) {
+            final LocalProject parent = getLocalParent();
+            if (parent != null) {
+                moduleBuilder.setParent(parent.toWorkspaceModule(ctx));
+            }
+            moduleBuilder.setDependencyConstraints(getRawModel().getDependencyManagement() == null ? List.of()
+                    : toArtifactDependencies(getRawModel().getDependencyManagement().getDependencies(), ctx));
+        }
+
+        moduleBuilder.setDependencies(toArtifactDependencies(model.getDependencies(), ctx));
+
+        return this.module = moduleBuilder.build();
+    }
+
+    private List<io.quarkus.maven.dependency.Dependency> toArtifactDependencies(List<Dependency> rawModelDeps,
+            BootstrapMavenContext ctx) {
+        if (rawModelDeps.isEmpty()) {
+            return List.of();
+        }
+        final List<io.quarkus.maven.dependency.Dependency> result = new ArrayList<>(rawModelDeps.size());
+        for (Dependency d : rawModelDeps) {
+            final String groupId = resolveElementValue(d.getGroupId());
+            final String artifactId = resolveElementValue(d.getArtifactId());
+            final LocalProject bomProject;
+            if (workspace != null
+                    && ctx != null && ctx.isWorkspaceModuleParentHierarchy()
+                    && io.quarkus.maven.dependency.Dependency.SCOPE_IMPORT.equals(d.getScope())
+                    && ArtifactCoords.TYPE_POM.equals(d.getType())
+                    && (bomProject = workspace.getProject(groupId, artifactId)) != null
+                    && bomProject.getVersion().equals(d.getVersion())) {
+                result.add(ResolvedDependencyBuilder.newInstance()
+                        .setGroupId(groupId)
+                        .setArtifactId(artifactId)
+                        .setType(ArtifactCoords.TYPE_POM)
+                        .setScope(io.quarkus.maven.dependency.Dependency.SCOPE_IMPORT)
+                        .setVersion(resolveElementValue(d.getVersion()))
+                        .setWorkspaceModule(bomProject.toWorkspaceModule(ctx))
+                        .setResolvedPath(bomProject.getRawModel().getPomFile().toPath())
+                        .build());
+            } else {
+                result.add(new ArtifactDependency(groupId, artifactId, resolveElementValue(d.getClassifier()),
+                        resolveElementValue(d.getType()), resolveElementValue(d.getVersion()), d.getScope(), d.isOptional()));
+            }
+        }
+        return result;
+    }
+
+    private String resolveElementValue(String elementValue) {
+        if (elementValue == null || elementValue.isEmpty() || !(elementValue.startsWith("${") && elementValue.endsWith("}"))) {
+            return elementValue;
+        }
+        final String propName = elementValue.substring(2, elementValue.length() - 1);
+        String v = System.getProperty(propName);
+        return v == null ? rawModel.getProperties().getProperty(propName, elementValue) : v;
+    }
+
+    private DefaultArtifactSources processJarPluginExecutionConfig(Object config, boolean test) {
+        if (!(config instanceof Xpp3Dom)) {
+            return null;
+        }
+        Xpp3Dom dom = (Xpp3Dom) config;
+        final List<String> includes = collectChildValues(dom.getChild("includes"));
+        final List<String> excludes = collectChildValues(dom.getChild("excludes"));
+        final PathFilter filter = includes == null && excludes == null ? null : new PathFilter(includes, excludes);
+        final String classifier = getClassifier(dom, test);
+        final Collection<SourceDir> sources = List.of(
+                new DefaultSourceDir(new DirectoryPathTree(test ? getTestSourcesSourcesDir() : getSourcesSourcesDir()),
+                        new DirectoryPathTree(test ? getTestClassesDir() : getClassesDir(), filter),
+                        Map.of()));
+        final Collection<SourceDir> resources = test ? collectTestResources(filter) : collectMainResources(filter);
+        return new DefaultArtifactSources(classifier, sources, resources);
+    }
+
+    private List<String> collectChildValues(final Xpp3Dom container) {
+        if (container == null) {
+            return null;
+        }
+        final Xpp3Dom[] excludeElements = container.getChildren();
+        final List<String> list = new ArrayList<>(excludeElements.length);
+        for (Xpp3Dom child : container.getChildren()) {
+            list.add(child.getValue());
+        }
+        return list;
+    }
+
+    private static String getClassifier(Xpp3Dom dom, boolean test) {
+        final Xpp3Dom classifier = dom.getChild("classifier");
+        return classifier == null ? (test ? ArtifactSources.TEST : ArtifactSources.MAIN) : classifier.getValue();
+    }
+
+    private Collection<SourceDir> collectMainResources(PathFilter filter) {
+        final List<Resource> resources = rawModel.getBuild() == null ? List.of()
+                : rawModel.getBuild().getResources();
+        final Path classesDir = getClassesDir();
+        if (resources.isEmpty()) {
+            return List.of(new DefaultSourceDir(
+                    new DirectoryPathTree(resolveRelativeToBaseDir(null, SRC_MAIN_RESOURCES)),
+                    new DirectoryPathTree(classesDir, filter), Map.of()));
+        }
+        final List<SourceDir> sourceDirs = new ArrayList<>(resources.size());
+        for (Resource r : resources) {
+            sourceDirs.add(
+                    new DefaultSourceDir(
+                            new DirectoryPathTree(resolveRelativeToBaseDir(r.getDirectory(), SRC_MAIN_RESOURCES)),
+                            new DirectoryPathTree((r.getTargetPath() == null ? classesDir
+                                    : classesDir.resolve(stripProjectBasedirPrefix(r.getTargetPath(), PROJECT_OUTPUT_DIR))),
+                                    filter),
+                            Map.of()));
+        }
+        return sourceDirs;
+    }
+
+    private Collection<SourceDir> collectTestResources(PathFilter filter) {
+        final List<Resource> resources = rawModel.getBuild() == null ? List.of()
+                : rawModel.getBuild().getTestResources();
+        final Path testClassesDir = getTestClassesDir();
+        if (resources.isEmpty()) {
+            return List.of(new DefaultSourceDir(
+                    new DirectoryPathTree(resolveRelativeToBaseDir(null, SRC_TEST_RESOURCES)),
+                    new DirectoryPathTree(testClassesDir, filter), Map.of()));
+        }
+        final List<SourceDir> sourceDirs = new ArrayList<>(resources.size());
+        for (Resource r : resources) {
+            sourceDirs.add(
+                    new DefaultSourceDir(
+                            new DirectoryPathTree(resolveRelativeToBaseDir(r.getDirectory(), SRC_TEST_RESOURCES)),
+                            new DirectoryPathTree((r.getTargetPath() == null ? testClassesDir
+                                    : testClassesDir.resolve(stripProjectBasedirPrefix(r.getTargetPath(), PROJECT_OUTPUT_DIR))),
+                                    filter),
+                            Map.of()));
+        }
+        return sourceDirs;
     }
 }
