@@ -1,29 +1,41 @@
 package org.jboss.resteasy.reactive.common.processor;
 
+import static java.util.Map.entry;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.BEAN_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.BIG_DECIMAL;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.BIG_INTEGER;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.BLOCKING;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.BOOLEAN;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.CHARACTER;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.COMPLETABLE_FUTURE;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.COMPLETION_STAGE;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.CONFIGURATION;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.CONSUMES;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.CONTEXT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.COOKIE_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.DEFAULT_VALUE;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.DOUBLE;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.DUMMY_ELEMENT_TYPE;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.ENCODED;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.FLOAT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.FORM_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.HEADER_PARAM;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.HTTP_HEADERS;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.INSTANT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.INTEGER;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LIST;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LOCAL_DATE;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LOCAL_DATE_TIME;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LOCAL_TIME;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LONG;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MATRIX_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MULTI;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MULTI_PART_DATA_INPUT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.MULTI_PART_FORM_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.NON_BLOCKING;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OBJECT;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OFFSET_DATE_TIME;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OFFSET_TIME;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.OPTIONAL;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PATH;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PATH_PARAM;
@@ -35,27 +47,44 @@ import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNa
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PRIMITIVE_INTEGER;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PRIMITIVE_LONG;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PRODUCES;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.PROVIDERS;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.QUERY_PARAM;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REQUEST;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.RESOURCE_CONTEXT;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.RESOURCE_INFO;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.RESPONSE;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_COOKIE_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_FORM_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_HEADER_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_MATRIX_PARAM;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_MULTI;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_PATH_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_QUERY_PARAM;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_RESPONSE;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_SSE_ELEMENT_TYPE;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.REST_STREAM_ELEMENT_TYPE;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.RUN_ON_VIRTUAL_THREAD;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SECURITY_CONTEXT;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SERVER_REQUEST_CONTEXT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SET;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SORTED_SET;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SSE;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SSE_EVENT_SINK;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.STRING;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.SUSPENDED;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.TRANSACTIONAL;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.UNI;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.URI_INFO;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.YEAR;
+import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.ZONED_DATE_TIME;
 
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -63,22 +92,29 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import javax.enterprise.inject.spi.DeploymentException;
-import javax.ws.rs.container.AsyncResponse;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.sse.SseEventSink;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
+
+import jakarta.enterprise.inject.spi.DeploymentException;
+import jakarta.ws.rs.container.AsyncResponse;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.sse.SseEventSink;
+
 import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.AnnotationTarget;
 import org.jboss.jandex.AnnotationValue;
+import org.jboss.jandex.ArrayType;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.ClassType;
 import org.jboss.jandex.DotName;
 import org.jboss.jandex.IndexView;
 import org.jboss.jandex.MethodInfo;
 import org.jboss.jandex.ParameterizedType;
+import org.jboss.jandex.PrimitiveType.Primitive;
 import org.jboss.jandex.Type;
 import org.jboss.jandex.Type.Kind;
 import org.jboss.jandex.TypeVariable;
@@ -90,31 +126,32 @@ import org.jboss.resteasy.reactive.common.model.MethodParameter;
 import org.jboss.resteasy.reactive.common.model.ParameterType;
 import org.jboss.resteasy.reactive.common.model.ResourceClass;
 import org.jboss.resteasy.reactive.common.model.ResourceMethod;
-import org.jboss.resteasy.reactive.common.util.ReflectionBeanFactoryCreator;
+import org.jboss.resteasy.reactive.common.processor.TargetJavaVersion.Status;
+import org.jboss.resteasy.reactive.common.processor.scanning.ApplicationScanningResult;
+import org.jboss.resteasy.reactive.common.processor.scanning.ResteasyReactiveScanner;
+import org.jboss.resteasy.reactive.common.processor.scanning.ScannedSerializer;
+import org.jboss.resteasy.reactive.common.processor.scanning.SerializerScanningResult;
+import org.jboss.resteasy.reactive.common.processor.transformation.AnnotationStore;
+import org.jboss.resteasy.reactive.common.processor.transformation.AnnotationsTransformer;
 import org.jboss.resteasy.reactive.common.util.URLUtils;
 import org.jboss.resteasy.reactive.spi.BeanFactory;
-import org.objectweb.asm.Opcodes;
 
 public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD>, PARAM extends IndexedParameter<PARAM>, METHOD extends ResourceMethod> {
 
-    protected static final Map<String, String> primitiveTypes;
+    public static final Map<String, String> primitiveTypes;
     private static final Map<DotName, Class<?>> supportedReaderJavaTypes;
+    // spec
     // NOTE: sync with ContextProducer and ContextParamExtractor
-    private static final Set<DotName> CONTEXT_TYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-            // spec
-            ResteasyReactiveDotNames.URI_INFO,
-            ResteasyReactiveDotNames.HTTP_HEADERS,
-            ResteasyReactiveDotNames.REQUEST,
-            ResteasyReactiveDotNames.SECURITY_CONTEXT,
-            ResteasyReactiveDotNames.PROVIDERS,
-            ResteasyReactiveDotNames.RESOURCE_CONTEXT,
-            ResteasyReactiveDotNames.CONFIGURATION,
-            ResteasyReactiveDotNames.SSE,
-            ResteasyReactiveDotNames.SSE_EVENT_SINK,
+    private static final Set<DotName> DEFAULT_CONTEXT_TYPES = Set.of(URI_INFO, HTTP_HEADERS, REQUEST, SECURITY_CONTEXT,
+            PROVIDERS, RESOURCE_CONTEXT, CONFIGURATION, SSE,
+            SSE_EVENT_SINK,
             // extras
-            ResteasyReactiveDotNames.SERVER_REQUEST_CONTEXT,
+            SERVER_REQUEST_CONTEXT,
             DotName.createSimple("org.jboss.resteasy.reactive.server.SimpleResourceInfo"), //TODO: fixme
-            ResteasyReactiveDotNames.RESOURCE_INFO)));
+            RESOURCE_INFO);
+
+    protected static final Set<DotName> SUPPORT_TEMPORAL_PARAMS = Set.of(INSTANT, LOCAL_DATE, LOCAL_TIME, LOCAL_DATE_TIME,
+            OFFSET_TIME, OFFSET_DATE_TIME, ZONED_DATE_TIME, YEAR);
 
     protected static final Logger log = Logger.getLogger(EndpointIndexer.class);
     protected static final String[] EMPTY_STRING_ARRAY = new String[] {};
@@ -123,46 +160,57 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     public static final String CDI_WRAPPER_SUFFIX = "$$CDIWrapper";
 
     public static final String METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY = "METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY";
+    public static final String METHOD_CONTEXT_ANNOTATION_STORE = "ANNOTATION_STORE";
+    public static final String METHOD_PRODUCES = "METHOD_PRODUCES";
+
+    private static final boolean JDK_SUPPORTS_VIRTUAL_THREADS;
 
     static {
-        Map<String, String> prims = new HashMap<>();
-        prims.put(byte.class.getName(), Byte.class.getName());
-        prims.put(Byte.class.getName(), Byte.class.getName());
-        prims.put(boolean.class.getName(), Boolean.class.getName());
-        prims.put(Boolean.class.getName(), Boolean.class.getName());
-        prims.put(char.class.getName(), Character.class.getName());
-        prims.put(Character.class.getName(), Character.class.getName());
-        prims.put(short.class.getName(), Short.class.getName());
-        prims.put(Short.class.getName(), Short.class.getName());
-        prims.put(int.class.getName(), Integer.class.getName());
-        prims.put(Integer.class.getName(), Integer.class.getName());
-        prims.put(float.class.getName(), Float.class.getName());
-        prims.put(Float.class.getName(), Float.class.getName());
-        prims.put(double.class.getName(), Double.class.getName());
-        prims.put(Double.class.getName(), Double.class.getName());
-        prims.put(long.class.getName(), Long.class.getName());
-        prims.put(Long.class.getName(), Long.class.getName());
-        primitiveTypes = Collections.unmodifiableMap(prims);
+        primitiveTypes = Map.ofEntries(
+                entry(byte.class.getName(), Byte.class.getName()),
+                entry(Byte.class.getName(), Byte.class.getName()),
+                entry(boolean.class.getName(), Boolean.class.getName()),
+                entry(Boolean.class.getName(), Boolean.class.getName()),
+                entry(char.class.getName(), Character.class.getName()),
+                entry(Character.class.getName(), Character.class.getName()),
+                entry(short.class.getName(), Short.class.getName()),
+                entry(Short.class.getName(), Short.class.getName()),
+                entry(int.class.getName(), Integer.class.getName()),
+                entry(Integer.class.getName(), Integer.class.getName()),
+                entry(float.class.getName(), Float.class.getName()),
+                entry(Float.class.getName(), Float.class.getName()),
+                entry(double.class.getName(), Double.class.getName()),
+                entry(Double.class.getName(), Double.class.getName()),
+                entry(long.class.getName(), Long.class.getName()),
+                entry(Long.class.getName(), Long.class.getName()));
 
-        Map<DotName, Class<?>> supportedReaderJavaTps = new HashMap<>();
-        supportedReaderJavaTps.put(PRIMITIVE_BOOLEAN, boolean.class);
-        supportedReaderJavaTps.put(PRIMITIVE_DOUBLE, double.class);
-        supportedReaderJavaTps.put(PRIMITIVE_FLOAT, float.class);
-        supportedReaderJavaTps.put(PRIMITIVE_LONG, long.class);
-        supportedReaderJavaTps.put(PRIMITIVE_INTEGER, int.class);
-        supportedReaderJavaTps.put(PRIMITIVE_CHAR, char.class);
-        supportedReaderJavaTps.put(BOOLEAN, Boolean.class);
-        supportedReaderJavaTps.put(DOUBLE, Double.class);
-        supportedReaderJavaTps.put(FLOAT, Float.class);
-        supportedReaderJavaTps.put(LONG, Long.class);
-        supportedReaderJavaTps.put(INTEGER, Integer.class);
-        supportedReaderJavaTps.put(CHARACTER, Character.class);
-        supportedReaderJavaTps.put(BIG_DECIMAL, BigDecimal.class);
-        supportedReaderJavaTps.put(BIG_INTEGER, BigInteger.class);
-        supportedReaderJavaTypes = Collections.unmodifiableMap(supportedReaderJavaTps);
+        supportedReaderJavaTypes = Map.ofEntries(
+                entry(PRIMITIVE_BOOLEAN, boolean.class),
+                entry(PRIMITIVE_DOUBLE, double.class),
+                entry(PRIMITIVE_FLOAT, float.class),
+                entry(PRIMITIVE_LONG, long.class),
+                entry(PRIMITIVE_INTEGER, int.class),
+                entry(PRIMITIVE_CHAR, char.class),
+                entry(BOOLEAN, Boolean.class),
+                entry(DOUBLE, Double.class),
+                entry(FLOAT, Float.class),
+                entry(LONG, Long.class),
+                entry(INTEGER, Integer.class),
+                entry(CHARACTER, Character.class),
+                entry(BIG_DECIMAL, BigDecimal.class),
+                entry(BIG_INTEGER, BigInteger.class));
+
+        boolean isJDKCompatible = true;
+        try {
+            Class.forName("java.lang.ThreadBuilders");
+        } catch (ClassNotFoundException e) {
+            isJDKCompatible = false;
+        }
+        JDK_SUPPORTS_VIRTUAL_THREADS = isJDKCompatible;
     }
 
     protected final IndexView index;
+    protected final IndexView applicationIndex;
     protected final Map<String, String> existingConverters;
     protected final Map<String, InjectableBean> injectableBeans;
     protected final boolean hasRuntimeConverters;
@@ -172,13 +220,25 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     protected final AdditionalReaders additionalReaders;
     private final Map<DotName, String> httpAnnotationToMethod;
     private final AdditionalWriters additionalWriters;
-    private final boolean defaultBlocking;
+    private final BlockingDefault defaultBlocking;
     private final Map<DotName, Map<String, String>> classLevelExceptionMappers;
     private final Function<String, BeanFactory<Object>> factoryCreator;
-    private final Consumer<Map.Entry<MethodInfo, ResourceMethod>> resourceMethodCallback;
+    private final Consumer<ResourceMethodCallbackEntry> resourceMethodCallback;
+    private final AnnotationStore annotationStore;
+    protected final ApplicationScanningResult applicationScanningResult;
+    private final Set<DotName> contextTypes;
+    private final Set<DotName> parameterContainerTypes;
+    private final MultipartReturnTypeIndexerExtension multipartReturnTypeIndexerExtension;
+    private final TargetJavaVersion targetJavaVersion;
+
+    private final Function<ClassInfo, Supplier<Boolean>> isDisabledCreator;
+
+    private final Predicate<Map<DotName, AnnotationInstance>> skipMethodParameter;
+    private SerializerScanningResult serializerScanningResult;
 
     protected EndpointIndexer(Builder<T, ?, METHOD> builder) {
         this.index = builder.index;
+        this.applicationIndex = builder.applicationIndex;
         this.existingConverters = builder.existingConverters;
         this.scannedResourcePaths = builder.scannedResourcePaths;
         this.config = builder.config;
@@ -191,12 +251,27 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         this.classLevelExceptionMappers = builder.classLevelExceptionMappers;
         this.factoryCreator = builder.factoryCreator;
         this.resourceMethodCallback = builder.resourceMethodCallback;
+        this.annotationStore = new AnnotationStore(builder.annotationsTransformers);
+        this.applicationScanningResult = builder.applicationScanningResult;
+        this.contextTypes = builder.contextTypes;
+        this.parameterContainerTypes = builder.parameterContainerTypes;
+        this.multipartReturnTypeIndexerExtension = builder.multipartReturnTypeIndexerExtension;
+        this.targetJavaVersion = builder.targetJavaVersion;
+        this.isDisabledCreator = builder.isDisabledCreator;
+        this.skipMethodParameter = builder.skipMethodParameter;
     }
 
-    public ResourceClass createEndpoints(ClassInfo classInfo) {
+    public Optional<ResourceClass> createEndpoints(ClassInfo classInfo, boolean considerApplication) {
+        if (considerApplication && !applicationScanningResult.keepClass(classInfo.name().toString())) {
+            return Optional.empty();
+        }
         try {
             String path = scannedResourcePaths.get(classInfo.name());
             ResourceClass clazz = new ResourceClass();
+            if ((classInfo.enclosingClass() != null) && !Modifier.isStatic(classInfo.flags())) {
+                throw new DeploymentException(
+                        "Non static nested resources classes are not supported: '" + classInfo.name() + "'");
+            }
             clazz.setClassName(classInfo.name().toString());
             if (path != null) {
                 if (path.endsWith("/")) {
@@ -205,15 +280,17 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 if (!path.startsWith("/")) {
                     path = "/" + path;
                 }
-                clazz.setPath(path);
+                clazz.setPath(sanitizePath(path));
             }
-            clazz.setFactory(factoryCreator.apply(classInfo.name().toString()));
+            if (factoryCreator != null) {
+                clazz.setFactory(factoryCreator.apply(classInfo.name().toString()));
+            }
             Map<String, String> classLevelExceptionMappers = this.classLevelExceptionMappers.get(classInfo.name());
             if (classLevelExceptionMappers != null) {
                 clazz.setClassLevelExceptionMappers(classLevelExceptionMappers);
             }
-            List<ResourceMethod> methods = createEndpoints(classInfo, classInfo, new HashSet<>(),
-                    clazz.getPathParameters());
+            List<ResourceMethod> methods = createEndpoints(classInfo, classInfo, new HashSet<>(), new HashSet<>(),
+                    clazz.getPathParameters(), clazz.getPath(), considerApplication);
             clazz.getMethods().addAll(methods);
 
             // get an InjectableBean view of our class
@@ -233,118 +310,211 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 clazz.setPerRequestResource(true);
             }
 
-            return clazz;
+            if (isDisabledCreator != null) {
+                clazz.setIsDisabled(isDisabledCreator.apply(classInfo));
+            }
+
+            return Optional.of(clazz);
         } catch (Exception e) {
             if (Modifier.isInterface(classInfo.flags()) || Modifier.isAbstract(classInfo.flags())) {
                 //kinda bogus, but we just ignore failed interfaces for now
                 //they can have methods that are not valid until they are actually extended by a concrete type
                 log.debug("Ignoring interface " + classInfo.name(), e);
-                return null;
+                return Optional.empty();
             }
             throw new RuntimeException(e);
         }
+    }
+
+    private String sanitizePath(String path) {
+        // this simply replaces the whitespace characters (not part of a path variable) with %20
+        // TODO: this might have to be more complex, URL encoding maybe?
+        // zero braces indicates we are outside of a variable
+        int bracesCount = 0;
+        StringBuilder replaced = null;
+        for (int i = 0; i < path.length(); i++) {
+            char c = path.charAt(i);
+            if ((c == ' ') && (bracesCount == 0)) {
+                if (replaced == null) {
+                    replaced = new StringBuilder(path.length() + 2);
+                    replaced.append(path, 0, i);
+                }
+                replaced.append("%20");
+                continue;
+            }
+            if (replaced != null) {
+                replaced.append(c);
+            }
+            if (c == '{') {
+                bracesCount++;
+            } else if (c == '}') {
+                bracesCount--;
+            }
+        }
+        if (replaced == null) {
+            return path;
+        }
+        return replaced.toString();
     }
 
     protected abstract METHOD createResourceMethod(MethodInfo info, ClassInfo actualEndpointClass,
             Map<String, Object> methodContext);
 
     protected List<ResourceMethod> createEndpoints(ClassInfo currentClassInfo,
-            ClassInfo actualEndpointInfo, Set<String> seenMethods,
-            Set<String> pathParameters) {
+            ClassInfo actualEndpointInfo, Set<String> seenMethods, Set<String> existingClassNameBindings,
+            Set<String> pathParameters, String resourceClassPath, boolean considerApplication) {
+
+        List<ResourceMethod> ret = new ArrayList<>();
+
+        List<FoundEndpoint> endpoints = collectEndpoints(currentClassInfo, actualEndpointInfo, seenMethods,
+                existingClassNameBindings, considerApplication, httpAnnotationToMethod, index, applicationScanningResult,
+                getAnnotationStore());
+        Map<String, BasicResourceClassInfo> basicResourceClassInfoMap = new HashMap<>();
+        for (FoundEndpoint endpoint : endpoints) {
+
+            // assemble method path
+            String methodPath = readStringValue(getAnnotationStore().getAnnotation(endpoint.methodInfo, PATH));
+            if (endpoint.httpMethod != null) {
+                // HTTP annotation method
+                validateHttpAnnotations(endpoint.methodInfo);
+                if (methodPath != null) {
+                    if (!methodPath.startsWith("/")) {
+                        methodPath = "/" + methodPath;
+                    }
+                    if (methodPath.endsWith("/")) {
+                        methodPath = handleTrailingSlash(methodPath);
+                    }
+                } else {
+                    methodPath = "";
+                }
+            } else {
+                // resource locator method
+                if (methodPath != null) {
+                    if (!methodPath.startsWith("/")) {
+                        methodPath = "/" + methodPath;
+                    }
+                    if (methodPath.endsWith("/")) {
+                        methodPath = methodPath.substring(0, methodPath.length() - 1);
+                    }
+                }
+            }
+
+            // create BasicResourceClassInfo and remember it
+            BasicResourceClassInfo basicResourceClassInfo = basicResourceClassInfoMap.get(endpoint.classInfo.name().toString());
+            if (basicResourceClassInfo == null) {
+                String[] classProduces = extractProducesConsumesValues(
+                        getAnnotationStore().getAnnotation(endpoint.classInfo, PRODUCES));
+                String[] classConsumes = extractProducesConsumesValues(
+                        getAnnotationStore().getAnnotation(endpoint.classInfo, CONSUMES));
+                basicResourceClassInfo = new BasicResourceClassInfo(resourceClassPath, classProduces,
+                        classConsumes, pathParameters, getStreamAnnotationValue(endpoint.classInfo));
+                basicResourceClassInfoMap.put(endpoint.classInfo.name().toString(), basicResourceClassInfo);
+            }
+
+            ResourceMethod method = createResourceMethod(endpoint.classInfo, actualEndpointInfo, basicResourceClassInfo,
+                    endpoint.classNameBindings, endpoint.httpMethod, endpoint.methodInfo, methodPath);
+            ret.add(method);
+        }
+
+        return ret;
+    }
+
+    /**
+     * Return endpoints defined directly on classInfo.
+     *
+     * @param classInfo resource class
+     * @return classInfo endpoint method info
+     */
+    public static Collection<MethodInfo> collectClassEndpoints(ClassInfo classInfo,
+            Map<DotName, String> httpAnnotationToMethod, IndexView index, ApplicationScanningResult applicationScanningResult) {
+        Collection<FoundEndpoint> endpoints = collectEndpoints(classInfo, classInfo, new HashSet<>(), new HashSet<>(), true,
+                httpAnnotationToMethod, index, applicationScanningResult, new AnnotationStore(null));
+        Collection<MethodInfo> ret = new HashSet<>();
+        for (FoundEndpoint endpoint : endpoints) {
+            if (endpoint.classInfo.equals(classInfo)) {
+                ret.add(endpoint.methodInfo);
+            }
+        }
+        return ret;
+    }
+
+    private static List<FoundEndpoint> collectEndpoints(ClassInfo currentClassInfo, ClassInfo actualEndpointInfo,
+            Set<String> seenMethods, Set<String> existingClassNameBindings, boolean considerApplication,
+            Map<DotName, String> httpAnnotationToMethod, IndexView index, ApplicationScanningResult applicationScanningResult,
+            AnnotationStore annotationStore) {
+
+        if (considerApplication && applicationScanningResult != null
+                && !applicationScanningResult.keepClass(actualEndpointInfo.name().toString())) {
+            return Collections.emptyList();
+        }
 
         // $$CDIWrapper suffix is used to generate CDI beans from interfaces, we don't want to create endpoints for them:
         if (currentClassInfo.name().toString().endsWith(CDI_WRAPPER_SUFFIX)) {
             return Collections.emptyList();
         }
 
-        List<ResourceMethod> ret = new ArrayList<>();
-        String[] classProduces = extractProducesConsumesValues(currentClassInfo.classAnnotation(PRODUCES));
-        String[] classConsumes = extractProducesConsumesValues(currentClassInfo.classAnnotation(CONSUMES));
-        String classSseElementType = null;
-        AnnotationInstance classSseElementTypeAnnotation = currentClassInfo.classAnnotation(REST_SSE_ELEMENT_TYPE);
-        if (classSseElementTypeAnnotation != null) {
-            classSseElementType = classSseElementTypeAnnotation.value().asString();
-        }
+        List<FoundEndpoint> ret = new ArrayList<>();
         Set<String> classNameBindings = NameBindingUtil.nameBindingNames(index, currentClassInfo);
+        if (classNameBindings.isEmpty()) {
+            classNameBindings = existingClassNameBindings;
+        }
 
         for (DotName httpMethod : httpAnnotationToMethod.keySet()) {
-            List<AnnotationInstance> foundMethods = currentClassInfo.annotations().get(httpMethod);
-            if (foundMethods != null) {
-                for (AnnotationInstance annotation : foundMethods) {
-                    MethodInfo info = annotation.target().asMethod();
+            List<MethodInfo> methods = currentClassInfo.methods();
+            for (MethodInfo info : methods) {
+                AnnotationInstance annotation = annotationStore.getAnnotation(info, httpMethod);
+                if (annotation != null) {
                     if (!hasProperModifiers(info)) {
                         continue;
                     }
-                    validateHttpAnnotations(info);
                     String descriptor = methodDescriptor(info);
                     if (seenMethods.contains(descriptor)) {
                         continue;
                     }
                     seenMethods.add(descriptor);
-                    String methodPath = readStringValue(info.annotation(PATH));
-                    if (methodPath != null) {
-                        if (!methodPath.startsWith("/")) {
-                            methodPath = "/" + methodPath;
-                        }
-                    } else {
-                        methodPath = "";
-                    }
-                    ResourceMethod method = createResourceMethod(currentClassInfo, actualEndpointInfo,
-                            classProduces, classConsumes, classNameBindings, httpMethod, info, methodPath, pathParameters,
-                            classSseElementType);
-
-                    ret.add(method);
+                    ret.add(new FoundEndpoint(currentClassInfo, classNameBindings, info, httpMethod));
                 }
             }
         }
+
         //now resource locator methods
-        List<AnnotationInstance> foundMethods = currentClassInfo.annotations().get(PATH);
-        if (foundMethods != null) {
-            for (AnnotationInstance annotation : foundMethods) {
-                if (annotation.target().kind() == AnnotationTarget.Kind.METHOD) {
-                    MethodInfo info = annotation.target().asMethod();
-                    if (!hasProperModifiers(info)) {
-                        continue;
-                    }
-                    String descriptor = methodDescriptor(info);
-                    if (seenMethods.contains(descriptor)) {
-                        continue;
-                    }
-                    seenMethods.add(descriptor);
-                    String methodPath = readStringValue(annotation);
-                    if (methodPath != null) {
-                        if (!methodPath.startsWith("/")) {
-                            methodPath = "/" + methodPath;
-                        }
-                        if (methodPath.endsWith("/")) {
-                            methodPath = methodPath.substring(0, methodPath.length() - 1);
-                        }
-                    }
-                    ResourceMethod method = createResourceMethod(currentClassInfo, actualEndpointInfo,
-                            classProduces, classConsumes, classNameBindings, null, info, methodPath,
-                            pathParameters, classSseElementType);
-                    ret.add(method);
+        List<MethodInfo> methods = currentClassInfo.methods();
+        for (MethodInfo info : methods) {
+            AnnotationInstance annotation = annotationStore.getAnnotation(info, PATH);
+            if (annotation != null) {
+                if (!hasProperModifiers(info)) {
+                    continue;
                 }
+                String descriptor = methodDescriptor(info);
+                if (seenMethods.contains(descriptor)) {
+                    continue;
+                }
+                seenMethods.add(descriptor);
+                ret.add(new FoundEndpoint(currentClassInfo, classNameBindings, info, null));
             }
         }
 
         DotName superClassName = currentClassInfo.superName();
-        if (superClassName != null && !superClassName.equals(ResteasyReactiveDotNames.OBJECT)) {
+        if (superClassName != null && !superClassName.equals(OBJECT)) {
             ClassInfo superClass = index.getClassByName(superClassName);
             if (superClass != null) {
-                ret.addAll(createEndpoints(superClass, actualEndpointInfo, seenMethods,
-                        pathParameters));
+                ret.addAll(collectEndpoints(superClass, actualEndpointInfo, seenMethods, classNameBindings, considerApplication,
+                        httpAnnotationToMethod, index, applicationScanningResult, annotationStore));
             }
         }
         List<DotName> interfaces = currentClassInfo.interfaceNames();
         for (DotName i : interfaces) {
             ClassInfo superClass = index.getClassByName(i);
             if (superClass != null) {
-                ret.addAll(createEndpoints(superClass, actualEndpointInfo, seenMethods,
-                        pathParameters));
+                ret.addAll(collectEndpoints(superClass, actualEndpointInfo, seenMethods, classNameBindings, considerApplication,
+                        httpAnnotationToMethod, index, applicationScanningResult, annotationStore));
             }
         }
         return ret;
+    }
+
+    protected String handleTrailingSlash(String path) {
+        return path;
     }
 
     private void validateHttpAnnotations(MethodInfo info) {
@@ -365,7 +535,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         }
     }
 
-    private boolean hasProperModifiers(MethodInfo info) {
+    private static boolean hasProperModifiers(MethodInfo info) {
         if (isSynthetic(info.flags())) {
             log.debug("Method '" + info.name() + " of Resource class '" + info.declaringClass().name()
                     + "' is a synthetic method and will therefore be ignored");
@@ -384,58 +554,78 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return true;
     }
 
-    private boolean isSynthetic(int mod) {
-        return (mod & Opcodes.ACC_SYNTHETIC) != 0;
+    private static boolean isSynthetic(int mod) {
+        return (mod & 0x1000) != 0; //0x1000 == SYNTHETIC
     }
 
     private ResourceMethod createResourceMethod(ClassInfo currentClassInfo, ClassInfo actualEndpointInfo,
-            String[] classProduces, String[] classConsumes, Set<String> classNameBindings, DotName httpMethod,
-            MethodInfo currentMethodInfo,
-            String methodPath, Set<String> classPathParameters, String classSseElementType) {
+            BasicResourceClassInfo basicResourceClassInfo, Set<String> classNameBindings, DotName httpMethod,
+            MethodInfo currentMethodInfo, String methodPath) {
         try {
             Map<String, Object> methodContext = new HashMap<>();
-            Set<String> pathParameters = new HashSet<>(classPathParameters);
+            methodContext.put(METHOD_CONTEXT_ANNOTATION_STORE, getAnnotationStore());
+            Set<String> pathParameters = new HashSet<>(basicResourceClassInfo.getPathParameters());
             URLUtils.parsePathParameters(methodPath, pathParameters);
-            Map<DotName, AnnotationInstance>[] parameterAnnotations = new Map[currentMethodInfo.parameters().size()];
-            MethodParameter[] methodParameters = new MethodParameter[currentMethodInfo.parameters()
-                    .size()];
-            for (int paramPos = 0; paramPos < currentMethodInfo.parameters().size(); ++paramPos) {
+            Map<DotName, AnnotationInstance>[] parameterAnnotations = new Map[currentMethodInfo.parametersCount()];
+            MethodParameter[] methodParameters = new MethodParameter[currentMethodInfo.parametersCount()];
+            for (int paramPos = 0; paramPos < currentMethodInfo.parametersCount(); ++paramPos) {
                 parameterAnnotations[paramPos] = new HashMap<>();
             }
-            for (AnnotationInstance i : currentMethodInfo.annotations()) {
+            for (AnnotationInstance i : getAnnotationStore().getAnnotations(currentMethodInfo)) {
                 if (i.target().kind() == AnnotationTarget.Kind.METHOD_PARAMETER) {
                     parameterAnnotations[i.target().asMethodParameter().position()].put(i.name(), i);
                 }
             }
-            String[] consumes = extractProducesConsumesValues(currentMethodInfo.annotation(CONSUMES), classConsumes);
+            String[] consumes = extractProducesConsumesValues(getAnnotationStore().getAnnotation(currentMethodInfo, CONSUMES),
+                    basicResourceClassInfo.getConsumes());
             boolean suspended = false;
             boolean sse = false;
-            boolean formParamRequired = false;
-            boolean multipart = false;
-            boolean hasBodyParam = false;
+            boolean formParamRequired = getAnnotationStore().getAnnotation(currentMethodInfo,
+                    ResteasyReactiveDotNames.WITH_FORM_READ) != null;
+            Set<String> fileFormNames = new HashSet<>();
+            Type bodyParamType = null;
             TypeArgMapper typeArgMapper = new TypeArgMapper(currentMethodInfo.declaringClass(), index);
             for (int i = 0; i < methodParameters.length; ++i) {
                 Map<DotName, AnnotationInstance> anns = parameterAnnotations[i];
-                boolean encoded = anns.containsKey(ResteasyReactiveDotNames.ENCODED);
-                Type paramType = currentMethodInfo.parameters().get(i);
+                PARAM parameterResult = null;
+                boolean encoded = anns.containsKey(ENCODED);
+                Type paramType = currentMethodInfo.parameterType(i);
                 String errorLocation = "method " + currentMethodInfo + " on class " + currentMethodInfo.declaringClass();
 
-                PARAM parameterResult = extractParameterInfo(currentClassInfo, actualEndpointInfo,
-                        existingConverters, additionalReaders,
-                        anns, paramType, errorLocation, false, hasRuntimeConverters, pathParameters,
-                        currentMethodInfo.parameterName(i),
-                        methodContext);
+                if (skipParameter(anns)) {
+                    parameterResult = createIndexedParam()
+                            .setCurrentClassInfo(currentClassInfo)
+                            .setActualEndpointInfo(actualEndpointInfo)
+                            .setExistingConverters(existingConverters)
+                            .setAdditionalReaders(additionalReaders)
+                            .setAnns(anns)
+                            .setParamType(paramType)
+                            .setErrorLocation(errorLocation)
+                            .setField(false)
+                            .setHasRuntimeConverters(hasRuntimeConverters)
+                            .setPathParameters(pathParameters)
+                            .setSourceName(currentMethodInfo.parameterName(i))
+                            .setType(ParameterType.SKIPPED);
+                } else {
+                    parameterResult = extractParameterInfo(currentClassInfo, actualEndpointInfo, currentMethodInfo,
+                            existingConverters, additionalReaders,
+                            anns, paramType, errorLocation, false, hasRuntimeConverters, pathParameters,
+                            currentMethodInfo.parameterName(i),
+                            consumes,
+                            methodContext);
+                }
+
                 suspended |= parameterResult.isSuspended();
                 sse |= parameterResult.isSse();
                 String name = parameterResult.getName();
                 String defaultValue = parameterResult.getDefaultValue();
                 ParameterType type = parameterResult.getType();
                 if (type == ParameterType.BODY) {
-                    if (hasBodyParam)
+                    if (bodyParamType != null)
                         throw new RuntimeException(
                                 "Resource method " + currentMethodInfo + " can only have a single body parameter: "
                                         + currentMethodInfo.parameterName(i));
-                    hasBodyParam = true;
+                    bodyParamType = paramType;
                 }
                 String elementType = parameterResult.getElementType();
                 boolean single = parameterResult.isSingle();
@@ -444,119 +634,250 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 }
                 methodParameters[i] = createMethodParameter(currentClassInfo, actualEndpointInfo, encoded, paramType,
                         parameterResult, name, defaultValue, type, elementType, single,
-                        AsmUtil.getSignature(paramType, typeArgMapper));
+                        AsmUtil.getSignature(paramType, typeArgMapper), fileFormNames);
 
-                if (type == ParameterType.BEAN) {
+                if (type == ParameterType.BEAN
+                        || type == ParameterType.MULTI_PART_FORM) {
                     // transform the bean param
-                    formParamRequired |= handleBeanParam(actualEndpointInfo, paramType, methodParameters, i);
-                } else if (type == ParameterType.FORM) {
+                    formParamRequired |= handleBeanParam(actualEndpointInfo, paramType, methodParameters, i, fileFormNames);
+                } else if (type == ParameterType.FORM || type == ParameterType.MULTI_PART_DATA_INPUT) {
                     formParamRequired = true;
-                } else if (type == ParameterType.MULTI_PART_FORM) {
-                    multipart = true;
-                    ClassInfo multipartClassInfo = index.getClassByName(paramType.name());
-                    handleMultipart(multipartClassInfo);
                 }
             }
 
-            if (multipart) {
-                if (hasBodyParam) {
+            if (formParamRequired) {
+                if (bodyParamType != null
+                        && !bodyParamType.name().equals(ResteasyReactiveDotNames.MULTI_VALUED_MAP)
+                        && !bodyParamType.name().equals(ResteasyReactiveDotNames.STRING)) {
                     throw new RuntimeException(
-                            "'@MultipartForm' cannot be used in a resource method that contains a body parameter. Offending method is '"
+                            "'@FormParam' and '@RestForm' cannot be used in a resource method that contains a body parameter. Offending method is '"
                                     + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
                 }
                 boolean validConsumes = false;
-                if (consumes != null) {
+                if (consumes != null && consumes.length > 0) {
                     for (String c : consumes) {
-                        if (c.equals(MediaType.MULTIPART_FORM_DATA)) {
+                        if (c.startsWith(MediaType.MULTIPART_FORM_DATA)
+                                || c.startsWith(MediaType.APPLICATION_FORM_URLENCODED)) {
                             validConsumes = true;
                             break;
                         }
                     }
-                }
-                // TODO: does it make sense to default to MediaType.MULTIPART_FORM_DATA when no consumes is set?
-                if (!validConsumes) {
-                    throw new RuntimeException(
-                            "'@MultipartForm' can only be used on methods that annotated with '@Consumes(MediaType.MULTIPART_FORM_DATA)'. Offending method is '"
-                                    + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
+                    // TODO: does it make sense to default to MediaType.MULTIPART_FORM_DATA when no consumes is set?
+                    if (!validConsumes) {
+                        throw new RuntimeException(
+                                "'@FormParam' and '@RestForm' can only be used on methods annotated with '@Consumes(MediaType.MULTIPART_FORM_DATA)' '@Consumes(MediaType.APPLICATION_FORM_URLENCODED)'. Offending method is '"
+                                        + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
+                    }
                 }
             }
 
-            Type nonAsyncReturnType = getNonAsyncReturnType(methodContext.containsKey(METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY)
+            Type methodContextReturnTypeOrReturnType = methodContext.containsKey(METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY)
                     ? (Type) methodContext.get(METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY)
-                    : currentMethodInfo.returnType());
+                    : currentMethodInfo.returnType();
+            if (REST_RESPONSE.equals(methodContextReturnTypeOrReturnType.name())
+                    && (methodContextReturnTypeOrReturnType.kind() == Kind.CLASS)) {
+                log.warn("Method '" + currentMethodInfo.name() + " of Resource class '"
+                        + currentMethodInfo.declaringClass().name()
+                        + "' returns RestResponse but does not declare a generic type. It is strongly advised to define the generic type otherwise the behavior could be unpredictable");
+            }
+            Type nonAsyncReturnType = getNonAsyncReturnType(methodContextReturnTypeOrReturnType);
             addWriterForType(additionalWriters, nonAsyncReturnType);
 
-            String[] produces = extractProducesConsumesValues(currentMethodInfo.annotation(PRODUCES), classProduces);
-            produces = applyDefaultProduces(produces, nonAsyncReturnType);
-
-            String sseElementType = classSseElementType;
-            AnnotationInstance sseElementTypeAnnotation = currentMethodInfo.annotation(REST_SSE_ELEMENT_TYPE);
-            if (sseElementTypeAnnotation != null) {
-                sseElementType = sseElementTypeAnnotation.value().asString();
+            String streamElementType = basicResourceClassInfo.getStreamElementType();
+            String streamElementTypeInMethod = getStreamAnnotationValue(currentMethodInfo);
+            if (streamElementTypeInMethod != null) {
+                streamElementType = streamElementTypeInMethod;
             }
-            if (((produces != null) && (produces.length == 1) && MediaType.SERVER_SENT_EVENTS.equals(produces[0]))
-                    && (sseElementType == null)) {
-                String[] defaultProducesForType = applyAdditionalDefaults(nonAsyncReturnType);
-                if (defaultProducesForType.length == 1) {
-                    sseElementType = defaultProducesForType[0];
+
+            String[] produces = extractProducesConsumesValues(getAnnotationStore().getAnnotation(currentMethodInfo, PRODUCES));
+            if (((produces == null) || (produces.length == 0)) && (streamElementType != null)) {
+                // when @RestStreamElementType is used, we automatically determine SSE as the @Produces MediaType
+                produces = new String[] { MediaType.SERVER_SENT_EVENTS };
+            } else if (produces == null || produces.length == 0) {
+                // use the @Produces annotation at class level if exists
+                produces = basicResourceClassInfo.getProduces();
+            }
+
+            produces = applyDefaultProducesAndAddCharsets(httpMethod, nonAsyncReturnType, produces);
+
+            boolean returnsMultipart = false;
+            if (produces != null && produces.length == 1) {
+                if (streamElementType == null && MediaType.SERVER_SENT_EVENTS.equals(produces[0])) {
+                    // Handle server sent events responses
+                    String[] defaultProducesForType = applyAdditionalDefaults(nonAsyncReturnType);
+                    if (defaultProducesForType.length == 1) {
+                        streamElementType = defaultProducesForType[0];
+                    }
+                } else if (MediaType.MULTIPART_FORM_DATA.equals(produces[0])) {
+                    if (RESPONSE.equals(nonAsyncReturnType.name())) {
+                        throw new DeploymentException(
+                                String.format(
+                                        "Endpoints that produce a Multipart result cannot return '%s' - consider returning '%s' instead. Offending method is '%s'",
+                                        RESPONSE,
+                                        REST_RESPONSE,
+                                        currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo));
+                    }
+
+                    // Handle multipart form data responses
+                    ClassInfo multipartClassInfo = index.getClassByName(nonAsyncReturnType.name());
+                    returnsMultipart = multipartReturnTypeIndexerExtension.handleMultipartForReturnType(additionalWriters,
+                            multipartClassInfo, index);
                 }
             }
             Set<String> nameBindingNames = nameBindingNames(currentMethodInfo, classNameBindings);
             boolean blocking = isBlocking(currentMethodInfo, defaultBlocking);
+            boolean runOnVirtualThread = isRunOnVirtualThread(currentMethodInfo, defaultBlocking);
             // we want to allow "overriding" the blocking/non-blocking setting from an implementation class
             // when the class defining the annotations is an interface
             if (!actualEndpointInfo.equals(currentClassInfo) && Modifier.isInterface(currentClassInfo.flags())) {
                 MethodInfo actualMethodInfo = actualEndpointInfo.method(currentMethodInfo.name(),
-                        currentMethodInfo.parameters().toArray(new Type[0]));
+                        currentMethodInfo.parameterTypes().toArray(new Type[0]));
                 if (actualMethodInfo != null) {
-                    blocking = isBlocking(actualMethodInfo, blocking);
+                    //we don't pass AUTOMATIC here, as the method signature would be the same, so the same determination
+                    //would be reached for a default
+                    blocking = isBlocking(actualMethodInfo,
+                            blocking ? BlockingDefault.BLOCKING : BlockingDefault.NON_BLOCKING);
+                    runOnVirtualThread = isRunOnVirtualThread(actualMethodInfo,
+                            blocking ? BlockingDefault.BLOCKING : BlockingDefault.NON_BLOCKING);
                 }
             }
 
+            if (returnsMultipart && !blocking) {
+                throw new DeploymentException(
+                        "Endpoints that produce a Multipart result can only be used on blocking methods. Offending method is '"
+                                + currentMethodInfo.declaringClass().name() + "#" + currentMethodInfo + "'");
+            }
+
+            methodContext.put(METHOD_PRODUCES, produces);
             ResourceMethod method = createResourceMethod(currentMethodInfo, actualEndpointInfo, methodContext)
                     .setHttpMethod(httpMethod == null ? null : httpAnnotationToMethod.get(httpMethod))
-                    .setPath(methodPath)
+                    .setPath(sanitizePath(methodPath))
                     .setConsumes(consumes)
                     .setProduces(produces)
                     .setNameBindingNames(nameBindingNames)
                     .setName(currentMethodInfo.name())
                     .setBlocking(blocking)
+                    .setRunOnVirtualThread(runOnVirtualThread)
                     .setSuspended(suspended)
                     .setSse(sse)
-                    .setSseElementType(sseElementType)
+                    .setEncoded(currentMethodInfo.hasDeclaredAnnotation(ENCODED))
+                    .setStreamElementType(streamElementType)
                     .setFormParamRequired(formParamRequired)
-                    .setMultipart(multipart)
+                    .setFileFormNames(fileFormNames)
                     .setParameters(methodParameters)
                     .setSimpleReturnType(
                             toClassName(currentMethodInfo.returnType(), currentClassInfo, actualEndpointInfo, index))
                     // FIXME: resolved arguments ?
                     .setReturnType(
-                            determineReturnType(currentMethodInfo, typeArgMapper, currentClassInfo, actualEndpointInfo, index));
+                            determineReturnType(methodContextReturnTypeOrReturnType, typeArgMapper, currentClassInfo,
+                                    actualEndpointInfo, index));
 
             if (httpMethod == null) {
                 handleClientSubResource(method, currentMethodInfo, index);
             }
 
-            handleAdditionalMethodProcessing((METHOD) method, currentClassInfo, currentMethodInfo);
+            handleAdditionalMethodProcessing((METHOD) method, currentClassInfo, currentMethodInfo, getAnnotationStore());
             if (resourceMethodCallback != null) {
-                resourceMethodCallback.accept(new AbstractMap.SimpleEntry<>(currentMethodInfo, method));
+                resourceMethodCallback.accept(
+                        new ResourceMethodCallbackEntry(this, index, basicResourceClassInfo, actualEndpointInfo,
+                                currentMethodInfo,
+                                method));
             }
             return method;
         } catch (Exception e) {
-            throw new RuntimeException("Failed to process method " + currentMethodInfo.declaringClass().name() + "#"
-                    + currentMethodInfo, e);
+            throw new RuntimeException("Failed to process method '" + currentMethodInfo.declaringClass().name() + "#"
+                    + currentMethodInfo.name() + "'", e);
         }
+    }
+
+    protected boolean skipParameter(Map<DotName, AnnotationInstance> anns) {
+        return skipMethodParameter != null && skipMethodParameter.test(anns);
+    }
+
+    private String[] applyDefaultProducesAndAddCharsets(DotName httpMethod, Type nonAsyncReturnType, String[] produces) {
+        return addDefaultCharsets(applyDefaultProduces(produces, nonAsyncReturnType, httpMethod));
     }
 
     protected void handleClientSubResource(ResourceMethod resourceMethod, MethodInfo method, IndexView index) {
 
     }
 
-    private boolean isBlocking(MethodInfo info, boolean defaultValue) {
+    private String getStreamAnnotationValue(AnnotationTarget target) {
+        String value = getAnnotationValueAsString(target, REST_STREAM_ELEMENT_TYPE);
+        if (value == null) {
+            value = getAnnotationValueAsString(target, REST_SSE_ELEMENT_TYPE);
+        }
+
+        return value;
+    }
+
+    private String getAnnotationValueAsString(AnnotationTarget target, DotName annotationType) {
+        String value = null;
+        AnnotationInstance annotation = getAnnotationStore().getAnnotation(target, annotationType);
+        if (annotation != null) {
+            value = annotation.value().asString();
+        }
+
+        return value;
+    }
+
+    private boolean isRunOnVirtualThread(MethodInfo info, BlockingDefault defaultValue) {
+        boolean isRunOnVirtualThread = false;
+        Map.Entry<AnnotationTarget, AnnotationInstance> runOnVirtualThreadAnnotation = getInheritableAnnotation(info,
+                RUN_ON_VIRTUAL_THREAD);
+
+        if (runOnVirtualThreadAnnotation != null) {
+            if (!JDK_SUPPORTS_VIRTUAL_THREADS) {
+                throw new DeploymentException("Method '" + info.name() + "' of class '" + info.declaringClass().name()
+                        + "' uses @RunOnVirtualThread but the JDK version '" + Runtime.version() +
+                        "' and doesn't support virtual threads");
+            }
+            if (targetJavaVersion.isJava19OrHigher() == Status.FALSE) {
+                throw new DeploymentException("Method '" + info.name() + "' of class '" + info.declaringClass().name()
+                        + "' uses @RunOnVirtualThread but the target JDK version doesn't support virtual threads. Please configure your build tool to target Java 19 or above");
+            }
+            isRunOnVirtualThread = true;
+        }
+
+        //BlockingDefault.BLOCKING should mean "block a platform thread" ? here it does
+        if (defaultValue == BlockingDefault.BLOCKING) {
+            return false;
+        } else if (defaultValue == BlockingDefault.RUN_ON_VIRTUAL_THREAD) {
+            isRunOnVirtualThread = true;
+        } else if (defaultValue == BlockingDefault.NON_BLOCKING) {
+            return false;
+        }
+
+        if (isRunOnVirtualThread && !isBlocking(info, defaultValue)) {
+            throw new DeploymentException(
+                    "Method '" + info.name() + "' of class '" + info.declaringClass().name()
+                            + "' is considered a non blocking method. @RunOnVirtualThread can only be used on " +
+                            " methods considered blocking");
+        } else if (isRunOnVirtualThread) {
+            return true;
+        }
+
+        return false;
+    }
+
+    private boolean isBlocking(MethodInfo info, BlockingDefault defaultValue) {
         Map.Entry<AnnotationTarget, AnnotationInstance> blockingAnnotation = getInheritableAnnotation(info, BLOCKING);
+        Map.Entry<AnnotationTarget, AnnotationInstance> runOnVirtualThreadAnnotation = getInheritableAnnotation(info,
+                RUN_ON_VIRTUAL_THREAD);
         Map.Entry<AnnotationTarget, AnnotationInstance> nonBlockingAnnotation = getInheritableAnnotation(info,
                 NON_BLOCKING);
+
         if ((blockingAnnotation != null) && (nonBlockingAnnotation != null)) {
+            if (blockingAnnotation.getKey().kind() == nonBlockingAnnotation.getKey().kind()) {
+                if (blockingAnnotation.getKey().kind() == AnnotationTarget.Kind.METHOD) {
+                    throw new DeploymentException(
+                            "Method '" + info.name() + "' of class '" + info.declaringClass().name()
+                                    + "' contains both @Blocking and @NonBlocking annotations.");
+                } else {
+                    throw new DeploymentException("Class '" + info.declaringClass().name()
+                            + "' contains both @Blocking and @NonBlocking annotations.");
+                }
+            }
             if (blockingAnnotation.getKey().kind() == AnnotationTarget.Kind.METHOD) {
                 // the most specific annotation was the @Blocking annotation on the method
                 return true;
@@ -564,32 +885,46 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 // the most specific annotation was the @NonBlocking annotation on the method
                 return false;
             }
-        } else if ((blockingAnnotation != null) && (nonBlockingAnnotation == null)) {
+        } else if ((blockingAnnotation != null)) {
             return true;
-        } else if ((nonBlockingAnnotation != null) && (blockingAnnotation == null)) {
+        } else if ((nonBlockingAnnotation != null)) {
             return false;
         }
-        return defaultValue;
-    }
-
-    protected void handleMultipart(ClassInfo multipartClassInfo) {
-
-    }
-
-    private String determineReturnType(MethodInfo info, TypeArgMapper typeArgMapper, ClassInfo currentClassInfo,
-            ClassInfo actualEndpointInfo, IndexView index) {
-        Type type = info.returnType();
-        if (type.kind() == Type.Kind.TYPE_VARIABLE) {
-            type = resolveTypeVariable(type.asTypeVariable(), currentClassInfo, actualEndpointInfo, index);
+        Map.Entry<AnnotationTarget, AnnotationInstance> transactional = getInheritableAnnotation(info, TRANSACTIONAL); //we treat this the same as blocking, as JTA is blocking, but it is lower priority
+        if (defaultValue == BlockingDefault.BLOCKING) {
+            return true;
+        } else if (defaultValue == BlockingDefault.RUN_ON_VIRTUAL_THREAD) {
+            return false;
+        } else if (defaultValue == BlockingDefault.NON_BLOCKING) {
+            return false;
+        } else if (transactional != null) {
+            return true;
         }
-        return AsmUtil.getSignature(type, typeArgMapper);
+        return doesMethodHaveBlockingSignature(info);
+    }
+
+    protected boolean doesMethodHaveBlockingSignature(MethodInfo info) {
+        return true;
+    }
+
+    private String determineReturnType(Type returnType, TypeArgMapper typeArgMapper, ClassInfo currentClassInfo,
+            ClassInfo actualEndpointInfo, IndexView index) {
+        if (returnType.kind() == Type.Kind.TYPE_VARIABLE) {
+            returnType = resolveTypeVariable(returnType.asTypeVariable(), currentClassInfo, actualEndpointInfo, index);
+        }
+        return AsmUtil.getSignature(returnType, typeArgMapper);
     }
 
     protected abstract boolean handleBeanParam(ClassInfo actualEndpointInfo, Type paramType, MethodParameter[] methodParameters,
-            int i);
+            int i, Set<String> fileFormNames);
 
-    protected void handleAdditionalMethodProcessing(METHOD method, ClassInfo currentClassInfo, MethodInfo info) {
+    protected void handleAdditionalMethodProcessing(METHOD method, ClassInfo currentClassInfo, MethodInfo info,
+            AnnotationStore annotationStore) {
 
+    }
+
+    public boolean additionalRegisterClassForReflectionCheck(ResourceMethodCallbackEntry entry) {
+        return false;
     }
 
     protected abstract InjectableBean scanInjectableBean(ClassInfo currentClassInfo,
@@ -601,12 +936,35 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
     protected abstract MethodParameter createMethodParameter(ClassInfo currentClassInfo, ClassInfo actualEndpointInfo,
             boolean encoded, Type paramType, PARAM parameterResult, String name, String defaultValue,
-            ParameterType type, String elementType, boolean single, String signature);
+            ParameterType type, String elementType, boolean single, String signature,
+            Set<String> fileFormNames);
 
-    private String[] applyDefaultProduces(String[] produces, Type nonAsyncReturnType) {
+    private String[] applyDefaultProduces(String[] produces, Type nonAsyncReturnType,
+            DotName httpMethod) {
+        setupApplyDefaults(nonAsyncReturnType, httpMethod);
         if (produces != null && produces.length != 0)
             return produces;
         return applyAdditionalDefaults(nonAsyncReturnType);
+    }
+
+    // see https://github.com/quarkusio/quarkus/issues/19535
+    private String[] addDefaultCharsets(String[] produces) {
+        if ((produces == null) || (produces.length == 0)) {
+            return produces;
+        }
+        List<String> result = new ArrayList<>(produces.length);
+        for (String p : produces) {
+            if (p.equals(MediaType.TEXT_PLAIN)) {
+                result.add(MediaType.TEXT_PLAIN + ";charset=" + StandardCharsets.UTF_8.name());
+            } else {
+                result.add(p);
+            }
+        }
+        return result.toArray(EMPTY_STRING_ARRAY);
+    }
+
+    protected void setupApplyDefaults(Type nonAsyncReturnType, DotName httpMethod) {
+
     }
 
     protected String[] applyAdditionalDefaults(Type nonAsyncReturnType) {
@@ -627,8 +985,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 // NOTE: same code in RuntimeResourceDeployment.getNonAsyncReturnType
                 ParameterizedType parameterizedType = returnType.asParameterizedType();
                 if (COMPLETION_STAGE.equals(parameterizedType.name())
+                        || COMPLETABLE_FUTURE.equals(parameterizedType.name())
                         || UNI.equals(parameterizedType.name())
                         || MULTI.equals(parameterizedType.name())
+                        || REST_MULTI.equals(parameterizedType.name())
                         || REST_RESPONSE.equals(parameterizedType.name())) {
                     return parameterizedType.arguments().get(0);
                 }
@@ -637,7 +997,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         }
         return returnType;
         // FIXME: should be an exception, but we have incomplete support for generics ATM, so we still
-        // have some unresolved type vars and they do pass _some_ tests 
+        // have some unresolved type vars and they do pass _some_ tests
         //        throw new UnsupportedOperationException("Endpoint return type not supported yet: " + returnType);
     }
 
@@ -651,19 +1011,19 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return Objects.requireNonNull(result);
     }
 
-    private static Map.Entry<AnnotationTarget, AnnotationInstance> getInheritableAnnotation(MethodInfo info, DotName name) {
+    private Map.Entry<AnnotationTarget, AnnotationInstance> getInheritableAnnotation(MethodInfo info, DotName name) {
         // try method first, class second
-        AnnotationInstance annotation = info.annotation(name);
+        AnnotationInstance annotation = getAnnotationStore().getAnnotation(info, name);
         AnnotationTarget target = info;
         if (annotation == null) {
-            annotation = info.declaringClass().classAnnotation(name);
+            annotation = getAnnotationStore().getAnnotation(info.declaringClass(), name);
             target = info.declaringClass();
         }
         return annotation != null ? new AbstractMap.SimpleEntry<>(target, annotation) : null;
     }
 
     private static String methodDescriptor(MethodInfo info) {
-        return info.name() + ":" + AsmUtil.getDescriptor(info, s -> null);
+        return info.name() + ":" + info.descriptor();
     }
 
     private static boolean moreThanOne(AnnotationInstance... annotations) {
@@ -707,19 +1067,18 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     result.add(t.trim());
                 }
             }
-            return result.toArray(new String[0]);
+            return result.toArray(EMPTY_STRING_ARRAY);
         } else {
             return originalStrings;
         }
 
     }
 
-    public static String readStringValue(AnnotationInstance annotationInstance) {
-        String classProduces = null;
+    private static String readStringValue(AnnotationInstance annotationInstance) {
         if (annotationInstance != null) {
-            classProduces = annotationInstance.value().asString();
+            return annotationInstance.value().asString();
         }
-        return classProduces;
+        return null;
     }
 
     protected static String toClassName(Type indexType, ClassInfo currentClass, ClassInfo actualEndpointClass,
@@ -738,7 +1097,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             case WILDCARD_TYPE:
                 WildcardType wildcardType = indexType.asWildcardType();
                 Type extendsBound = wildcardType.extendsBound();
-                if (extendsBound.name().equals(ResteasyReactiveDotNames.OBJECT)) {
+                if (extendsBound.name().equals(OBJECT)) {
                     // this is a super bound type that we don't support
                     throw new RuntimeException("Cannot handle wildcard type " + indexType);
                 }
@@ -771,17 +1130,41 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             }
         }
         if (pos != -1) {
-            List<Type> params = JandexUtil.resolveTypeParameters(actualEndpointClass.name(), currentClass.name(),
-                    indexView);
-
-            Type resolved = params.get(pos);
-            if (resolved.kind() != Type.Kind.TYPE_VARIABLE
-                    || !resolved.asTypeVariable().identifier().equals(typeVariable.identifier())) {
+            Type resolved = resolveTypeParameters(pos, actualEndpointClass, currentClass, indexView);
+            if (resolved != null
+                    && (resolved.kind() != Type.Kind.TYPE_VARIABLE
+                            || !resolved.asTypeVariable().identifier().equals(typeVariable.identifier()))) {
                 return resolved;
             }
         }
 
         return typeVariable.bounds().get(0);
+    }
+
+    private static Type resolveTypeParameters(int position, ClassInfo actualEndpointClass, ClassInfo currentClass,
+            IndexView indexView) {
+        List<Type> params = JandexUtil.resolveTypeParameters(actualEndpointClass.name(), currentClass.name(),
+                indexView);
+
+        if (position < params.size()) {
+            return params.get(position);
+        }
+
+        // if not found, try to find the type from the methods
+        for (MethodInfo method : actualEndpointClass.methods()) {
+            for (int paramIndex = 0; paramIndex < method.parametersCount(); paramIndex++) {
+                Type paramType = method.parameterType(paramIndex);
+                if (paramType.kind() == Kind.PARAMETERIZED_TYPE) {
+                    ParameterizedType parameterizedType = paramType.asParameterizedType();
+                    if (parameterizedType.name().equals(currentClass.name())
+                            && position < parameterizedType.arguments().size()) {
+                        return parameterizedType.arguments().get(position);
+                    }
+                }
+            }
+        }
+
+        return null;
     }
 
     private static String appendPath(String prefix, String suffix) {
@@ -803,9 +1186,10 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     protected abstract PARAM createIndexedParam();
 
     public PARAM extractParameterInfo(ClassInfo currentClassInfo, ClassInfo actualEndpointInfo,
-            Map<String, String> existingConverters, AdditionalReaders additionalReaders,
+            MethodInfo currentMethodInfo, Map<String, String> existingConverters, AdditionalReaders additionalReaders,
             Map<DotName, AnnotationInstance> anns, Type paramType, String errorLocation, boolean field,
             boolean hasRuntimeConverters, Set<String> pathParameters, String sourceName,
+            String[] declaredConsumes,
             Map<String, Object> methodContext) {
         PARAM builder = createIndexedParam()
                 .setCurrentClassInfo(currentClassInfo)
@@ -859,10 +1243,12 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         } else if (queryParam != null) {
             builder.setName(queryParam.value().asString());
             builder.setType(ParameterType.QUERY);
+            builder.setSeparator(getSeparator(anns));
             convertible = true;
         } else if (restQueryParam != null) {
             builder.setName(valueOrDefault(restQueryParam.value(), sourceName));
             builder.setType(ParameterType.QUERY);
+            builder.setSeparator(getSeparator(anns));
             convertible = true;
         } else if (cookieParam != null) {
             builder.setName(cookieParam.value().asString());
@@ -878,7 +1264,7 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             convertible = true;
         } else if (restHeaderParam != null) {
             if (restHeaderParam.value() == null || restHeaderParam.value().asString().isEmpty()) {
-                builder.setName(StringUtil.hyphenate(sourceName));
+                builder.setName(StringUtil.hyphenateWithCapitalFirstLetter(sourceName));
             } else {
                 builder.setName(restHeaderParam.value().asString());
             }
@@ -887,11 +1273,11 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         } else if (formParam != null) {
             builder.setName(formParam.value().asString());
             builder.setType(ParameterType.FORM);
-            convertible = true;
+            convertible = isFormParamConvertible(paramType);
         } else if (restFormParam != null) {
             builder.setName(valueOrDefault(restFormParam.value(), sourceName));
             builder.setType(ParameterType.FORM);
-            convertible = true;
+            convertible = isFormParamConvertible(paramType);
         } else if (matrixParam != null) {
             builder.setName(matrixParam.value().asString());
             builder.setType(ParameterType.MATRIX);
@@ -923,16 +1309,28 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                     && isContextType(paramType.asClassType())) {
                 // no name required
                 builder.setType(ParameterType.CONTEXT);
+            } else if (!field
+                    && paramType.kind() == Kind.CLASS
+                    && isParameterContainerType(paramType.asClassType())) {
+                // auto @BeanParam/@MultipartForm parameters
+                builder.setType(ParameterType.BEAN);
             } else if (!field && pathParameters.contains(sourceName)) {
                 builder.setName(sourceName);
                 builder.setType(ParameterType.PATH);
+                builder.setErrorLocation(builder.getErrorLocation()
+                        + " (this parameter name matches the @Path parameter name, so it has been implicitly assumed to be an @PathParam and not the request body)");
                 convertible = true;
+            } else if (!field && paramType.name().equals(MULTI_PART_DATA_INPUT)) {
+                builder.setType(ParameterType.MULTI_PART_DATA_INPUT);
+                builder.setSingle(true);
+                return builder;
             } else {
                 //un-annotated field
                 //just ignore it
                 if (field) {
                     return builder;
                 }
+                builder.setName(sourceName);
                 builder.setType(ParameterType.BODY);
             }
         }
@@ -967,12 +1365,21 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
                 typeHandled = true;
                 elementType = toClassName(pt.arguments().get(0), currentClassInfo, actualEndpointInfo, index);
                 if (convertible) {
-                    handleOptionalParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+                    String genericElementType = null;
+                    if (pt.arguments().get(0).kind() == Kind.PARAMETERIZED_TYPE) {
+                        genericElementType = toClassName(pt.arguments().get(0).asParameterizedType().arguments().get(0),
+                                currentClassInfo, actualEndpointInfo, index);
+                    }
+
+                    handleOptionalParam(existingConverters, anns, errorLocation, hasRuntimeConverters, builder, elementType,
+                            genericElementType, currentMethodInfo);
                 }
                 builder.setOptional(true);
             } else if (convertible) {
-                throw new RuntimeException("Invalid parameter type '" + pt + "' used on method " + errorLocation);
-            } else {
+                typeHandled = true;
+                elementType = toClassName(pt, currentClassInfo, actualEndpointInfo, index);
+                handleOtherParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+            } else if (builder.getType() != ParameterType.BEAN) {
                 // the "element" type is not of importance as in this case the signature is used at runtime to determine the proper types
                 elementType = DUMMY_ELEMENT_TYPE.toString();
                 addReaderForType(additionalReaders, pt);
@@ -982,10 +1389,46 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             elementType = paramType.name().toString();
             handlePathSegmentParam(builder);
             typeHandled = true;
-        } else if ((paramType.name().equals(LOCAL_DATE)) && (type == ParameterType.PATH || type == ParameterType.QUERY)) {
+        } else if (SUPPORT_TEMPORAL_PARAMS.contains(paramType.name())
+                && (type == ParameterType.PATH || type == ParameterType.QUERY || type == ParameterType.FORM
+                        || type == ParameterType.COOKIE || type == ParameterType.HEADER)) {
             elementType = paramType.name().toString();
-            handleLocalDateParam(builder);
+            handleTemporalParam(builder, paramType.name(), anns, currentMethodInfo);
             typeHandled = true;
+        } else if (paramType.name().equals(LIST) && (type == ParameterType.QUERY
+                || type == ParameterType.HEADER)) { // RESTEasy Classic handles the non-generic List type
+            elementType = String.class.getName();
+            typeHandled = true;
+            builder.setSingle(false);
+            if (convertible) {
+                handleListParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+            }
+        } else if (paramType.name().equals(SET) && type == ParameterType.HEADER) { // RESTEasy Classic handles the non-generic Set type
+            elementType = String.class.getName();
+            typeHandled = true;
+            builder.setSingle(false);
+            if (convertible) {
+                handleSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+            }
+        } else if (paramType.name().equals(SORTED_SET) && type == ParameterType.HEADER) { // RESTEasy Classic handles the non-generic SortedSet type
+            elementType = String.class.getName();
+            typeHandled = true;
+            builder.setSingle(false);
+            if (convertible) {
+                handleSortedSetParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+            }
+        } else if (paramType.kind() == Kind.ARRAY) {
+            ArrayType at = paramType.asArrayType();
+            typeHandled = true;
+            // special case do not treat byte[] for multipart form values
+            if (builder.type != ParameterType.FORM
+                    || convertible) {
+                builder.setSingle(false);
+            }
+            elementType = toClassName(at.constituent(), currentClassInfo, actualEndpointInfo, index);
+            if (convertible) {
+                handleArrayParam(existingConverters, errorLocation, hasRuntimeConverters, builder, elementType);
+            }
         }
 
         if (!typeHandled) {
@@ -1003,8 +1446,22 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         if (suspendedAnnotation != null && !elementType.equals(AsyncResponse.class.getName())) {
             throw new RuntimeException("Can only inject AsyncResponse on methods marked @Suspended");
         }
+        if (builder.isSingle() && builder.getSeparator() != null) {
+            throw new DeploymentException("Single parameters should not be marked with @Separator");
+        }
         builder.setElementType(elementType);
         return builder;
+    }
+
+    private boolean isFormParamConvertible(Type paramType) {
+        // let's not call the array converter for byte[] for multipart
+        if (paramType.kind() == Kind.ARRAY
+                && paramType.asArrayType().constituent().kind() == Kind.PRIMITIVE
+                && paramType.asArrayType().constituent().asPrimitiveType().primitive() == Primitive.BYTE) {
+            return false;
+        } else {
+            return true;
+        }
     }
 
     protected boolean handleCustomParameter(Map<DotName, AnnotationInstance> anns, PARAM builder, Type paramType, boolean field,
@@ -1015,7 +1472,28 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
     protected void handlePathSegmentParam(PARAM builder) {
     }
 
-    protected void handleLocalDateParam(PARAM builder) {
+    protected void handleTemporalParam(PARAM builder, DotName name, Map<DotName, AnnotationInstance> parameterAnnotations,
+            MethodInfo currentMethodInfo) {
+    }
+
+    protected DeclaredTypes getDeclaredTypes(Type paramType, ClassInfo currentClassInfo, ClassInfo actualEndpointInfo) {
+        String declaredType = toClassName(paramType, currentClassInfo, actualEndpointInfo, index);
+        String declaredUnresolvedType;
+        if (paramType.kind() == Kind.TYPE_VARIABLE) {
+            // we need to handle this specially since we want the actual declared type here and not the resolved type
+            // that toClassName(...) gives us
+            TypeVariable typeVariable = paramType.asTypeVariable();
+            if (typeVariable.bounds().isEmpty()) {
+                declaredUnresolvedType = Object.class.getName();
+            } else {
+                declaredUnresolvedType = typeVariable.bounds().get(0).name().toString();
+            }
+
+        } else {
+            declaredUnresolvedType = declaredType;
+        }
+
+        return new DeclaredTypes(declaredType, declaredUnresolvedType);
     }
 
     protected void handleOtherParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
@@ -1026,8 +1504,11 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             boolean hasRuntimeConverters, PARAM builder, String elementType) {
     }
 
-    protected void handleOptionalParam(Map<String, String> existingConverters, String errorLocation,
-            boolean hasRuntimeConverters, PARAM builder, String elementType) {
+    protected void handleOptionalParam(Map<String, String> existingConverters,
+            Map<DotName, AnnotationInstance> parameterAnnotations,
+            String errorLocation,
+            boolean hasRuntimeConverters, PARAM builder, String elementType, String genericElementType,
+            MethodInfo currentMethodInfo) {
     }
 
     protected void handleSetParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
@@ -1038,8 +1519,16 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             PARAM builder, String elementType) {
     }
 
-    protected boolean isContextType(ClassType klass) {
-        return CONTEXT_TYPES.contains(klass.name());
+    protected void handleArrayParam(Map<String, String> existingConverters, String errorLocation, boolean hasRuntimeConverters,
+            PARAM builder, String elementType) {
+    }
+
+    final boolean isContextType(ClassType klass) {
+        return contextTypes.contains(klass.name());
+    }
+
+    final boolean isParameterContainerType(ClassType klass) {
+        return parameterContainerTypes.contains(klass.name());
     }
 
     private String valueOrDefault(AnnotationValue annotation, String defaultValue) {
@@ -1057,12 +1546,118 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         return NameBindingUtil.nameBindingNames(index, methodInfo, forClass);
     }
 
+    protected AnnotationStore getAnnotationStore() {
+        return annotationStore;
+    }
+
+    protected String getPartMime(Map<DotName, AnnotationInstance> annotations) {
+        AnnotationInstance partType = annotations.get(ResteasyReactiveDotNames.PART_TYPE_NAME);
+        String mimeType = null;
+        if (partType != null && partType.value() != null) {
+            mimeType = partType.value().asString();
+            // remove what ends up being the default
+            if (MediaType.TEXT_PLAIN.equals(mimeType)) {
+                mimeType = null;
+            }
+        }
+        return mimeType;
+    }
+
+    protected String getSeparator(Map<DotName, AnnotationInstance> annotations) {
+        AnnotationInstance separator = annotations.get(ResteasyReactiveDotNames.SEPARATOR);
+        String result = null;
+        if (separator != null && separator.value() != null) {
+            result = separator.value().asString();
+        }
+        return result;
+    }
+
+    protected boolean hasJson(String[] types) {
+        if (types == null) {
+            return false;
+        }
+        for (String type : types) {
+            if (isJson(type)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    protected boolean isJson(String type) {
+        if (type == null) {
+            return false;
+        }
+        return type.startsWith(MediaType.APPLICATION_JSON);
+    }
+
+    protected boolean hasJson(ResourceMethod method) {
+        return hasJson(method.getProduces()) || hasJson(method.getConsumes()) || isJson(method.getStreamElementType());
+    }
+
+    protected boolean hasNoTypesDefined(ResourceMethod method) {
+        return (method.getProduces() == null || method.getProduces().length == 0) &&
+                (method.getConsumes() == null || method.getConsumes().length == 0) &&
+                (method.getStreamElementType() == null);
+    }
+
+    protected boolean isDefaultJson(DefaultProducesHandler jsonDefaultProducersHandler,
+            DefaultProducesHandler.Context context) {
+        List<MediaType> mediaTypes = jsonDefaultProducersHandler.handle(context);
+        for (MediaType mediaType : mediaTypes) {
+            if (isJson(mediaType.toString())) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    protected SerializerScanningResult getSerializerScanningResult() {
+        if (serializerScanningResult == null) {
+            serializerScanningResult = ResteasyReactiveScanner.scanForSerializers(index, applicationScanningResult);
+        }
+        return serializerScanningResult;
+    }
+
+    protected void warnAboutMissingJsonProviderIfNeeded(ResourceMethod method, MethodInfo info,
+            DefaultProducesHandler jsonDefaultProducersHandler,
+            DefaultProducesHandler.Context context) {
+        if (hasJson(method) || (hasNoTypesDefined(method) && isDefaultJson(jsonDefaultProducersHandler, context))) {
+            boolean appProvidedJsonReaderExists = appProvidedJsonProviderExists(getSerializerScanningResult().getReaders());
+            boolean appProvidedJsonWriterExists = appProvidedJsonProviderExists(getSerializerScanningResult().getWriters());
+            if (!appProvidedJsonReaderExists || !appProvidedJsonWriterExists) {
+                logMissingJsonWarning(info);
+            }
+        }
+    }
+
+    private boolean appProvidedJsonProviderExists(List<ScannedSerializer> providers) {
+        boolean appProvidedJsonReaderExists = false;
+        for (ScannedSerializer provider : providers) {
+            for (String mt : provider.getMediaTypeStrings()) {
+                if (isJson(mt)) {
+                    appProvidedJsonReaderExists = true;
+                    break;
+                }
+            }
+            if (appProvidedJsonReaderExists) {
+                break;
+            }
+        }
+        return appProvidedJsonReaderExists;
+    }
+
+    protected void logMissingJsonWarning(MethodInfo info) {
+
+    }
+
     @SuppressWarnings({ "unchecked", "rawtypes" })
     public static abstract class Builder<T extends EndpointIndexer<T, ?, METHOD>, B extends Builder<T, B, METHOD>, METHOD extends ResourceMethod> {
-        private Function<String, BeanFactory<Object>> factoryCreator = new ReflectionBeanFactoryCreator();
-        private boolean defaultBlocking;
+        private Function<String, BeanFactory<Object>> factoryCreator;
+        private BlockingDefault defaultBlocking = BlockingDefault.AUTOMATIC;
         private IndexView index;
-        private Map<String, String> existingConverters;
+        private IndexView applicationIndex;
+        private Map<String, String> existingConverters = new HashMap<>();
         private Map<DotName, String> scannedResourcePaths;
         private ResteasyReactiveConfig config;
         private AdditionalReaders additionalReaders;
@@ -1071,9 +1666,30 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
         private AdditionalWriters additionalWriters;
         private boolean hasRuntimeConverters;
         private Map<DotName, Map<String, String>> classLevelExceptionMappers;
-        private Consumer<Map.Entry<MethodInfo, ResourceMethod>> resourceMethodCallback;
+        private Consumer<ResourceMethodCallbackEntry> resourceMethodCallback;
+        private Collection<AnnotationsTransformer> annotationsTransformers;
+        private ApplicationScanningResult applicationScanningResult;
+        private final Set<DotName> contextTypes = new HashSet<>(DEFAULT_CONTEXT_TYPES);
+        private final Set<DotName> parameterContainerTypes = new HashSet<>();
+        private MultipartReturnTypeIndexerExtension multipartReturnTypeIndexerExtension = new MultipartReturnTypeIndexerExtension() {
+            @Override
+            public boolean handleMultipartForReturnType(AdditionalWriters additionalWriters, ClassInfo multipartClassInfo,
+                    IndexView indexView) {
+                return false;
+            }
+        };
+        private TargetJavaVersion targetJavaVersion = new TargetJavaVersion.Unknown();
 
-        public B setDefaultBlocking(boolean defaultBlocking) {
+        private Function<ClassInfo, Supplier<Boolean>> isDisabledCreator = null;
+
+        private Predicate<Map<DotName, AnnotationInstance>> skipMethodParameter = null;
+
+        public B setMultipartReturnTypeIndexerExtension(MultipartReturnTypeIndexerExtension multipartReturnTypeHandler) {
+            this.multipartReturnTypeIndexerExtension = multipartReturnTypeHandler;
+            return (B) this;
+        }
+
+        public B setDefaultBlocking(BlockingDefault defaultBlocking) {
             this.defaultBlocking = defaultBlocking;
             return (B) this;
         }
@@ -1085,6 +1701,31 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
 
         public B setIndex(IndexView index) {
             this.index = index;
+            return (B) this;
+        }
+
+        public B setApplicationIndex(IndexView index) {
+            this.applicationIndex = index;
+            return (B) this;
+        }
+
+        public B addContextType(DotName contextType) {
+            this.contextTypes.add(contextType);
+            return (B) this;
+        }
+
+        public B addContextTypes(Collection<DotName> contextTypes) {
+            this.contextTypes.addAll(contextTypes);
+            return (B) this;
+        }
+
+        public B addParameterContainerType(DotName parameterContainerType) {
+            this.parameterContainerTypes.add(parameterContainerType);
+            return (B) this;
+        }
+
+        public B addParameterContainerTypes(Collection<DotName> parameterContainerTypes) {
+            this.parameterContainerTypes.addAll(parameterContainerTypes);
             return (B) this;
         }
 
@@ -1133,12 +1774,165 @@ public abstract class EndpointIndexer<T extends EndpointIndexer<T, PARAM, METHOD
             return (B) this;
         }
 
-        public B setResourceMethodCallback(Consumer<Map.Entry<MethodInfo, ResourceMethod>> resourceMethodCallback) {
+        public B setResourceMethodCallback(Consumer<ResourceMethodCallbackEntry> resourceMethodCallback) {
             this.resourceMethodCallback = resourceMethodCallback;
+            return (B) this;
+        }
+
+        public B setAnnotationsTransformers(Collection<AnnotationsTransformer> annotationsTransformers) {
+            this.annotationsTransformers = annotationsTransformers;
+            return (B) this;
+        }
+
+        public B setApplicationScanningResult(ApplicationScanningResult applicationScanningResult) {
+            this.applicationScanningResult = applicationScanningResult;
+            return (B) this;
+        }
+
+        public B setTargetJavaVersion(TargetJavaVersion targetJavaVersion) {
+            this.targetJavaVersion = targetJavaVersion;
+            return (B) this;
+        }
+
+        public B setIsDisabledCreator(
+                Function<ClassInfo, Supplier<Boolean>> isDisabledCreator) {
+            this.isDisabledCreator = isDisabledCreator;
+            return (B) this;
+        }
+
+        public B setSkipMethodParameter(
+                Predicate<Map<DotName, AnnotationInstance>> skipMethodParameter) {
+            this.skipMethodParameter = skipMethodParameter;
             return (B) this;
         }
 
         public abstract T build();
     }
 
+    public static class BasicResourceClassInfo {
+        private final String path;
+        private final String[] produces;
+        private final String[] consumes;
+        private final Set<String> pathParameters;
+        private final String streamElementType;
+
+        public BasicResourceClassInfo(String path, String[] produces, String[] consumes, Set<String> pathParameters,
+                String streamElementType) {
+            this.path = path;
+            this.produces = produces;
+            this.consumes = consumes;
+            this.pathParameters = pathParameters;
+            this.streamElementType = streamElementType;
+        }
+
+        public String getPath() {
+            return path;
+        }
+
+        public String[] getProduces() {
+            return produces;
+        }
+
+        public String[] getConsumes() {
+            return consumes;
+        }
+
+        public Set<String> getPathParameters() {
+            return pathParameters;
+        }
+
+        public String getStreamElementType() {
+            return streamElementType;
+        }
+    }
+
+    @SuppressWarnings("rawtypes")
+    public static class ResourceMethodCallbackEntry {
+
+        private final EndpointIndexer indexer;
+        private final IndexView index;
+        private final BasicResourceClassInfo basicResourceClassInfo;
+        private final ClassInfo actualEndpointInfo;
+        private final MethodInfo methodInfo;
+        private final ResourceMethod resourceMethod;
+
+        public ResourceMethodCallbackEntry(EndpointIndexer indexer, IndexView index,
+                BasicResourceClassInfo basicResourceClassInfo,
+                ClassInfo actualEndpointInfo,
+                MethodInfo methodInfo, ResourceMethod resourceMethod) {
+            this.indexer = indexer;
+            this.index = index;
+            this.basicResourceClassInfo = basicResourceClassInfo;
+            this.methodInfo = methodInfo;
+            this.actualEndpointInfo = actualEndpointInfo;
+            this.resourceMethod = resourceMethod;
+        }
+
+        public BasicResourceClassInfo getBasicResourceClassInfo() {
+            return basicResourceClassInfo;
+        }
+
+        public MethodInfo getMethodInfo() {
+            return methodInfo;
+        }
+
+        public ClassInfo getActualEndpointInfo() {
+            return actualEndpointInfo;
+        }
+
+        public ResourceMethod getResourceMethod() {
+            return resourceMethod;
+        }
+
+        public boolean additionalRegisterClassForReflectionCheck() {
+            return indexer.additionalRegisterClassForReflectionCheck(this);
+        }
+    }
+
+    public static class DeclaredTypes {
+        private final String declaredType;
+        private final String declaredUnresolvedType;
+
+        public DeclaredTypes(String declaredType, String declaredUnresolvedType) {
+            this.declaredType = declaredType;
+            this.declaredUnresolvedType = declaredUnresolvedType;
+        }
+
+        public String getDeclaredType() {
+            return declaredType;
+        }
+
+        public String getDeclaredUnresolvedType() {
+            return declaredUnresolvedType;
+        }
+    }
+
+    /**
+     * @return true if return type is compatible to handle multipart types.
+     */
+    public interface MultipartReturnTypeIndexerExtension {
+        boolean handleMultipartForReturnType(AdditionalWriters additionalWriters, ClassInfo multipartClassInfo,
+                IndexView index);
+    }
+
+    /**
+     * @return true if return type is compatible to handle multipart types.
+     */
+    public interface MultipartParameterIndexerExtension {
+        void handleMultipartParameter(ClassInfo multipartClassInfo, IndexView index);
+    }
+
+    private static final class FoundEndpoint {
+        private final ClassInfo classInfo;
+        private final Set<String> classNameBindings;
+        private final MethodInfo methodInfo;
+        private final DotName httpMethod;
+
+        private FoundEndpoint(ClassInfo classInfo, Set<String> classNameBindings, MethodInfo methodInfo, DotName httpMethod) {
+            this.classInfo = classInfo;
+            this.classNameBindings = classNameBindings;
+            this.methodInfo = methodInfo;
+            this.httpMethod = httpMethod;
+        }
+    }
 }
