@@ -6,19 +6,16 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 
-import org.jboss.shrinkwrap.api.ShrinkWrap;
-import org.jboss.shrinkwrap.api.spec.JavaArchive;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 
 import io.fabric8.knative.serving.v1.Service;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.Probe;
-import io.quarkus.bootstrap.model.AppArtifact;
 import io.quarkus.builder.Version;
+import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.test.ProdBuildResults;
 import io.quarkus.test.ProdModeTestResults;
 import io.quarkus.test.QuarkusProdModeTest;
@@ -27,13 +24,11 @@ public class KnativeWithHealthTest {
 
     @RegisterExtension
     static final QuarkusProdModeTest config = new QuarkusProdModeTest()
-            .setArchiveProducer(() -> ShrinkWrap.create(JavaArchive.class).addClasses(GreetingResource.class))
+            .withApplicationRoot((jar) -> jar.addClasses(GreetingResource.class))
             .setApplicationName("knative-health")
             .setApplicationVersion("0.1-SNAPSHOT")
             .withConfigurationResource("knative-with-health.properties")
-            .setForcedDependencies(
-                    Collections.singletonList(
-                            new AppArtifact("io.quarkus", "quarkus-smallrye-health", Version.getVersion())));
+            .setForcedDependencies(List.of(Dependency.of("io.quarkus", "quarkus-smallrye-health", Version.getVersion())));
 
     @ProdBuildResults
     private ProdModeTestResults prodModeTestResults;
@@ -59,11 +54,11 @@ public class KnativeWithHealthTest {
                     assertThat(spec.getTemplate()).satisfies(template -> {
                         assertThat(template.getSpec()).satisfies(templateSpec -> {
                             assertThat(templateSpec.getContainers()).hasSize(1).singleElement().satisfies(c -> {
-                                assertThat(c.getPorts()).hasSize(1).singleElement().satisfies(p -> {
+                                assertThat(c.getPorts()).hasSize(1).anySatisfy(p -> {
                                     assertThat(p.getName()).isEqualTo("http1");
                                 });
                                 assertThat(c.getReadinessProbe()).isNotNull().satisfies(p -> {
-                                    assertThat(p.getInitialDelaySeconds()).isEqualTo(0);
+                                    assertThat(p.getInitialDelaySeconds()).isEqualTo(5);
                                     assertProbePath(p, "/q/health/ready");
 
                                     assertNotNull(p.getHttpGet());
@@ -76,6 +71,7 @@ public class KnativeWithHealthTest {
                                     assertNotNull(p.getHttpGet());
                                     assertNull(p.getHttpGet().getPort());
                                 });
+                                assertThat(c.getStartupProbe()).isNull();
                             });
                         });
                     });
