@@ -2,7 +2,6 @@ package io.quarkus.it.vertx;
 
 import static org.hamcrest.Matchers.containsString;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -23,12 +22,11 @@ public class AccessLogTestCase {
     /**
      * Fires a HTTP request, to an application which has access log enabled and then checks
      * the access-log contents to verify that the request was logged
-     *
-     * @throws Exception
      */
     @Test
-    public void testAccessLogContent() throws Exception {
+    public void testAccessLogContent() {
         final Path logDirectory = Paths.get(".", "target");
+        final Path accessLogFilePath = logDirectory.resolve("quarkus-access-log.log");
         final String queryParamVal = UUID.randomUUID().toString();
         final String targetUri = "/simple/access-log-test-endpoint?foo=" + queryParamVal;
         RestAssured.when().get(targetUri).then().body(containsString("passed"));
@@ -37,15 +35,18 @@ public class AccessLogTestCase {
                 .untilAsserted(new ThrowingRunnable() {
                     @Override
                     public void run() throws Throwable {
-                        final Path accessLogFilePath = logDirectory.resolve("quarkus-access-log.log");
                         Assertions.assertTrue(Files.exists(accessLogFilePath),
                                 "access log file " + accessLogFilePath + " is missing");
-                        String data = new String(Files.readAllBytes(accessLogFilePath), StandardCharsets.UTF_8);
-                        Assertions.assertTrue(data.contains(targetUri),
+                        String line = Files.readString(accessLogFilePath);
+                        Assertions.assertTrue(line.startsWith("127.0.0.1 - - ["),
+                                "access log doesn't contain request IP or does not wrap the date with []: " + line);
+                        Assertions.assertTrue(line.contains("] \"GET"),
+                                "access log doesn't contain the HTTP method or does not wrap the date with []: " + line);
+                        Assertions.assertTrue(line.contains(targetUri),
                                 "access log doesn't contain an entry for " + targetUri);
-                        Assertions.assertTrue(data.contains("?foo=" + queryParamVal),
+                        Assertions.assertTrue(line.contains("?foo=" + queryParamVal),
                                 "access log is missing query params");
-                        Assertions.assertFalse(data.contains("?foo=" + queryParamVal + "?foo=" + queryParamVal),
+                        Assertions.assertFalse(line.contains("?foo=" + queryParamVal + "?foo=" + queryParamVal),
                                 "access log contains duplicated query params");
                     }
                 });
