@@ -5,9 +5,6 @@ import static org.junit.platform.commons.util.AnnotationUtils.findAnnotation;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
@@ -16,12 +13,12 @@ import org.junit.jupiter.api.extension.ConditionEvaluationResult;
 import org.junit.jupiter.api.extension.ExecutionCondition;
 import org.junit.jupiter.api.extension.ExtensionContext;
 
+import io.quarkus.deployment.pkg.steps.GraalVM;
+
 public class DisableIfBuiltWithGraalVMOlderThanCondition implements ExecutionCondition {
 
     private static final String QUARKUS_INTEGRATION_TEST_NAME = QuarkusIntegrationTest.class.getName();
-    private static final String NATIVE_IMAGE_TEST_NAME = NativeImageTest.class.getName();
-    private static final Set<String> SUPPORTED_INTEGRATION_TESTS = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList(QUARKUS_INTEGRATION_TEST_NAME, NATIVE_IMAGE_TEST_NAME)));
+    private static final Set<String> SUPPORTED_INTEGRATION_TESTS = Set.of(QUARKUS_INTEGRATION_TEST_NAME);
 
     @Override
     public ConditionEvaluationResult evaluateExecutionCondition(ExtensionContext context) {
@@ -35,15 +32,15 @@ public class DisableIfBuiltWithGraalVMOlderThanCondition implements ExecutionCon
             return ConditionEvaluationResult.enabled("@DisableIfBuiltWithGraalVMOlderThan was added to an unsupported test");
         }
 
-        DisableIfBuiltWithGraalVMOlderThan.GraalVMVersion annotationValue = optional.get().value();
+        GraalVMVersion annotationValue = optional.get().value();
         Properties quarkusArtifactProperties = readQuarkusArtifactProperties(context);
         try {
-            int major = Integer.parseInt(quarkusArtifactProperties.getProperty("metadata.graalvm.version.major"));
-            int minor = Integer.parseInt(quarkusArtifactProperties.getProperty("metadata.graalvm.version.minor"));
-            int comparison = annotationValue.compareTo(major, minor);
+            GraalVM.Version version = GraalVM.Version
+                    .of(quarkusArtifactProperties.getProperty("metadata.graalvm.version.version").lines());
+            int comparison = annotationValue.getVersion().compareTo(version);
             if (comparison > 0) {
-                return ConditionEvaluationResult.disabled("Native binary was built with GraalVM{major=" + major + ", minor= "
-                        + minor + "} but the test is disabled for GraalVM versions older than " + annotationValue);
+                return ConditionEvaluationResult.disabled("Native binary was built with GraalVM{version=" + version.toString()
+                        + "} but the test is disabled for GraalVM versions older than " + annotationValue);
             }
             return ConditionEvaluationResult
                     .enabled("Native binary was built with a GraalVM version compatible with the required version by the test");
